move from gitbook to mdbook

--- a/01.自传回忆类/李敖自传与回忆.md
+++ b/01.自传回忆类/李敖自传与回忆.md
@@ -1,4 +1,8 @@
-#李敖自传与回忆
+# 李敖自传与回忆
+
+<!-- toc -->
+
+## 目录
 
 * 《李敖自传与回忆》自序
 * 一、李敖自传
@@ -13,9 +17,7 @@
 * 十、蕃薯藤网站候选人小档案——李敖
 * 十一、李敖著作查禁清单及官方理由
 
-
-
-##《李敖自传与回忆》自序
+## 《李敖自传与回忆》自序
 
 这本《李敖自传与回忆》，一共集合了十四篇文章，分别就我一生中的许多阶段，写出每个阶段的历程。
 
@@ -27,9 +29,7 @@
 
 （《李敖大全集》将《李敖自传》单独成一书，并收入《二姐给李敖的回忆》、《敖弟》、《难忘的吉林省立六中李鼎彝校长》三篇文章，作为附录。）
 
-
-
-##李敖自传
+## 李敖自传
 
 和孔夫子一样的“遗民”
 
@@ -553,9 +553,7 @@
 
 1981年狱中作
 
-
-
-##二姐给李敖的回忆（李珣）
+## 二姐给李敖的回忆（李珣）
 
 敖弟：
 
@@ -1013,9 +1011,7 @@
 
 愚二姐1995年3月
 
-
-
-##敖弟（李珣）
+## 敖弟（李珣）
 
 1948年敖弟离开北京的时候，他还是年仅13岁读初中一的小男生，我正念高中三，等到再重逢时已是44年后的事了。即使对长寿达100岁的人来说，掐掉头上没有记忆的五六年，去掉尾上老糊涂的十多年，44年也占了大半生的岁月。若是由我来提几句对敖弟今昔的印象，今就今到近两三年，昔则昔回到他还是孩童的年代，当中跳掉近半个世纪。
 
@@ -1078,9 +1074,7 @@
 
 1995年4月
 
-
-
-##李敖五十年表
+## 李敖五十年表
 
 根据《李氏宗谱》，我的远籍是云南乌撒，据《元史-地理志》：“乌撒者，蛮名也。所辖乌撒、乌蒙等六部。后乌蛮之裔，尽得其地，用取远祖乌撒为部名。至元十一年始附，十三年立乌撒路。”乌撒路包括现在云南镇雄县和贵州威宁县；到了明朝，改为乌撒卫，就是现在的威宁县。《李氏宗谱》上说是明太祖洪武年间迁到山东潍县的。洪武十四年（1381年）秋天明太祖曾派傅友德为征南将军，带兵三十万征云南，大概那次人民的北移，是强迫性的。我的祖先，很可能是苗族。我的祖先到山东后，籍贯一直是山东潍县，自爷爷起迁居东北，爸爸考上了国立北京大学后，因为领吉林省公费，籍贯就改为吉林扶余县。当时只是爸爸一个人改，所以只他一个人是吉林扶余，爷爷和我们仍是山东潍县。这种情形，一直到1949年到了台湾，才被户政机关命令统一，从此我也是吉林扶余了。这件小事，反映了籍贯自由的嬗变。在国民党权力愈来愈大的时候，这点小自由也不给老百姓了。
 
@@ -1206,9 +1200,7 @@
 
 1月15日，回信给潘毓刚，我说：“这么多年来，我的确十足证明给所有的人看，我是一个‘顽劣份子’，一个被国民党永远无法扑杀的‘獠’。对李敖，国民党除了杀李敖关李敖，无法解决问题，可是杀了关了，制造出来的问题会比解决的更多。”信中我谈到国民党在台湾、在中国，它的真正罪孽，是“‘阻塞’了别人前进，造成了冷空气在上空长时间驻留。国民党的最可恶之处，不在它自己的作恶，而在它‘阻塞’别人为善，它总是裹胁广大中国人民为它殉葬，自己去死还不够，还要拉别人一起死，这是最不可原谅的事，广大中国人民为它误尽青春又不能免于偕亡，这真是中国的悲剧。”3月16日，我写《菩萨就只好打倒他》，我又说：“国民党并不是我们的主要敌人，因为他们不配。国民党的罪过是他们怕‘菩萨将成正觉也’，因而‘诱乱不遂，忧惶无赖’；因而出面阻止我们、阻止中国的现代化。他们什么都不是，只是中国现代化过程中的拦路无赖而已。”“我们预见的国民党，是早晚‘魔军怖骸，奔驰退散’的乌合之众，他们的下场终将化为春泥，做为‘莲华’下的肥料。菩萨的遗憾也许只是不得不浪费许多时间去圣魔大战，但这种浪费是在所难免的，没有这种浪费，就没有‘救多数人于永久’的开路条件。国民党既不允许菩萨‘成正觉’，菩萨就只好打倒他，菩萨没有法子。”这些立论，是我身处此岛的基本态度。当然我已五十之年，来日有少无多，圣魔大战的浪费，应当尽量减少，多写世界性、永恒性的作品，自是我今后的主力。
 
-
-
-##不要只摸李敖一条腿
+## 不要只摸李敖一条腿
 
 你以为你知道李敖是谁，你错了。你不知道李敖是谁，就如同瞎子不知道象是谁。瞎子摸象，只摸到一条腿，就以为那是象，其实象是完整的，不只一条腿。
 
@@ -1242,9 +1234,7 @@
 
 （李敖自撰宣传词）
 
-
-
-##“北土非吾愿，东林怀我师”
+## “北土非吾愿，东林怀我师”
 
 ——回想姚从吾老师
 
@@ -2090,9 +2080,7 @@ Ateacheraffectseternity;hecannevertellwherehisinfluencestops.
 
 (12)吴相湘老师从南洋大学回来，颇索寞，我戏劝他去听听歌吧，我可介绍漂亮的歌星给他，由她们叫“叔叔”。
 
-
-
-##诺贝尔文学奖候选人李敖简介
+## 诺贝尔文学奖候选人李敖简介
 
 李敖是世界上最特立独行的理想主义者，他写过一百多本书，可是其中九十六本被查禁，自人类有史以来，写禁书之多，被查禁量之大，他居世界第一。这种连“吉尼斯世界纪录”（GuinnessBookofWorldRecords）都遗漏了的不可思议的纪录，充分看出这个理想主义者的渊博、坚韧与顽强。
 
@@ -2174,9 +2162,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 这就是李敖，中国不可救药的理想主义者。（1999/12/31李敖电子报）
 
-
-
-##中华民国现代名人录——李敖
+## 中华民国现代名人录——李敖
 
 李敖，吉林扶余人，民国二十四年4月25日生于哈尔滨。四十三年考入台湾大学法律专修科（后来改为法律系司法组），四十四年6月自动退学，重新考入台湾大学历史系。四十八年毕业。五十年退伍后，再考入台湾大学历史研究所，五十二年3月自动休学。五十年11月首次在《文星》发表《老年人和棒子》，五十二年9月出版第一本书《传统下的独白》。
 
@@ -2190,9 +2176,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 录自《中华民国现代名人录》（1982）
 
-
-
-##1995中华民国作家作品目录——李敖
+## 1995中华民国作家作品目录——李敖
 
 李敖（1935～）
 
@@ -2284,9 +2268,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 该目录的编例指出，搜集台湾现代文学作家及文学作品资料，并藉此反映台湾现代文学整体成就，所收录作家凡一千八百位，以长期生活在台湾且从事现代文学活动的作家为主。有意思的是，在今年《台湾文学经典书目》事件当中，遭到本土派作家质疑，不曾在台湾居住过的张爱玲，却因在台湾出版著作、在台具有广泛文学创作影响力，名列台湾经典作家是否适当？观看新出炉名单，她的名字，果然不再包括在一千八百人之内。（1999/12/07中国时报）
 
-
-
-##蕃薯藤网站候选人小档案——李敖
+## 蕃薯藤网站候选人小档案——李敖
 
 姓名：李敖
 
@@ -2362,9 +2344,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 （2000/1/18李敖电子报）
 
-
-
-##李敖著作查禁清单及官方理由
+## 李敖著作查禁清单及官方理由
 
 1965-1967
 
@@ -2771,6 +2751,3 @@ WhilethereisasoulinprisonIamnotfree.
 《孙中山研究》：“李敖出版社”发行之《孙中山研究》一书（24开本，计312页，1987年9月10日初版），封面以醒目之标题“孙中山卖国”置于国父遗像之上，违反出版法规定应予行政处分，禁止出售及散布并扣押其出版品。违反出版法第32条第2款，依出版法第39条第1项第3款规定予以处分。
 
 本文录自蔡汉勋编著《文化顽童——李敖》一书
-
-
-
