--- a/02.精品散文类/传统下的独白.md
+++ b/02.精品散文类/传统下的独白.md
@@ -1,4 +1,8 @@
-#《传统下的独白》目录
+# 《传统下的独白》目录
+
+<!-- toc -->
+
+## 目录
 
 * 《传统下的独白》自序
 * 《传统下的独白》再版自序
@@ -23,9 +27,7 @@
 * 十九、张天师可以歇歇了！
 * 二十、十三年和十三月
 
-
-
-##《传统下的独白》自序
+## 《传统下的独白》自序
 
 三四年来，我写了不少杂文。其中的一部分我收在一块儿，就是这本《传统下的独白》。
 
@@ -43,9 +45,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 16世纪的唐顺之（应德），在他的《与茅鹿门论文书》里，说明为文的道理极其痛快，他主张“文章本色”，要“直抒胸臆，信手写出，如写家书，虽或疏卤，然绝无烟火酸馅习气，便是宇宙间一样绝好文字”。这四百年前的老话，岂不值得今天的“能文之士”想一想吗？
 
-
-
-##《传统下的独白》再版自序
+## 《传统下的独白》再版自序
 
 这本《传统下的独白》是9月25号出版的。出版后两个星期，就居然有一次再版的机会，这是很令自己开心的事。
 
@@ -59,9 +59,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 1963年10月10日
 
-
-
-##独身者的独白
+## 独身者的独白
 
 毕业那天晚上我真的喝醉了，我不能不醉！醉眼是模糊的、深沉的，我看到一张张熟悉的脸儿在我眼前消失掉。毕业带给人们的是“东飞伯劳西飞燕”，可是我呢？却像一只斗败了的公鸡，有翅膀，可是飞不起来，不但飞不起来，还得在地上爬！
 
@@ -95,9 +93,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 《联合报》副刊1961年3月12日
 
-
-
-##爱情的刽子手
+## 爱情的刽子手
 
 他有点像徐志摩：他潇洒，他有才华，他风度翩翩，他短命。
 
@@ -152,9 +148,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 《联合报》副刊1961年4月17日
 
-
-
-##一封神气的情书
+## 一封神气的情书
 
 亲爱的××：
 
@@ -206,9 +200,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 1961年5月24日
 
-
-
-##假如我是女人
+## 假如我是女人
 
 凡是吃过女孩子苦头的大丈夫，都会有三个沉痛的希望：第一个希望是再也不做感情专一的好人；第二个希望是改做“剑侠唐璜”式的男人；第三个希望是拜托阎王老爷——下辈子托生做女人。
 
@@ -270,9 +262,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 〔后记〕郑清茂先生送了他翻译的日本女作家原田康子的《挽歌》和《轮唱》给我。我借用这两本小说的书名，套在这篇幻想的文章里，做pun来用。这篇文章初稿在1961年7月7日，后来两度修改，最后发表在《文星》六十八号（1961年6月1日台北出版）。发表后被女读者大骂，又被胡秋原引来到法院控告，说我诽谤了他。（1963年8月16日）
 
-
-
-##张飞的眼睛
+## 张飞的眼睛
 
 我们都不叫他的真名，我们都叫他“情棍”。
 
@@ -362,9 +352,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 他说着，一直这样说着，像顺流而下的新店溪水，在渐暗的落日底下，他的影子慢慢高大起来，他真是一个不可捉摸的人，我们捉摸到的，也许只是他的影子。人人知道他是“情棍”，女孩子们好奇地跟他交往，可是她们不了解他，她们喜欢他的殷勤与技巧，却讨厌他那永不流泪的眼睛。在爱情上面，他充满了童稚的真纯与快乐，有女孩子跟他同走一段路，他兴奋、他高兴；女孩子走了，他也不难过、不悲伤，他会望着双双对对的背影微笑，为了“倒霉的不是我”！他微笑，为了他已走上洒脱浩瀚的航路；他微笑，为了别人并不了解恋爱与真情；他微笑，为了他竟看到睁着眼睛的张飞和他那老是睁着的眼睛。
 
-
-
-##中国小姐论
+## 中国小姐论
 
 论到吸收洋鬼子的文明，日本鬼子真有他们一套。他们对西方文明，一直有什么就学什么，学什么就像什么，明治天皇学会了西方的船坚炮利，斋藤秀三郎学通了英文的文法，原田康子也学到了法国的微笑与晨愁。
 
@@ -390,9 +378,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 《人间世》1961年6月
 
-
-
-##由一丝不挂说起
+## 由一丝不挂说起
 
 这个月最轰动世界的一件大事，不是苏联两颗人造卫星在天上跑，不是警察在松山机场表演揍人，而是性感明星玛丽莲梦露（MarilynMonroe）的自杀。
 
@@ -538,9 +524,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 (14)在这篇文章里，我并没有兴趣提倡“裸体主义”（nudism），我只是指出肉体暴露一件事并不是什么不得了的事，更不必用礼教的眼睛来大惊小怪。一个钢琴家，可以表现他的指法；一个运动家，可以表现他的体魄；一个美人，为什么不能表现她的肉体？肉体本身并不是什么神秘或肮脏的东西，它在勃朗宁的诗中是“愉快”（pleasant）的象征，是可以给灵魂做“玫瑰网眼”（rose-mesh）的，一个以“精神文明”自豪的民族，岂可以随便遮盖它吗？
 
-
-
-##不讨老婆之“不亦快哉”（三十三则）
+## 不讨老婆之“不亦快哉”（三十三则）
 
 昔金圣叹有“不亦快哉”三十三则，顾而乐之，乃作“不讨老婆之不亦快哉”三十三则，以蔚今古奇观。
 
@@ -668,9 +652,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 （《新生报》副刊1963年12月30日）
 
-
-
-##妈妈的梦幻
+## 妈妈的梦幻
 
 妈妈从小有一个梦幻，就是当她长大结婚以后，她要做一家之主，每个人都要服从她。
 
@@ -730,9 +712,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 （1960年11月20日马宏祥来信）
 
-
-
-##妈妈-弟弟-电影
+## 妈妈-弟弟-电影
 
 如果我说我喜欢弟弟，那我真对不起自己的良心，这段原因说来话长，可是又不能不说。
 
@@ -784,9 +764,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 以上全文及后记原登《文星》第五十六号，1962年6月1日台北出版。发表后，6月25日任卓宜发行的《政治评论》第八卷第八期上，有一篇所谓《为白话文问题代郑学稼辨诬》，其中指出：“李敖对叶（青）、郑（学稼）之文无能答辩，只得‘蝉曳残声到别枝’去写《纪翠绫该生在什么时候？》和他的《妈妈-弟弟-电影》了。”同月，在张铁君发行的《学宗》第三卷第二期上，有一篇《此次文化问题论战之总述评》，其中也诬指：“被胡适全心全力支持的西化太保也‘蝉曳残声到别枝’去考证《纪翠绫该生在什么时候？》谈他《妈妈-弟弟-电影》了。”到了10月3日，胡秋原在记者招待会上宣布控告我，其中也谈到：“后来听说这小诽谤者写《妈妈我服了》，又自称‘文化大保’谈梅毒去了。”上面这些文字，都是我这篇《妈妈-弟弟-电影》发表后的小插曲。在另一方面，我的“妈妈”在6月14日来信说：“读了你的大作，我们有同样的感觉——‘体无完肤’，幸而那段《后记》，使我们稍慰于心。”我另外在公共汽车站旁边，还听到三位女孩子在吱吱喳喳地谈论这篇“妙文章”。我拉杂追记这些小事在此，小事在此，聊志墨缘。（1963年5月22日）
 
-
-
-##长袍心理学
+## 长袍心理学
 
 穿长袍，何凡先生是理论家，我才是实行家。
 
@@ -828,9 +806,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 1962年3月13日改一年前旧作，11月27日再改
 
-
-
-##红玫瑰
+## 红玫瑰
 
 那一年夏天到来的时候，玫园的花全开放了。
 
@@ -912,9 +888,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 1960年7月19夜改稿，“慰情聊胜无”是改写陶渊明的诗句
 
-
-
-##旧天子与新皇帝
+## 旧天子与新皇帝
 
 ——元末明初的断片
 
@@ -1070,9 +1044,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 〔后记〕这是我写历史小说的一个尝试。我本想把中国历史里的一些事件做点“切片”的工作，用史书做基料，用短篇小说的方法表达出来。这个计划始终因为忙别的事未能实现，只写成这么一篇。（1962年11月27日）
 
-
-
-##无为先生传
+## 无为先生传
 
 ——以“无”字为典
 
@@ -1114,9 +1086,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 1961年4月2日夜一口气写完
 
-
-
-##充员官
+## 充员官
 
 在部队里，士兵可分为两类：一类是大陆来台的资深战士；一类是补充的新兵——“充员”。而军官呢，也可分为两类：一类是常备军官；一类就是我们预备军官——绰号“充员官”。
 
@@ -1156,9 +1126,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 现在依原稿稍做改订，1963年10月8日
 
-
-
-##修改《医师法》与废止中医
+## 修改《医师法》与废止中医
 
 堂堂“中华民国”的《医师法》，是一部要不得的《医师法》！
 
@@ -1426,9 +1394,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 我这篇《修改<医师法>与废止中医》原登在《文星》第六十一号（1962年11月1日台北出版），同期有吴基福先生的《透视台湾界的“大杂院”——兼谈修改医师法问题》。（1963年9月12日）
 
-
-
-##几条荒谬的法律
+## 几条荒谬的法律
 
 去年10月1号，我在《传记文学》和《文星》杂志上同时发表了两篇现代史的文章，一篇是批评徐道邻先生的；一篇是批评胡秋原先生的，我批评他们的重点是说他们曲解现代史，并改写亲人或本人的历史。我写这种文章只不过是在维护一个学历史的人起码的求真态度，也无异在从事一个以研究现代史为职务的人的职务报告。我这样做，压根儿就没想到有什么“诽谤罪”会掉到头上来，因为在我们的刑法第三百一十条中明明规定着“以善意发表言论”，“对于可受公评之事，而为适当之评论者”是“不罚”的。
 
@@ -1504,9 +1470,7 @@ A（行为不捡）十B（言论不经）＝C（大逆不道）
 
 《文星》第六十五期1963年3月1日
 
-
-
-##老年人和棒子
+## 老年人和棒子
 
 ……谁道人生难再少？
 
@@ -1688,9 +1652,7 @@ UltimaPrimiscedebant.（他的晚年不及他的早年。）
 
 这两段日记，如今回看起来，多少使自己有点沧桑之感。因为自从这篇文章发表后，接二连三的有了许多“文字缘”和“文祸”。在《文星》《文坛》《新闻天地》《自由青年》《民主评论》《自立晚报》上面，都有文字讨论到和这篇《老年人和棒子》有关的问题。今年3月间，政治大学的学生，为了《政大侨生》革新号二期的“青年人与棒子”的征文，甚至还和训导处闹出不愉快；这真是一场“棒子战”了！（1963年9月12日）
 
-
-
-##张天师可以歇歇了！
+## 张天师可以歇歇了！
 
 6月14号的台北《征信新闻》上，有这么一条消息：
 
@@ -1782,9 +1744,7 @@ UltimaPrimiscedebant.（他的晚年不及他的早年。）
 
 张真人于〔清仁宗〕嘉庆十年（1805）入觐。时值亢旱，命之求雨，不验，镌级。先是上意革除道教，因每岁端阳，大内各宫殿正梁，均有黄绮朱符，乃真人遣神将所悬；其尤异者五月初一子正，各殿皆悬符，不知其从何而来，至初五日亥正，则俱杳矣！有此灵迹，遂贬而不革。——祷雨不应，盖不敢违天也！
 
-
-
-##十三年和十三月
+## 十三年和十三月
 
 一个小孩子，在十三年来慢慢长大，在十二个月里快速的投射他的力量，使台湾文化界有一点小小的波澜——这是我二十六年来所收割的一个“奇遇”。一些朋友对我这个“奇遇”感到兴趣，我也愿意在目前这种流言满天下的时候做一次自剖，好教人知道一个十四岁的小孩子如何在台湾受教育、如何在制式教育底下做了叛徒、如何在苦闷里奋斗挣扎、如何向他的读者们呈露他自己的真面目。这是一个自传性的故事，我最好从十三年前开始。
 
@@ -1923,6 +1883,3 @@ UltimaPrimiscedebant.（他的晚年不及他的早年。）
 像一个卖药游方的孤客，我走到这社会里来，十字街头是那样晦暗，我打开背囊，当众吞下了不少苦药。观众们说：“恐怕药太苦了！”我说：“怕什么呢？我吃给你看。我还有一杯毒酒！”
 
 1962年12月17日
-
-
-
