--- a/02.精品散文类/李敖文存.md
+++ b/02.精品散文类/李敖文存.md
@@ -1,28 +1,30 @@
-#《李敖文存》目录
+# 《李敖文存》目录
 
-* 一、看谁文章写得好？（代序）
-* 二、“李敖特写”破题
-* 三、大慈大悲李敖菩萨
-* 四、“我中华尚有人耶？”
-* 五、由不自由的自由到自由的不自由
-* 六、当年老子如何如何
-* 七、纠正于右任幻想出来的一段革命史
-* 八、床上功夫
-* 九、论和尚吃肉
-* 十、写在居浩然《义和团思想和文化沙文主义》的后面
-* 十一、黄帝子孙的黄金观
-* 十二、中华大赌特赌史
-* 十三、且从青史看青楼
-* 十四、古书新见
-* 十五、这样笨，还要做强盗！
-* 十六、《左舜生选集》序
-* 十七、绝子如不见
-* 十八、伤心之地的文学
-* 十九、为他有那样的敌人而爱他
+<!-- toc -->
 
+## 目录
 
+- 一、看谁文章写得好？（代序）
+- 二、“李敖特写”破题
+- 三、大慈大悲李敖菩萨
+- 四、“我中华尚有人耶？”
+- 五、由不自由的自由到自由的不自由
+- 六、当年老子如何如何
+- 七、纠正于右任幻想出来的一段革命史
+- 八、床上功夫
+- 九、论和尚吃肉
+- 十、写在居浩然《义和团思想和文化沙文主义》的后面
+- 十一、黄帝子孙的黄金观
+- 十二、中华大赌特赌史
+- 十三、且从青史看青楼
+- 十四、古书新见
+- 十五、这样笨，还要做强盗！
+- 十六、《左舜生选集》序
+- 十七、绝子如不见
+- 十八、伤心之地的文学
+- 十九、为他有那样的敌人而爱他
 
-##看谁文章写得好？（代序）
+## 看谁文章写得好？（代序）
 
 十八年前我独居新店山脚，常在阴霾漫天的夜里，泛舟碧潭。那时候，整个碧潭是我的，碧潭的山水，一人夜游才勉强可看。一到白天晴天，人山人海一来，自然的风景，就一一都给杀掉，我就躲在每月租金二百元的小房里，改作文维生。
 
@@ -50,7 +52,7 @@
 
 辞赋表达法带给中国文章大分裂，就是白话和文言的大分裂。这种分裂，到魏晋南北朝转为“骈文”，骈文是纯粹的中国字一字一形一音一义的大排队，中国人这时候，一写文章就要对对子，写满篇文章就是写满篇春联，做作极了。因为太做作，从隋唐到北宋，文章转为“古文”，古文一方面说复古，一方面也创新，虽然南宋以后，有“语体”出现，开始把白话和文言合流，但以文章正宗论，还是古文的天下。于是，从韩愈到曾国藩，中国的能文之士都是古文家，古文就是我们一般指的文言文。
 
-文言文的大缺点是它不能作为好的表达的工具，它跟白话分裂，写出来，是活人说死话，说得再好也是“古文辞类纂”。到了19、20世纪，有人开始突破，最成功的是梁启超，梁启超说他文章“解放，务为平易畅达，时杂以俚语、韵语及外国语法；纵笔所至不检束。……老辈则痛恨，诋为野狐”。
+文言文的大缺点是它不能作为好的表达的工具，它跟白话分裂，写出来，是活人说死话，说得再好也是“古文辞类纂”。到了 19、20 世纪，有人开始突破，最成功的是梁启超，梁启超说他文章“解放，务为平易畅达，时杂以俚语、韵语及外国语法；纵笔所至不检束。……老辈则痛恨，诋为野狐”。
 
 梁启超虽被老辈痛恨，诋为野狐，但他在中国文章史上，和司马迁、韩愈等一样，是十足划时代的人物。梁启超风靡文坛一二十年，最后由胡适等的白话文代领风骚，中国文章，自此正宗白话化。
 
@@ -62,25 +64,21 @@
 
 为了给这种中国功夫最新举证，我特别印了两本书——《李敖文存》和《李敖文存二集》，交给“四季”出版、“忠佑”发行，我希望小毛头人手一册，大力见习。说不定有一天，突然出了怪胎变种，把我推翻，那时候，自然我要让贤。把五百年打个折扣。
 
-1979年8月14日
+1979 年 8 月 14 日
 
-《中国时报》1979年9月5日
+《中国时报》1979 年 9 月 5 日
 
-
-
-##“李敖特写”破题
+## “李敖特写”破题
 
 “李敖特写”别名“放下屠刀”，就好像高信疆别名高上秦一样。上秦为专栏起了这么含义深远的名字，他的眼光、他的慈悲、他的期许、他的心惊胆战，都表露无遗。
 
 我希望我真的“放下屠刀”，我希望我的敌人都是我的朋友，免得我另开“西化屠宰场”，我希望我的朋友崇拜我、追随我，享受“过屠门而大嚼”的乐趣，不要动摇、不要七嘴八舌。
 
-1979年6月10日
+1979 年 6 月 10 日
 
-《中国时报》1979年6月12日
+《中国时报》1979 年 6 月 12 日
 
-
-
-##大慈大悲李敖菩萨
+## 大慈大悲李敖菩萨
 
 有的人虽然活着，其实被视同已死；有的人虽然死了，其实还整天活着；有的人求生不得求死不能，其实不死不活。
 
@@ -162,13 +160,11 @@
 
 善男信女们一定要骂：“你李敖怎么可以这样不谦虚，居然做起菩萨来？”李敖菩萨拈花微笑，答复如下：“本菩萨已经很谦虚了。照佛门规矩，菩萨是阿弥陀佛的候补者，放下屠刀，连杀猪的都立地成佛，如今我只做菩萨不成佛，难道还不谦虚吗？”
 
-1979年6月7日
+1979 年 6 月 7 日
 
-《中国时报》1979年6月12日
+《中国时报》1979 年 6 月 12 日
 
-
-
-##“我中华尚有人耶？”
+## “我中华尚有人耶？”
 
 中国人有两个姓李的，对洋鬼子架子最大。一个是李鸿章，一个是李敖。洋鬼子不喜欢人家问他私事，李鸿章偏要问；洋鬼子不喜欢随地吐痰，李鸿章偏要吐；洋鬼子送他一条爱犬，李鸿章却叫厨子给杀吃了，第二天旁若无狗的告诉洋人：“你的狗肉不好吃！”
 
@@ -180,7 +176,7 @@
 
 李敖这种对洋鬼子的大架子，实际得自中国帝王文化的心传。
 
-16世纪，洋鬼子传教士意大利人利玛窦到中国，他对中国的西化，有过石破天惊的贡献。他带来很多礼物，其中最教中国人吃不消的是他跑来送“钟”。一送之下，明朝神宗皇帝喜欢得不得了，整天看呵看。到了第八天，钟停了，皇上大怒，问左右怎么回事，左右吓得径奔利玛窦喊救命。洋人一看，心中窃笑，顺手上了大发条，钟立刻滴答起步，于是这场虚惊，顿告平定。左右抱着钟，回皇上的话，皇上大为高兴，把钟藏起来。不料皇上的妈妈听到了，跑来要钟，皇上不敢不给，不给就是不孝，只好硬着头皮给了妈妈。可是皇上下令不许透露上发条的事，到了第八天，钟在皇太后面前停了，皇太后摇了半天，还不走，皇太后一气，把钟退还给皇上：“你这个不孝的东西！竟把只能用八天的东西给老娘！”
+16 世纪，洋鬼子传教士意大利人利玛窦到中国，他对中国的西化，有过石破天惊的贡献。他带来很多礼物，其中最教中国人吃不消的是他跑来送“钟”。一送之下，明朝神宗皇帝喜欢得不得了，整天看呵看。到了第八天，钟停了，皇上大怒，问左右怎么回事，左右吓得径奔利玛窦喊救命。洋人一看，心中窃笑，顺手上了大发条，钟立刻滴答起步，于是这场虚惊，顿告平定。左右抱着钟，回皇上的话，皇上大为高兴，把钟藏起来。不料皇上的妈妈听到了，跑来要钟，皇上不敢不给，不给就是不孝，只好硬着头皮给了妈妈。可是皇上下令不许透露上发条的事，到了第八天，钟在皇太后面前停了，皇太后摇了半天，还不走，皇太后一气，把钟退还给皇上：“你这个不孝的东西！竟把只能用八天的东西给老娘！”
 
 左右怕钟再生个三长两短，自己也要三长两短，于是建议留住利玛窦，皇上同意了，特别赏了钱，送了房子。利玛窦乘机要求见皇上，这可不行！皇上怎么可以让你们洋鬼子看到！这成何体统！利玛窦说不见皇上可以，可是希望准盖教堂、传教。这个可以，于是，中国就有了天主教。
 
@@ -192,19 +188,17 @@
 
 所以，比照中国皇帝的觐见标准，我李敖过去洋鬼盈门，虽然我不断施出李敖模式，总觉得愧对祖宗。何况，我还有一次失手的时候。那次失手，起自洋鬼子包德甫。
 
-包德甫全名FoxButterfield，台湾报上常把他译成巴特斐，按照“名从主人”的规矩，是不对的。包德甫是纽约时报分社社长，曾任“李敖死党”多年，也就是说，成了“国际奸人”多年。十年前他移交奸人职务给纽约时报兼时代生活杂志特派员沙荡（DonaldH.Shapiro），两个小子突然挟持我，硬是合照了一张相。我大惊失色，感慨的说：“糟糕！这回可被‘美帝’包围了！竟然被他们摆上一道，照起相来，我中华尚有人耶？”
+包德甫全名 FoxButterfield，台湾报上常把他译成巴特斐，按照“名从主人”的规矩，是不对的。包德甫是纽约时报分社社长，曾任“李敖死党”多年，也就是说，成了“国际奸人”多年。十年前他移交奸人职务给纽约时报兼时代生活杂志特派员沙荡（DonaldH.Shapiro），两个小子突然挟持我，硬是合照了一张相。我大惊失色，感慨的说：“糟糕！这回可被‘美帝’包围了！竟然被他们摆上一道，照起相来，我中华尚有人耶？”
 
 两年半前，我万劫归来，包德甫立刻乘机乘机，从海外来台，可是他敲不开我家的大门，我拒绝见他和任何朋友，只好敖兄来访未晤怅甚而去。
 
 ……（编者略）
 
-1979年6月11日
+1979 年 6 月 11 日
 
-《中国时报》1979年6月18日
+《中国时报》1979 年 6 月 18 日
 
-
-
-##由不自由的自由到自由的不自由
+## 由不自由的自由到自由的不自由
 
 二十年前，在台大文学院印度近代史的课堂上，一位风度翩翩的年轻老师，要学生缴出笔记，给他看看。全班都缴了笔记，可是一个学生却缴不出来。老师问他：“你怎么没有笔记？”这个学生说：“笔记是中学生抄的，大学生不抄笔记。”
 
@@ -218,19 +212,19 @@
 
 吴俊才先生学者、专家，尤精于印度史，受了他的启迪，我对印度史也小有研究。我由“大作家”变成“大坐牢家”的时候，看书无算。其中一部大书，就是看了又看的吴老师名著——《甘地与现代印度》。这部大书功力极深，有志之士，人人该看，只可惜交由一家不太会搞宣传的书局出版，并没有引起应有的注意。
 
-因为我在牢里读这部书，最引起我注意的，是甘地的监狱生活。据我统计，甘地共坐了2338天的牢，他失掉身体自由的时间，从广义说，比我要短。但他是先进，先进的坐牢哲学，闲来无事，倒也不妨研究研究。
+因为我在牢里读这部书，最引起我注意的，是甘地的监狱生活。据我统计，甘地共坐了 2338 天的牢，他失掉身体自由的时间，从广义说，比我要短。但他是先进，先进的坐牢哲学，闲来无事，倒也不妨研究研究。
 
 不料一研究之下，使我得到了新境界。
 
 甘地有着伟大的精神力量，爱因斯坦说：“后代子孙很难相信这世界上曾经走过这样一位血肉之躯”。（Generationstocomewillscarcebelivethatsuchaoneasthiseverinfleshandbloodwalkeduponthisearth.）这是对甘地最高明的描绘。甘地思想的精华是他的“不合作主义”（satyagraha），不合作主义的形成，部份来自《湖滨散记》的作者梭罗。梭罗坐牢的时候，他说他“从不曾想到我是给关起来了，高墙实在等于浪费材料。……他们根本不知道如何对付我。……他们总以为我唯一目的是想站到墙外面。每在我沉思的时候，看守那种紧张样子，真叫人好笑。他们哪里知道才一转身，我就毫无阻挡的跟著出去了。……”
 
-梭罗当然不会小说中穿墙透壁的功夫，他这种来去自如，是指观念上的解脱，观念上“从不曾想到我是给关起来了”。他虽然身在两坪（1坪=3.14平方米）之内，但却心在六合之外，神游四海，志驰八方，就像拉夫瑞斯（RichardLovelace）在牢里写诗给情人一样。
+梭罗当然不会小说中穿墙透壁的功夫，他这种来去自如，是指观念上的解脱，观念上“从不曾想到我是给关起来了”。他虽然身在两坪（1 坪=3.14 平方米）之内，但却心在六合之外，神游四海，志驰八方，就像拉夫瑞斯（RichardLovelace）在牢里写诗给情人一样。
 
 甘地师承了梭罗的不合作主义，也师承了梭罗的坐牢哲学。甘地说志士仁人：
 
-在狱中，他所受到的苦，实比平日受的苦要少得多；在狱中，他也只需要听狱吏一人的命令，而不像平日要受许多人的支配；在那里，他更不必担心一日三餐，也用不着自己烧饭，政府会照顾一切，如果有病，更可免费治疗；在那里，他有足够的操作，借以锻炼体格，许多坏的习惯也可以改过。他的灵魂是自由的。他可有充分的时间祈祷。肉体虽被拘禁，灵魂并未桎梏。反而他的日常生活也可以训练成更有规律，因为自有人来督促。这样来体验狱中生活，他会感觉自己是自由的。假如有任何不幸遭遇或被狱囚虐待，那他正可学习坚忍，让他得到一个乐于自制的机会。持这种看法的人，当然会将入狱的事看为幸运。因此问题的关键，还在一个人自己和他所持的心理状态，来决定是否入狱乃系幸运。（《甘地与现代印度》上册第91页）
+在狱中，他所受到的苦，实比平日受的苦要少得多；在狱中，他也只需要听狱吏一人的命令，而不像平日要受许多人的支配；在那里，他更不必担心一日三餐，也用不着自己烧饭，政府会照顾一切，如果有病，更可免费治疗；在那里，他有足够的操作，借以锻炼体格，许多坏的习惯也可以改过。他的灵魂是自由的。他可有充分的时间祈祷。肉体虽被拘禁，灵魂并未桎梏。反而他的日常生活也可以训练成更有规律，因为自有人来督促。这样来体验狱中生活，他会感觉自己是自由的。假如有任何不幸遭遇或被狱囚虐待，那他正可学习坚忍，让他得到一个乐于自制的机会。持这种看法的人，当然会将入狱的事看为幸运。因此问题的关键，还在一个人自己和他所持的心理状态，来决定是否入狱乃系幸运。（《甘地与现代印度》上册第 91 页）
 
-这段话的关键是强烈的唯心论，它告诉人们，所谓的自由与不自由，“问题的关键，还在一个人自己和他所持的心理状态”，你心里觉得自由，自由就在；你心里觉得不自由，桎梏就在。甘地本人前后入狱五次，他这种观念，也一再宣示，例如他说：“我现在成了自由的人了，我的身体已被他们看管。一天诺拉迭法案没有撤销，我一天不得自由，可是现在他们逮捕了我，却给了我自由。现在轮到该是你们采取行动的时候。”（同上。页264）他又说：“……朋友们不需要惦挂著我。我觉得自己像一只快乐的小鸟，在这儿所能做的并不比外间少。我留居在此，对我有如入校。”（同上。中册页143-144）……甘地这些坐牢哲学，基础都在他的伟大的精神力量，有这种力量的人，他会感到“逮捕了我，却给了我自由。”这种自由，我把它叫做“不自由的自由”。这种自由的炉火纯青，就“觉得自己像一只快乐的小鸟”，若不到火候，就只像骆宾王那样“在狱咏蝉”了，——鸟在外面的人，是不会快乐的。
+这段话的关键是强烈的唯心论，它告诉人们，所谓的自由与不自由，“问题的关键，还在一个人自己和他所持的心理状态”，你心里觉得自由，自由就在；你心里觉得不自由，桎梏就在。甘地本人前后入狱五次，他这种观念，也一再宣示，例如他说：“我现在成了自由的人了，我的身体已被他们看管。一天诺拉迭法案没有撤销，我一天不得自由，可是现在他们逮捕了我，却给了我自由。现在轮到该是你们采取行动的时候。”（同上。页 264）他又说：“……朋友们不需要惦挂著我。我觉得自己像一只快乐的小鸟，在这儿所能做的并不比外间少。我留居在此，对我有如入校。”（同上。中册页 143-144）……甘地这些坐牢哲学，基础都在他的伟大的精神力量，有这种力量的人，他会感到“逮捕了我，却给了我自由。”这种自由，我把它叫做“不自由的自由”。这种自由的炉火纯青，就“觉得自己像一只快乐的小鸟”，若不到火候，就只像骆宾王那样“在狱咏蝉”了，——鸟在外面的人，是不会快乐的。
 
 不自由中有自由，这么说来，是不是自由以后、出狱以后，就更自由了，从此没有不自由了呢？
 
@@ -240,7 +234,7 @@
 
 “自由的不自由”的特色是民胞物与，是把受苦受难的人当兄弟，又使自己有责任感。夏禹感觉天下有淹在水里的人，就好像自己把他们淹在水里一样；后稷感觉天下有没饭吃的人，就好像自己使他们挨饿一样，有这种抱负的人，后天下之乐而乐，众生不成佛的时候，他自己不要成佛。《新约》哥林多后书第十一章里，为这种心境做了动人的总结：“有谁软弱，我不软弱呢？有谁跌倒，我不焦急呢？”有这种心境的人，他自己坚强，却感受兄弟的软弱；他自己站起，却焦急兄弟的跌倒；他自己自由，却念念不忘兄弟的不自由。
 
-六十年前，开火车出身的美国劳工领袖戴布兹（EugeneVictorDebs），因参与政治反抗，被判十年，关在牢里。由于他极富人望，虽在牢里，却得到美国大选中，一百万选民对他戏剧性投票。1921年，哈定总统特赦了他。出狱后，人们庆幸他重获自由，他却从斯宾塞的句子里，说出了这样的千古名言：
+六十年前，开火车出身的美国劳工领袖戴布兹（EugeneVictorDebs），因参与政治反抗，被判十年，关在牢里。由于他极富人望，虽在牢里，却得到美国大选中，一百万选民对他戏剧性投票。1921 年，哈定总统特赦了他。出狱后，人们庆幸他重获自由，他却从斯宾塞的句子里，说出了这样的千古名言：
 
 WhilethereisalowerclassIaminit.
 
@@ -256,13 +250,11 @@ WhilethereisasoulinprisonIamnotfree.
 
 真的，“我就不自由”。夏禹不自由、后稷不自由、斯宾塞不自由、戴布兹不自由。——所有伟大的性灵里，念天地悠悠，都有“自由的不自由”。
 
-1979年6月12日
+1979 年 6 月 12 日
 
-《中国时报》1979年6月27日
+《中国时报》1979 年 6 月 27 日
 
-
-
-##当年老子如何如何
+## 当年老子如何如何
 
 “六月六日断肠时”，《中国时报》第三版开辟了“名人追踪”专栏，第一篇就是王健壮、金惟纯两位小老弟对李敖的专访。专访前面有编者按语，说尽管时光使人类健忘，“但是有一些人与事，不论你是多么的健忘，却始终在脑海里挥之不去……时间久了，他们安在？他们在做什么？他们想些什么？”小老弟们要追踪这个答案。
 
@@ -270,7 +262,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 没人愿做过气老倌，人宁愿不做名人，也不要过气，聪明的小老弟们一眼就看到这点，所以，从第三篇专访里，就把“名人追踪”改成“人物追踪”，减少一点对名人的刺激。
 
-14号的报上，访问的是廖文毅，由朱泓霖执笔。当记者问到“六十六年（1977）黄蔴竞选云林县长败北那一段”，廖文毅“不假思索就脱口而出：‘我认识黄蔴，他和廖祯祥的选战的确相当激烈。’”朱泓霖听了，有这样的感慨：“其实，黄蔴的对手是林恒生，而非廖祯祥，如果廖博士对政治真有一股狂热，又何至于把黄蔴的对手张冠李戴？”
+14 号的报上，访问的是廖文毅，由朱泓霖执笔。当记者问到“六十六年（1977）黄蔴竞选云林县长败北那一段”，廖文毅“不假思索就脱口而出：‘我认识黄蔴，他和廖祯祥的选战的确相当激烈。’”朱泓霖听了，有这样的感慨：“其实，黄蔴的对手是林恒生，而非廖祯祥，如果廖博士对政治真有一股狂热，又何至于把黄蔴的对手张冠李戴？”
 
 如果廖文毅的答话不是口误，倒引起我另一种想法，就是，上了年纪的人，当他回想过去的历史，竟然“张冠李戴”，到底是不是一个纯粹记忆上的问题？
 
@@ -308,13 +300,11 @@ WhilethereisasoulinprisonIamnotfree.
 
 笔下龙蛇飞舞，可惜不是真的。事实上，成灰的，是青春不是青史，青史有李敖在，是可以唤回的。所以，读者老爷不妨注意：“宝宝看书书”的时候，只要看李敖的大作，便不会上当。至于别的——唉，不看也罢！
 
-1979年6月17日
+1979 年 6 月 17 日
 
-《中国时报》1979年7月2日
+《中国时报》1979 年 7 月 2 日
 
-
-
-##纠正于右任幻想出来的一段革命史
+## 纠正于右任幻想出来的一段革命史
 
 于右任看了中国同盟会中部总会的原始文件，很感奇怪，因为他发现成立大会的签名单中，竟没有他的名字。——他不是“开国元勋”吗？怎么这样一个重要的会议，居然没有他的名字呢？
 
@@ -328,7 +318,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 于右任组复旦公学。在上海。
 
-是年七月二十日（公历8月20日）中国同盟会成立于东京。（冯自由《革命逸史》第二集296页中有“陕西有康宝忠、邹子良、曹兩亭、赵世钰、于右任诸人”，他记错了！）
+是年七月二十日（公历 8 月 20 日）中国同盟会成立于东京。（冯自由《革命逸史》第二集 296 页中有“陕西有康宝忠、邹子良、曹兩亭、赵世钰、于右任诸人”，他记错了！）
 
 1906（光绪三十二年）丙午
 
@@ -336,27 +326,27 @@ WhilethereisasoulinprisonIamnotfree.
 
 1907（光绪三十三年）丁未
 
-二月二十日（4月2日，罗家伦《国父年谱初稿》上册177页误为农历二月二十二日）《神州日报》创刊（未及一年，被邻居火灾殃及，于右任辞去社长。《神州日报》直到民国五年才停刊）。
+二月二十日（4 月 2 日，罗家伦《国父年谱初稿》上册 177 页误为农历二月二十二日）《神州日报》创刊（未及一年，被邻居火灾殃及，于右任辞去社长。《神州日报》直到民国五年才停刊）。
 
 1908（光绪三十四年）戊申
 
 1909（宣统元年）己酉
 
-三月二十六日（5月15日）创刊《民呼报》，出了八十一天以后——六月十八日（8月3日）被封。
+三月二十六日（5 月 15 日）创刊《民呼报》，出了八十一天以后——六月十八日（8 月 3 日）被封。
 
-于右任被拘一个月零七天，于七月二十四日（9月8日）被逐出租界。20天后——八月十六日（9月29日）又办《民吁报》，五十一天以后——十月六日（11月18日）又被封，“所有主笔人等均免予深究在案”。
+于右任被拘一个月零七天，于七月二十四日（9 月 8 日）被逐出租界。20 天后——八月十六日（9 月 29 日）又办《民吁报》，五十一天以后——十月六日（11 月 18 日）又被封，“所有主笔人等均免予深究在案”。
 
 1910（宣统二年）庚戌
 
-《民吁报》被封13个月后——九月九日（11月11日）创刊《民立报》（此报直到民国二年四月才停刊）。
+《民吁报》被封 13 个月后——九月九日（11 月 11 日）创刊《民立报》（此报直到民国二年四月才停刊）。
 
-至于本年（1910）闰六月初六日（7月31日）同盟会中部总会在上海成立，地点并不在“三茅阁桥”的“民立报馆”，此地点一、据谭人凤在《牌词》中说，在“北四川路湖北小学校”。二、据曾伯兴在《乙戊集》中说，在“湖州公学”。三、据冯自由在《革命逸史》中说，在“湖州会馆”。到会宋教仁、陈其美等三十三人，签名由杨谱筌保存，现藏开国五十年文献编纂委员会。
+至于本年（1910）闰六月初六日（7 月 31 日）同盟会中部总会在上海成立，地点并不在“三茅阁桥”的“民立报馆”，此地点一、据谭人凤在《牌词》中说，在“北四川路湖北小学校”。二、据曾伯兴在《乙戊集》中说，在“湖州公学”。三、据冯自由在《革命逸史》中说，在“湖州会馆”。到会宋教仁、陈其美等三十三人，签名由杨谱筌保存，现藏开国五十年文献编纂委员会。
 
 于右任其实并未参加。
 
 于右任参加的是第二次会议，此会议在七月中旬后举行，除有上次开会的三十三个人以外，还有于右任、熊克武、陈方度、柳聘农、梁维岳、谭心休。
 
-这段往事，冯自由《革命逸史》第二集“记上海志士与革命运动”（98页）一节言之綦详：
+这段往事，冯自由《革命逸史》第二集“记上海志士与革命运动”（98 页）一节言之綦详：
 
 中国同盟会既成立。会员对于长江各省之革命工作，益趋积极。至七月中旬，鄂省军界同志运动已臻成熟，大有一触即发之势。遂派居正、杨玉如赴沪购办手枪，并邀黄兴、宋教仁、谭人凤等莅汉口主持大计，时黄兴尚在香港，居正抵沪，即在马霍路陈其美寓所召集会议。莅会者除参加成立会诸人外，于右任、熊克武、陈方度、柳聘农、梁维岳、谭心休等预焉。
 
@@ -368,13 +358,11 @@ WhilethereisasoulinprisonIamnotfree.
 
 当事人的话不可尽信，在这个地区，历史上求真辨伪的工作，真是愈来愈必要了！
 
-1966年9月25日
+1966 年 9 月 25 日
 
+## 床上功夫
 
-
-##床上功夫
-
-这月11、12号，《人间副刊》上登出高可攀的《千古艰难唯一床》。可攀周游列国多年，见多识广，又精通南腔北调胡文多种，由他出洋相，写古今床事，忽上忽下，深入浅出，看来津津有味。其中有两段插播，原文如下：
+这月 11、12 号，《人间副刊》上登出高可攀的《千古艰难唯一床》。可攀周游列国多年，见多识广，又精通南腔北调胡文多种，由他出洋相，写古今床事，忽上忽下，深入浅出，看来津津有味。其中有两段插播，原文如下：
 
 高可攀写床写得兴起，索性连独家的研究心得也透露了几分，给各位长长见识，免得大家都像文化顽童李敖一样，哇啦哇啦猛叫我中华尚有人耶？李敖听着，没有床，焉有人，此理甚浅、此事至明，不研究床而研究人，呜呜呼呼，李敖殆矣！
 
@@ -408,17 +396,15 @@ WhilethereisasoulinprisonIamnotfree.
 
 统治者刚坐上床的时候，倒也不乏“同床共坐”的故事。晋朝皇帝登基，百官陪列，他叫王导“升御床共坐”，王导说“太阳下同万物，苍生何由仰照”，坚持不敢；唐朝皇帝践位，“多引贵臣共榻”，刘文静就不赞成，认为“帝座严尊”，不可“屈与臣下均席”。统治者与床的大结合，到了宋朝皇帝一言道破：宋太祖伐南唐，南唐李后主派徐铉送礼物过来，请求退师。徐铉的理由是：“我们南唐无罪，我们以小事大，像儿子伺候老子，为什么还要打我们？”宋太祖说：“江南小国，哪个又有罪来着？但是天下一家，卧榻之侧，岂容他人鼾睡？”宋太祖真是行家，他对书呆子说话，不拈花微笑，却直抵花心，真干脆！
 
-唯一遗憾的是，床的体积太大了，总是难免惹人同坐或酣睡，殊嫌美中不足；何况庙堂之上，摆个大床，实在也不好看。这时候，西方文化帮了大忙，一种叫做“胡床”的东西，传到了中国，时间在2世纪尾、3世纪初。胡床并不是床，而是一种像胡金铨他们专用的导演椅，只能老子一个人坐，这就是椅子的前身。中国人接受了椅子的西方文化，到了北宋末年，全国大流行；统治者有御椅、大富翁有檀香椅、大强盗有第一把交椅，于是，全国男女老少，都从此坐有坐样，卧有卧样，不再坐在床上，更不席地而坐了。床和椅子，从此也变成两件家具，不一物两用了。
+唯一遗憾的是，床的体积太大了，总是难免惹人同坐或酣睡，殊嫌美中不足；何况庙堂之上，摆个大床，实在也不好看。这时候，西方文化帮了大忙，一种叫做“胡床”的东西，传到了中国，时间在 2 世纪尾、3 世纪初。胡床并不是床，而是一种像胡金铨他们专用的导演椅，只能老子一个人坐，这就是椅子的前身。中国人接受了椅子的西方文化，到了北宋末年，全国大流行；统治者有御椅、大富翁有檀香椅、大强盗有第一把交椅，于是，全国男女老少，都从此坐有坐样，卧有卧样，不再坐在床上，更不席地而坐了。床和椅子，从此也变成两件家具，不一物两用了。
 
 胡床刚到中国的时候，老祖宗正坐床上，看到能容纳屁股的，都叫做床，所以把胡椅叫做胡床。后来弄明白了不是床，又忌讳有“胡”（外国）的字样，于是又不胡又不床，变成了椅子。但不论怎么变，中国人在椅子上，上了洋鬼子一个大当：老夫子把钢笔推开，用毛笔大谈西方文化要不得，不知道西方文化正藏在他屁股底下，他整个屁股正在全盘西化——西方文化“瞻之在前，忽焉在后”，可真把人忙得“席不暇暖”了！
 
-1979年7月17日用毛笔写完
+1979 年 7 月 17 日用毛笔写完
 
-《中国时报》1979年7月30日
+《中国时报》1979 年 7 月 30 日
 
-
-
-##论和尚吃肉
+## 论和尚吃肉
 
 一般人以为我在台大学的只是历史，不对，我第一年学的是法律；学法律的朋友笑我法律学得鸦鸦乌，对，我对法律兴趣不浓。那时候我十九岁，我不喜欢“世间法”，倒有点喜欢“佛法”。不但有点喜欢佛法，还住在庙里，那个庙，就是台北善导寺。
 
@@ -442,7 +428,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 在佛教思想中，吃东西不该是口腹之欲，而是“治病”。我们习惯说东西不好吃，像吃药一样，正好是佛教的原案。佛教里认为人生一切烦恼、一切痛苦，都是一种病；想胡茵梦，是一种心病；想胡茵梦想得头疼，是一种身病；想胡茵梦想得不好好上班，被王永庆开革，饿得没饭吃，是一种饥病。佛教认为人该将“吃饭观”当做“吃药观”，所以和尚的食堂，又叫“斋堂”，又叫“观堂”，观什么呢？观药罐子。一个人端起饭碗像端起药罐子，岂不胃口倒尽？全对！就是要你胃口倒尽。胃口倒尽，才消灭了口腹之欲。口腹之欲给消灭了，不吃肉、不吃五辛，又有何难哉？
 
-但是，我的渊博的历史知识告诉我，在6世纪梁武帝萧衍以前，中国和尚明明是吃肉的，这又怎么说呢？
+但是，我的渊博的历史知识告诉我，在 6 世纪梁武帝萧衍以前，中国和尚明明是吃肉的，这又怎么说呢？
 
 答案是：佛教有小乘与大乘之分：但求自度不求度人的，是小乘；一心度人，以自度为度人手段的，是大乘。不吃肉的人道主义，是大乘法门，见于大乘的经典。中国人信佛，一开始乘到的佛教巴士，实际是小乘，所以一边大信特信，一边大吃大喝。直到梁武帝出来，读通了《涅槃经》，才大力主张全国大吃素。梁武帝不但自己吃素，叫全体僧侣佛子吃素，甚至叫自己祖宗也吃素——他居然把上供用的死猪肉，改成了以面做的假牺牲！祭祀不用血，无异使祖宗不血食！这真是惊天地泣饿鬼馋神的大手笔！
 
@@ -454,19 +440,17 @@ WhilethereisasoulinprisonIamnotfree.
 
 周世宗和破山和尚，他们真是第一流深通佛法的人，因为他们真能破“执”。佛法里的“执”有“我执”和“法执”：我执是一般人所认为主观的我；法执是所认为客观的宇宙。因为他们深通佛法，所以能“为百万生灵”，毁佛金身，开如来戒！相对的，只有那些小鼻子小眼的小乘执迷者，才会张开大嘴，不做狮子吼而开狮子口，大吃其“素鸡”、“素鸭”、“素火腿”！他们甚至在吃素当中，都不忘荤味，在菜单上，杀伐之声不绝。两相对比起来，匹夫匹妇为“功利”不吃肉；高人高僧却为“功德”大开其荤，真是你丢我捡了！
 
-1979年7月10日
+1979 年 7 月 10 日
 
-《中国时报》1979年7月23日
+《中国时报》1979 年 7 月 23 日
 
-
-
-##写在居浩然《义和团思想和文化沙文主义》的后面
+## 写在居浩然《义和团思想和文化沙文主义》的后面
 
 所谓“党国元老”中的儿子们，我认识两位：一位是居正先生的儿子居浩然大少爷；一位是吴忠信先生的儿子吴申叔大少爷。这两位大少爷，都很难得，他们虽然被目为“养尊处优”，可是都不堕落，这年头儿，大少爷不堕落，就很难得，就像大官儿不贪污就难得一样。
 
 两位大少爷对女人，都各有千秋，其中吴申叔考第一，讨了又美丽又贤惠的王莫愁做了太太；居浩然的太太是美丽贤惠以外，再加上“厉害”的女性。所以居浩然其人，是个标准的怕太太主义信奉者。此人虽然怕太太，可是还不自检束，还是常常跟有风流之名无风流之实的李敖在一起，惹得太太起疑。所以他经常在子夜以后，蹑足归家之时，被太太从后门闪出，罚跪算盘。从跪算盘一点上，颇可看出居吴两太太的宽猛有别：吴申叔被罚跪算盘，只跪中国式的算盘；而居浩然被罚跪的算盘，却是日本式的。所以居浩然的命，比吴申叔苦一些。故从罚跪工具观点上看，居浩然容易引起祸首李敖的同情，因为他在算盘之上，只有“浩然”长叹的份，一切把戏都施展不出来了！
 
-可是你别以为：居浩然就是弱者，居浩然写起文章来、说起大道理来，可就完全不同啦！他从算盘上（瞒着太太）凌云而起，喊一声“汰”！大笔一挥，就把人物扫尽、把是非廓清啦！因为他在写文章时，皮包骨的双膝上仍有余痛，所以他心中总难免还有点“算盘意象”，所以他对人物、对问题，总有点“清‘算’”的臭味，这是很不“恕道”的。故居浩然的文章，虽然比李敖还犀利、还美妙，可是在文章背后，他的“恕道”，实在比不上李大少爷。换句话说，李大少爷比居大少爷心地仁慈得多。李大少爷知道沈刚伯那么多的隐私，却只揭发一点点，这种仁慈，居大少爷就做不出来。所以你有什么秘密，千万别让居氏之子知道，他一知道，就麻烦。例如他写《徐复观的故事》（《寸心集》第117-121页），把复杂的徐复观剖析得十分简单，使人人知道徐复观是一个什么样子的“人”，就是因为他是最知道徐复观的底牌的缘故。居浩然对徐复观，绝不像我这样仁慈的跑到一二黑暗的法院去寻求光明。这次我告徐复观诽谤，两审法院的八条×用法官都居然接受×方面的压力和指使，判徐复观“无罪”，这件事若被居浩然晓得了，一定哈哈大笑。他一定笑我天真得放弃笔杆，而改用法律对付徐某人。要是他，他绝不这样，他会直截了当，写文章。所以我说，我比居浩然仁慈，居浩然比我残忍。
+可是你别以为：居浩然就是弱者，居浩然写起文章来、说起大道理来，可就完全不同啦！他从算盘上（瞒着太太）凌云而起，喊一声“汰”！大笔一挥，就把人物扫尽、把是非廓清啦！因为他在写文章时，皮包骨的双膝上仍有余痛，所以他心中总难免还有点“算盘意象”，所以他对人物、对问题，总有点“清‘算’”的臭味，这是很不“恕道”的。故居浩然的文章，虽然比李敖还犀利、还美妙，可是在文章背后，他的“恕道”，实在比不上李大少爷。换句话说，李大少爷比居大少爷心地仁慈得多。李大少爷知道沈刚伯那么多的隐私，却只揭发一点点，这种仁慈，居大少爷就做不出来。所以你有什么秘密，千万别让居氏之子知道，他一知道，就麻烦。例如他写《徐复观的故事》（《寸心集》第 117-121 页），把复杂的徐复观剖析得十分简单，使人人知道徐复观是一个什么样子的“人”，就是因为他是最知道徐复观的底牌的缘故。居浩然对徐复观，绝不像我这样仁慈的跑到一二黑暗的法院去寻求光明。这次我告徐复观诽谤，两审法院的八条 × 用法官都居然接受 × 方面的压力和指使，判徐复观“无罪”，这件事若被居浩然晓得了，一定哈哈大笑。他一定笑我天真得放弃笔杆，而改用法律对付徐某人。要是他，他绝不这样，他会直截了当，写文章。所以我说，我比居浩然仁慈，居浩然比我残忍。
 
 残忍的居浩然，在台湾被更残忍的李济等学阀们排挤后，走投无路，只好学孔丘，“乘桴浮于海”了。从他者，其太太欤？其聪明儿子欤？其漂亮女儿欤？其日本算盘欤？都有。反正，他们举家南迁了，南迁至英国鬼子统治下的澳洲。他临走前，我们一起吃饭，酒过十三巡，他说我醉了，我看他的脸也模糊了，他说：“台湾的学阀们不让我活，我只好‘乘桴浮于海’了，你的朋友，我的朋友，我们一个个都走了，留下了你一个人去做‘姜维’吧！”就这样的，我眼睁睁的看着居浩然的飞机凌云而起，就好像他从东洋计算器上凌云而起一样。
 
@@ -478,49 +462,49 @@ WhilethereisasoulinprisonIamnotfree.
 
 我爱居浩然，当然不是同性恋，因为他比我大十八岁，恰好是梁启超大于胡适的年龄，今年已四十有八矣！我要好男色，也要找个漂亮的小娈童，怎会爱上他这个准老头儿！我爱居浩然，最主要的原因是爱他那股“大少爷”的劲儿。无疑的，浩然是“大少爷”中最洒脱的天真者、最满不在乎的没心肝者。他狂放而有神经质，瘦弱而少蛋白质，他读书不多，可是有一副最好的头脑，分析问题，一针见血；写起文章，万言缤纷，比起整天厮守书房头脑混纯文章不通的书呆子，不知要高明几千倍。只此一点，足证上帝不公平，而上帝是魔鬼造的。魔鬼先造李敖，再造上帝，三造居浩然，三者连环，正好是，“李——上——居”，李敖之在居浩然之上，自无疑问。而居浩然口口声声附和胡秋原，以“居上李下”之次序，广为宣传，使世人误以“居李”并称，这种自私，实属可诛。姑念他痴长本人十八岁，只好由他去吧！由此一点，足可作为李敖也“敬老”的旁证。自今而后，谁再说我不“敬老”的，或拿不“敬老”的罪状来戴我帽子的，居浩然势将义不容辞，挺身为我辩护。
 
-由此“居李”联称一事，使我想到今年4月30号居浩然的来信，他在第一段和第五段中说：
+由此“居李”联称一事，使我想到今年 4 月 30 号居浩然的来信，他在第一段和第五段中说：
 
 亲爱的小疯狗：本门大师兄锡你嘉名，师弟自只有跟进。可惜的你不是母狗，以致临难不免。打起官司来吃蹩。临财不得，穷得酸溜溜地，那一股酸气从你文章中直冒。
 
-文化论战中居李并称，乃秋胡戏言，后来甲号被老婆裤带绑住。只剩下乙号被炼得火眼金睛，这“居李”-hyphenatedterm渐次失传。为保存历史真相，我百分之百赞成在你和我的笔下，尽量使用这名词，就像你的文章中，“居然”两字，用了有好几十个，为什么不也多用几个“居李”呢？将来人人如永延先生一样知道你的朋友居浩然，我的朋友李敖，不亦永垂千古欤！
+文化论战中居李并称，乃秋胡戏言，后来甲号被老婆裤带绑住。只剩下乙号被炼得火眼金睛，这“居李”-hyphenatedterm 渐次失传。为保存历史真相，我百分之百赞成在你和我的笔下，尽量使用这名词，就像你的文章中，“居然”两字，用了有好几十个，为什么不也多用几个“居李”呢？将来人人如永延先生一样知道你的朋友居浩然，我的朋友李敖，不亦永垂千古欤！
 
 由这封信，可证这位熊十力门下的大师弟，如何在处心积虑的布置“居李”这一名词了！他实在像散布瘟疫一样的，向人间散布“居李”的种子！而“居李”种子生根发芽之日，就正是现代化活活泼泼思潮开花结果之时。居浩然能够及早看中这一点，这是他的敏锐的远见，值得特别表扬。
 
-居浩然在中国现代化思想史中，值得特别表扬的另一点，是他把握了“义和团思想”、“文化沙文主义”这些词汇。这些词汇，是描绘反动势力的最好画笔，值得我们特别运用。居浩然这些新观念，在这篇《义和团思想和文化沙文主义》以前，早就开始暴露了。这类文字最主要的结集是他1959年出版的《十论》（中西出版社版），和1964年出版的《寸心集》（文星书店版）。在这两本书中，居浩然就中西文化的问题，做了多方面的讨论，其中有一些非常清楚的大概念，值得我们特别重视。
+居浩然在中国现代化思想史中，值得特别表扬的另一点，是他把握了“义和团思想”、“文化沙文主义”这些词汇。这些词汇，是描绘反动势力的最好画笔，值得我们特别运用。居浩然这些新观念，在这篇《义和团思想和文化沙文主义》以前，早就开始暴露了。这类文字最主要的结集是他 1959 年出版的《十论》（中西出版社版），和 1964 年出版的《寸心集》（文星书店版）。在这两本书中，居浩然就中西文化的问题，做了多方面的讨论，其中有一些非常清楚的大概念，值得我们特别重视。
 
 首先，居浩然告诉我们，“文化重建”（事实上是“文化改建”）的大工作，必须先从“清理基地”着手，他说：
 
-我们这一代对于新文化恐怕只能做一点准备工作，这种工作的第一步在涤瑕荡秽，先整理清楚基地，然后才能在基地上兴建新建筑。（《十论》第93页）
+我们这一代对于新文化恐怕只能做一点准备工作，这种工作的第一步在涤瑕荡秽，先整理清楚基地，然后才能在基地上兴建新建筑。（《十论》第 93 页）
 
 这是很明显的扫荡旧文化的言论。在这种“涤瑕荡秽”的原则底下，居浩然指出一切以固有文化消融西方文化的想法都是完完全全的迷梦，他说：
 
-中国历史上这一段接受并消融佛教文化的往事，现在颇有人认为可再见于接受并消融西洋文化，这在目前尚未见端倪。我们可断言的是：“夷夏论”的阶段已经过去，今天底张横渠周濂溪必须有法显玄奘的精神，精通夷文夷语，从事大规模底翻译和介绍。至于新文化的创造，则有待下一代程明道伊川兄弟完成了。（《十论》第91页）
+中国历史上这一段接受并消融佛教文化的往事，现在颇有人认为可再见于接受并消融西洋文化，这在目前尚未见端倪。我们可断言的是：“夷夏论”的阶段已经过去，今天底张横渠周濂溪必须有法显玄奘的精神，精通夷文夷语，从事大规模底翻译和介绍。至于新文化的创造，则有待下一代程明道伊川兄弟完成了。（《十论》第 91 页）
 
 面对大做迷梦的中国人，居浩然极力驳斥在西方文化面前惨败下来的一股暗流。这股暗流就是“义和团思想”。“义和团思想”在暗中活动下，碰到了一位洋妞儿，硬朝这位洋妞儿攀关系。这位洋妞儿，就是西方近代的“民族主义”。而拉拢“义和团”和“民族主义”的皮条客，就是今日的“新儒家”。居浩然说：
 
-〔整个中国大学问〕垮掉以后，并不是说从此全盘西化，不再留恋轩辕黄帝教。恰恰相反，义和团的暗流一直在中国思想界内隐藏着，隔一个时候，冒上来这么一次，有时候表现为提倡读经，有时候表现为规定毛笔写字。这些还都是枝节，最有重大影响的乃是与西洋传入的民族主义接了轨而形成的新儒家，中国没有民族主义，孙中山先生早有定论。随西洋的新犹太教——基督教——而来的却有一种狭隘底民族观念或民族意识，这股洪流帮助清末的革命推翻了满清，建立了民国，也产生了民国以来的新儒家。仅仅是民族主义加四书五经还成不了学术性的大事。再加上普鲁士君主崇拜者黑格尔所吹的“史观”法螺，于是借尸还魂，丢在茅厕坑里的线装书俨然又以新貌出现。用科学分析的头脑，从中国的“理”“气”、“性”、“命”、“太极”等名言设定中，找出所谓“道德的主体”；再用自发底或习得的逻辑推理组成“各个独立对待的道德主体”的建构，这就是从中国固有文化里“透”出来的民主政体，也就是“内圣”加上新“外王”。（《十论》第9-10页）
+〔整个中国大学问〕垮掉以后，并不是说从此全盘西化，不再留恋轩辕黄帝教。恰恰相反，义和团的暗流一直在中国思想界内隐藏着，隔一个时候，冒上来这么一次，有时候表现为提倡读经，有时候表现为规定毛笔写字。这些还都是枝节，最有重大影响的乃是与西洋传入的民族主义接了轨而形成的新儒家，中国没有民族主义，孙中山先生早有定论。随西洋的新犹太教——基督教——而来的却有一种狭隘底民族观念或民族意识，这股洪流帮助清末的革命推翻了满清，建立了民国，也产生了民国以来的新儒家。仅仅是民族主义加四书五经还成不了学术性的大事。再加上普鲁士君主崇拜者黑格尔所吹的“史观”法螺，于是借尸还魂，丢在茅厕坑里的线装书俨然又以新貌出现。用科学分析的头脑，从中国的“理”“气”、“性”、“命”、“太极”等名言设定中，找出所谓“道德的主体”；再用自发底或习得的逻辑推理组成“各个独立对待的道德主体”的建构，这就是从中国固有文化里“透”出来的民主政体，也就是“内圣”加上新“外王”。（《十论》第 9-10 页）
 
 关于这个洋妞儿“民族主义”，居浩然有进一步的精彩解释：
 
-古文与国家观念、民族意识并无关联。……中国自秦始皇统一以后，始终没有相当于西洋近代国家的“邦国”，在这片面自称为“中国”或“华夏”的土地上，只有一个“天下”。其次，中国人心目中的“民族”，也是“文化”重于“种族”，所以像西洋近代的民族主义我们也没有。清末明初的国家（邦国）观念和民族意识都是西洋传来的，读古文只能发思古之幽情，读西洋近化语文反而能培养国家（邦国）观念或民族意识。（《十论》第18、23-24页）
+古文与国家观念、民族意识并无关联。……中国自秦始皇统一以后，始终没有相当于西洋近代国家的“邦国”，在这片面自称为“中国”或“华夏”的土地上，只有一个“天下”。其次，中国人心目中的“民族”，也是“文化”重于“种族”，所以像西洋近代的民族主义我们也没有。清末明初的国家（邦国）观念和民族意识都是西洋传来的，读古文只能发思古之幽情，读西洋近化语文反而能培养国家（邦国）观念或民族意识。（《十论》第 18、23-24 页）
 
 他又说：
 
-比基督教稍后的西化运动内容，乃是民族主义。我说稍后，因为怎样才能守民族的大节，到满清入关以后才成为始终奉明朝正朔的遗老们的中心问题，而他们所讲的民族思想仍然是文化重于种族。哪怕是蛮夷入主中国，若接受了中国文化，也就是视同汉族。因此到太平天国起义，曾国藩就不知道究竟应该帮哪一边。只由于洪秀全要讲天父天兄，曾国藩才以乱臣贼子视之。这在左宗棠的情形，尤属显著。假使洪秀全也讲儒家思想，并且赐给左宗棠一名状元，则左宗棠很可能成为太平天国属下直捣北京的主将。至于后来孙中山先生所讲的民族主义乃是西化的民族主义，与曾左胡李大不相同。照孙中山先生的讲法，太平天国起义是民族革命，曾左胡李替满清政府平乱，乃是汉奸帮凶的行为。现在我们若是提倡读曾文正公家书，视洪秀全为发匪，乃是复古，既违背孙中山先生的遗教，更不是西化的民族主义。（《寸心集》第89-90页）
+比基督教稍后的西化运动内容，乃是民族主义。我说稍后，因为怎样才能守民族的大节，到满清入关以后才成为始终奉明朝正朔的遗老们的中心问题，而他们所讲的民族思想仍然是文化重于种族。哪怕是蛮夷入主中国，若接受了中国文化，也就是视同汉族。因此到太平天国起义，曾国藩就不知道究竟应该帮哪一边。只由于洪秀全要讲天父天兄，曾国藩才以乱臣贼子视之。这在左宗棠的情形，尤属显著。假使洪秀全也讲儒家思想，并且赐给左宗棠一名状元，则左宗棠很可能成为太平天国属下直捣北京的主将。至于后来孙中山先生所讲的民族主义乃是西化的民族主义，与曾左胡李大不相同。照孙中山先生的讲法，太平天国起义是民族革命，曾左胡李替满清政府平乱，乃是汉奸帮凶的行为。现在我们若是提倡读曾文正公家书，视洪秀全为发匪，乃是复古，既违背孙中山先生的遗教，更不是西化的民族主义。（《寸心集》第 89-90 页）
 
 浩然点破今日“新儒家”的嘴脸和手法，指出他们在拉“义和团思想”和西方近代“民族主义”的皮条，转而凝成“文化沙文主义”，凝固成“以文化而不以种族为内容的民族主义”，这是他眼光的敏锐。所谓“沙文主义”，它的来源是法国那个名叫沙文（Chauvin）的老兵，这个老兵在拿破仑失败后仍然效忠而狂热、盲目而排外，是个标准的义和团哥儿们。“文化沙文主义”的目的，无非在想用中土之光，光被四表，使万国衣冠尽拜中华冕旒之下。有这种如意想法的人，他们最初的目的是想用“武功”征服世界，在“武功”所及的边缘，再开始用“文化”来招降，这时候司马相如等御用文人便派了用场；可是事实上，往往“武功”并不称心，“武功”所碰到的，不完全是有眼不识泰山的“夜郎”国，所碰到的，不是“夜郎自大”而是“夜郎真的很大”，大到鸦片战争时被金发碧眼的“夜郎”打进家门来，这时候情况自然严重。最后八国联军一次，“夜郎”们逞尽了威风，于是中土沙文之士乃纷纷宣告打洋鬼子们不过，于是又想出自慰的法宝，放弃束皙《补亡诗》中所谓的“文化内辑，武功外悠”政策，改行“文化外悠”政策。掩武功以和平，敷文化以柔远，“文化沙文主义”便于头破血流之日，开始大行特行了。
 
-“文化沙文主义”和“义和团思想”，在20世纪开始以后的65年来，我们都随时可见、随处可见。“文化沙文主义”的表现是“文场”、是托诸空言；“义和团思想”的表现是“武场”、是见诸行事。即以目前台湾而论，浩然文章中提到的6月5日《联合报》的社论就是“文场”；而1957年的“五二四事件”就是“武场”。中国人在“文化沙文主义”和“义和团思想”上的中毒之深，没有受过思想方法训练的人，常常看不出来；可是稍经点破以后，如果注意自反，也可以稍加警觉，在万国旗中，少闹一点笑话。
+“文化沙文主义”和“义和团思想”，在 20 世纪开始以后的 65 年来，我们都随时可见、随处可见。“文化沙文主义”的表现是“文场”、是托诸空言；“义和团思想”的表现是“武场”、是见诸行事。即以目前台湾而论，浩然文章中提到的 6 月 5 日《联合报》的社论就是“文场”；而 1957 年的“五二四事件”就是“武场”。中国人在“文化沙文主义”和“义和团思想”上的中毒之深，没有受过思想方法训练的人，常常看不出来；可是稍经点破以后，如果注意自反，也可以稍加警觉，在万国旗中，少闹一点笑话。
 
 居浩然在思想史上，除了上面这些纠谬的努力外，还有一些指向的努力，值得他的好朋友的特别介绍。这就是他的“中国历史上没有科学和民主”的立论。
 
 关于中国历史上没有“科学”，浩然曾说：
 
-中国的文化遗产里除开大学问以外原也有火药、指南针、算盘等前科学的Prescientific技术知识，但这些在整个中国文化中都无足轻重。有人以为技术知识的不发达表示我们祖先伟大而子孙不肖实乃皮相之谈。子孙所以不研究奇技淫巧百分之百地遵照祖先的指示，我们可以说是太肖而不是不肖。《论语》里说得很清楚：“行有余力，则以学文”，做人已经任重道远，能有余力学文的自属少数。所以四库全书里做人的部分——经、史、子——占四分之三，学“文”的部分——集——只占四分之一。舍此而外都是奇技淫巧（子部中可找到一些痕迹），只有小人才动脑筋去学习，十有五而志于学的君子或君子候选人绝不做此打算。过去中国没有科学，并不表示我们没有学问，现在我们开始学习西洋的科学知识，又不必从“中国也有科学论”出发。一切近乎初民社会中魔术的前科学的技术知识，有这么一点也不足以自傲，不如索性承认没有，才能遵照国父孙中山先生的指示，迎头赶上西洋文化。（《十论》516页）
+中国的文化遗产里除开大学问以外原也有火药、指南针、算盘等前科学的 Prescientific 技术知识，但这些在整个中国文化中都无足轻重。有人以为技术知识的不发达表示我们祖先伟大而子孙不肖实乃皮相之谈。子孙所以不研究奇技淫巧百分之百地遵照祖先的指示，我们可以说是太肖而不是不肖。《论语》里说得很清楚：“行有余力，则以学文”，做人已经任重道远，能有余力学文的自属少数。所以四库全书里做人的部分——经、史、子——占四分之三，学“文”的部分——集——只占四分之一。舍此而外都是奇技淫巧（子部中可找到一些痕迹），只有小人才动脑筋去学习，十有五而志于学的君子或君子候选人绝不做此打算。过去中国没有科学，并不表示我们没有学问，现在我们开始学习西洋的科学知识，又不必从“中国也有科学论”出发。一切近乎初民社会中魔术的前科学的技术知识，有这么一点也不足以自傲，不如索性承认没有，才能遵照国父孙中山先生的指示，迎头赶上西洋文化。（《十论》516 页）
 
 关于没有“民主”，浩然也曾说：
 
-更早一点，还有一派“中国已有民主”论者，这就是新儒家的先进分子。他们常引用的一些证据是书经皋陶谟：“天聦明自我民聪明，天明畏自我民明畏。”泰誓：“天视自我民视，天听自我民听。”以及《孟子》上的“民为贵，社稷次之，君为轻”。凡是古书上提到“民”字的就特别注意，能扯得上的就标出来作为证据。表面上他们找到了一些貌似的证据，骨子里就是这些证据已足以证明中国没有民主！当时医统治者对“民”的看法，有如牧羊人对“羊”的看法，羊之所以可贵，因为没有了羊也就没有牧羊人。没有了“民”，哪来牧“民”的官？此所以“民为贵”。民比起“羊”来有一点不同的是“羊”只会叫，“民”可以说话，因此王公或诸侯若是想晓得自己的“民牧”好不好，问老百姓就可以知道。这是很容易办到的一件事，当时的王公或诸侯尚且无此念头，所以要圣人来耳提面命，提醒他们“天听自我民听”。“民”的地位与“羊”相等，这哪里扯得上“民主”？（《十论》76页）
+更早一点，还有一派“中国已有民主”论者，这就是新儒家的先进分子。他们常引用的一些证据是书经皋陶谟：“天聦明自我民聪明，天明畏自我民明畏。”泰誓：“天视自我民视，天听自我民听。”以及《孟子》上的“民为贵，社稷次之，君为轻”。凡是古书上提到“民”字的就特别注意，能扯得上的就标出来作为证据。表面上他们找到了一些貌似的证据，骨子里就是这些证据已足以证明中国没有民主！当时医统治者对“民”的看法，有如牧羊人对“羊”的看法，羊之所以可贵，因为没有了羊也就没有牧羊人。没有了“民”，哪来牧“民”的官？此所以“民为贵”。民比起“羊”来有一点不同的是“羊”只会叫，“民”可以说话，因此王公或诸侯若是想晓得自己的“民牧”好不好，问老百姓就可以知道。这是很容易办到的一件事，当时的王公或诸侯尚且无此念头，所以要圣人来耳提面命，提醒他们“天听自我民听”。“民”的地位与“羊”相等，这哪里扯得上“民主”？（《十论》76 页）
 
 上面这些立论，都是简明清楚一针见血的立论，说破了也不过流为老生常谈，可是不说就变成了西化派独得之秘，所以他居浩然不得不说。他说了，我李敖也懒得再多说——还是让他“抢先”“领功”吧！
 
@@ -552,11 +536,9 @@ WhilethereisasoulinprisonIamnotfree.
 
 如今浩然浩然去国，匆匆已经半年。我怀想这个可爱的人，常常望着我家的一个破酒柜。这个酒柜，是浩然出国前硬订五百元的高价派售给我的，里头的蛀虫比酒还多，真他妈的不划算。可是碰到湖北人，我没法儿，只好认倒霉。但是现在我发现这个酒柜的好处了——它可以增加我对湖北人的战斗意志，更可以抵消我对居太太丈夫的怀念！
 
-《文星》第九十四期1965年8月1日
+《文星》第九十四期 1965 年 8 月 1 日
 
-
-
-##黄帝子孙的黄金观
+## 黄帝子孙的黄金观
 
 古书《列子-说符篇》里，收了一个故事：
 
@@ -626,17 +608,17 @@ WhilethereisasoulinprisonIamnotfree.
 
 汉朝武帝小时候，大人同他开玩笑，一个个指着左右宫女问他：“给你做媳妇好不好？”汉武帝一一拒绝。等到问到“阿娇”的时候，他高兴了，他保证：“若得阿娇，当作金屋贮之！”
 
-现代人想这样金屋藏娇，觉得不可思议，但在汉朝时候，金“屋”不禁，倒也可能。因为在汉朝时候，黄金地位并没后代那么神气，那时黄金的定价是一斤（一金）一万元——当时的一万元。古书上动辄记载皇帝赏若干金，凡写的是“若干金”而不是“若干黄金”的，就赏的不是黄金，而是“黄铜”，是按每金一万元计算后折抵的钱——铜币一万枚。汉朝的贫富标准是：中等人家也有钱十万，折成黄金，就是十斤黄金。并不是有十斤黄金，而是有十斤黄金的钱；并不是说那时候黄金多，而是说那时候黄金并不怎么值钱。那时候平均每人月入是两千，合3.2两黄金，收入比现代人好多了。
+现代人想这样金屋藏娇，觉得不可思议，但在汉朝时候，金“屋”不禁，倒也可能。因为在汉朝时候，黄金地位并没后代那么神气，那时黄金的定价是一斤（一金）一万元——当时的一万元。古书上动辄记载皇帝赏若干金，凡写的是“若干金”而不是“若干黄金”的，就赏的不是黄金，而是“黄铜”，是按每金一万元计算后折抵的钱——铜币一万枚。汉朝的贫富标准是：中等人家也有钱十万，折成黄金，就是十斤黄金。并不是有十斤黄金，而是有十斤黄金的钱；并不是说那时候黄金多，而是说那时候黄金并不怎么值钱。那时候平均每人月入是两千，合 3.2 两黄金，收入比现代人好多了。
 
 远在金屋藏娇以前，燕昭王就筑过“黄金台”，“置千金于台上，以延天下之士”。当时用黄金抢眼，单位不大是不行的。秦朝时候，单位是“镒”，一镒是二十两。两的度量衡虽然古比今小，但也很可观。汉朝以后，改以“斤”为单位，一斤十六两，黄金已经比秦朝略微坚挺。汉朝以后，黄金愈来愈走红，数量愈来愈少，价钱愈来愈贵，到了宋朝，已经贵得连皇帝都搞不清是怎么回事了。有一天，宋太宗问学士杜镐说：“两汉赐予多用黄金，而后代遂为难得之货，何也？”杜镐说，这是佛教从印度传来的缘故。佛教一传来，大家都用黄金铸佛像，用黄金装饰，所以愈消耗愈多，黄金就少了，价钱就贵了。
 
-古话说“人要衣装，佛要金装”，这可不是说着玩的。古代佛像可真流行金身，天宫寺的释迦立像，高四十三尺，“用赤金十万斤，黄金六百斤”，足可教人想象其气派多大！如果黄金用来造佛像，还算好的，造好一举两得：佛在，黄金也在，反之亦然。就怕黄金不用来造佛而用来装饰，一装饰，就一去不回头了。这毛病出在黄金的特质上，黄金密度是19.3克/立方厘米，极富展性和延性，它可以打成极薄的金叶，就是所谓金箔，厚度可薄到二十五万分之一英寸，薄到这种程度，可以用来包装饰品的外表，可以烫压金字，一做了这些用途，就不能再回熔了，所以古书《草木子》里说：“金一为箔，无复再还原矣！”
+古话说“人要衣装，佛要金装”，这可不是说着玩的。古代佛像可真流行金身，天宫寺的释迦立像，高四十三尺，“用赤金十万斤，黄金六百斤”，足可教人想象其气派多大！如果黄金用来造佛像，还算好的，造好一举两得：佛在，黄金也在，反之亦然。就怕黄金不用来造佛而用来装饰，一装饰，就一去不回头了。这毛病出在黄金的特质上，黄金密度是 19.3 克/立方厘米，极富展性和延性，它可以打成极薄的金叶，就是所谓金箔，厚度可薄到二十五万分之一英寸，薄到这种程度，可以用来包装饰品的外表，可以烫压金字，一做了这些用途，就不能再回熔了，所以古书《草木子》里说：“金一为箔，无复再还原矣！”
 
 上面这种道理，中国的书呆子不知道，于是他们就乱猜，乱做解释。例如苏轼，他看到黄金少了，他就发明了一种奇论，说这是因为黄金是“宝货”，宝货就会“神变”，神变就“不可知”，“不可知”到哪儿去了呢？他的结论是“复归山泽”（又跑回山里水里去了），这是百分之百的胡扯。若讲“物质不灭”，全世界也没有这样的讲法吧？
 
 驱金牛开路
 
-前面说黄金的单位，有“镒”、有“斤”。镒和斤都是当时的金币。当时钱币的材料以金和铜为主，其他珠玉龟贝银锡之类，流通量很少。至于钱的形状，实在很乱，有刀形的、有铲形的、有插形的、有磬形的、有贝形的，这种情形，中外都一样。西方钱币有正方的、有立方的、有八角的；日本钱币有柱形的、有椭圆形的、有不规则的方形的。五花八门的原因是：钱币的产生，是演化的，最初并没有统一设计，不但没有，并且人人可造，没有“伪造货币罪”。银币起自老百姓交易的方便，本来跟政府无关，后来政府看得眼红，便插入一脚，只许我造，不许你造了。汉武帝造“五铢钱”是最有名的一次；汉武帝又用白鹿皮做钱，当四十万用，是造纸币的先河。五铢钱是铜钱，120年间，造出二百八十亿万枚，政府每年花在“中央印制厂”的采铜工人十万个，局面实在可观。在这种“铜臭”状态下，黄金愈来就愈“带出场”了。
+前面说黄金的单位，有“镒”、有“斤”。镒和斤都是当时的金币。当时钱币的材料以金和铜为主，其他珠玉龟贝银锡之类，流通量很少。至于钱的形状，实在很乱，有刀形的、有铲形的、有插形的、有磬形的、有贝形的，这种情形，中外都一样。西方钱币有正方的、有立方的、有八角的；日本钱币有柱形的、有椭圆形的、有不规则的方形的。五花八门的原因是：钱币的产生，是演化的，最初并没有统一设计，不但没有，并且人人可造，没有“伪造货币罪”。银币起自老百姓交易的方便，本来跟政府无关，后来政府看得眼红，便插入一脚，只许我造，不许你造了。汉武帝造“五铢钱”是最有名的一次；汉武帝又用白鹿皮做钱，当四十万用，是造纸币的先河。五铢钱是铜钱，120 年间，造出二百八十亿万枚，政府每年花在“中央印制厂”的采铜工人十万个，局面实在可观。在这种“铜臭”状态下，黄金愈来就愈“带出场”了。
 
 黄金带出场后，身价愈来愈增加，单位不用镒了、不用斤了，开始用“两”了。单位虽然小，如果数量多多，更来得神气。《辽史》记张孝杰为“北府宰相”，一天同亲戚喝酒，口出豪语，说：“无百万两黄金，不足为宰相家！”这是何等气派！有奸臣贪墨如此，国家还要不完蛋，其可得乎？
 
@@ -644,11 +626,9 @@ WhilethereisasoulinprisonIamnotfree.
 
 驱金牛开路，这是人间最立竿见影的办事哲学。圣贤豪杰、武林高手、各路英雄好汉，能妙慧圆通，驱金牛开路，而不被金牛撞倒者，天下又有几人？可是有了又怎样？没有又怎样？人永远是人，人永远归于尘土，黄金却永远不改本色。人说“发光的未必全是金子”，人错了！人不知道，永恒发光的，不幸就是金子。
 
-《时报周刊》第七十一期1979年7月2日
+《时报周刊》第七十一期 1979 年 7 月 2 日
 
-
-
-##中华大赌特赌史
+## 中华大赌特赌史
 
 “有目”供赌
 
@@ -682,7 +662,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 凡戏具皆须纠率同志，惟骨牌可以独坐自怡，故功令不禁，以为非赌具也。或旅馆萧寥，或蓬窗寂静，未携书籍，更鲜朋欢，时一拈弄，足以消暇。
 
-这类情形，似乎我们也可以找到旁证。据1964年8月19号《中央日报》有这样的报道：
+这类情形，似乎我们也可以找到旁证。据 1964 年 8 月 19 号《中央日报》有这样的报道：
 
 台湾省政府昨天指示警务处：扑克牌为现代社会家庭高尚玩具之一，欧美国家早经普遍提倡，并有国际性的比赛，本省年来亦渐风行，应视为正当娱乐工具，准予公开买卖，以供需求，但不得为赌博或类似赌博的行为。
 
@@ -726,9 +706,9 @@ WhilethereisasoulinprisonIamnotfree.
 
 首先我要指出，如果“圣之时者”的孔老夫子生于今日，他是不赞成硬性禁赌的。证据是孔老夫子曾说：“饱食终日，无所用心，难矣哉！不有博弈者乎？为之犹贤乎已。”这是明明指出：与其“饱食终日，无所用心”，倒不如打打小牌、下下小棋。
 
-可是，尽管孔夫子早已有言在先，但他的信徒们总还觉得，博弈之事还是要不得，还是禁掉的好。从陶侃把博弈戏具投江，到唐律的“各杖一百”，到元刑法志的“杖七十七”“加徒一年”，到明律清律的“杖八十”。到民国暂行刑律、旧刑法，乃至刑法中的“赌博罪”……我们都不难看到一串串禁赌的规定。可是事实显示给我们的是：自古以来，赌风之盛，却“何代无之”！铁的事实总超过纸的法律，历史的事相，经验的教训，都该使我们承认禁绝赌博，不是一个严刑峻法的问题，也不该用严刑峻法的手段。用严刑峻法，有它的限度和对象，不该用的地方用，结果必然产生阳奉阴违的结果，除了制裁到几名倒霉鬼或替罪羊，绝难收到实效。即以台湾目前禁赌情形而论，连“公布赌徒姓名”这一点，从1965年吵到现在，都无法雷厉风行，单此一点，就不难看出硬性禁赌只是一句口号，既无贯彻的可能，也无贯彻的必要。
+可是，尽管孔夫子早已有言在先，但他的信徒们总还觉得，博弈之事还是要不得，还是禁掉的好。从陶侃把博弈戏具投江，到唐律的“各杖一百”，到元刑法志的“杖七十七”“加徒一年”，到明律清律的“杖八十”。到民国暂行刑律、旧刑法，乃至刑法中的“赌博罪”……我们都不难看到一串串禁赌的规定。可是事实显示给我们的是：自古以来，赌风之盛，却“何代无之”！铁的事实总超过纸的法律，历史的事相，经验的教训，都该使我们承认禁绝赌博，不是一个严刑峻法的问题，也不该用严刑峻法的手段。用严刑峻法，有它的限度和对象，不该用的地方用，结果必然产生阳奉阴违的结果，除了制裁到几名倒霉鬼或替罪羊，绝难收到实效。即以台湾目前禁赌情形而论，连“公布赌徒姓名”这一点，从 1965 年吵到现在，都无法雷厉风行，单此一点，就不难看出硬性禁赌只是一句口号，既无贯彻的可能，也无贯彻的必要。
 
-1951年，英国皇家委员会，公布了一份六万五千字的十七次会议结论，正式提出“赌博并非罪恶”的新观念，同时不承认赌博是罪恶之源，因为罪恶的来源，并不如此简单。
+1951 年，英国皇家委员会，公布了一份六万五千字的十七次会议结论，正式提出“赌博并非罪恶”的新观念，同时不承认赌博是罪恶之源，因为罪恶的来源，并不如此简单。
 
 我也听说过一些警察先生的看法，如：“在这里打麻将的是好公民！不打麻将，在外面乱跑，惹事生非，岂不更坏？”说这话的人，我认为他已可写出英国皇家委员会的结论了。
 
@@ -738,15 +718,13 @@ WhilethereisasoulinprisonIamnotfree.
 
 写这篇文字的人，是个早就“戒赌”的人，“戒赌”的理由并非有畏于管区警察，而是觉得赌得赌太浪费时间，这是个最大的理由，终于使我连个小牌也不打了。我如今已是个成功的不参加任何有赌的行为的人（当然包括买奖券）。但这一成功，我始终认为压根儿与“道德”无关，也与“法律”无关，所以我也难赞成用“道德”或“法律”的尺度，劝人或罚人。真正的关键还是前面说过的老话：不赌大家干什么？如果一群群的“赌君子”，从牌桌上硬被赶下来，到外面去做“不赌的小人”，那岂不跟我一样了？到那时候，警务处长的头，恐怕更要疼了也！
 
-〖后记〗这篇文章原登1966年《人人娱乐》杂志第五期；1979年，用《国赌史记》题目，重刊在《时报周刊》第七十九期，都用顾乐的笔名发表。《时报周刊》第八十期里有夏元瑜的《马后炮——赌博奇文》有一段说——
+〖后记〗这篇文章原登 1966 年《人人娱乐》杂志第五期；1979 年，用《国赌史记》题目，重刊在《时报周刊》第七十九期，都用顾乐的笔名发表。《时报周刊》第八十期里有夏元瑜的《马后炮——赌博奇文》有一段说——
 
 我看了上一期顾乐先生写的《国赌史记》，衷心的佩服。顾先生阅读得既多，记性又好。他写这篇文章绝对不会像我临时抱佛脚——东翻西查的穷折腾。看他的语气是一泻而下，毫无停顿之处。再看他的行文轻松活泼，我猜顾先生大概不是一位板着面孔的职业历史家。真猜不透他是何方神圣，反正我对他钦佩无已。
 
 这证明了，好文章就是好文章，藏也藏不住的！
 
-
-
-##且从青史看青楼
+## 且从青史看青楼
 
 中国民族太古老了，古老得一举手一投足，就可能跟过去搭上线。你以为你举的是你的手，投的是你的足，其实不是。你的手和足，只是木偶戏中的手和足，它们全被线上的老相好操纵，这老相好，就是历史。
 
@@ -802,7 +780,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 其实，明朝这种知识分子与妓女的情孽，本是渊源有自的，早在唐朝就大为流行。唐朝知识分子以走动秦楼楚馆为正业之一，从元白到李杜，无一例外。在杜牧的诗里，可以看到太多太多“不饮赠官妓”“娼楼戏赠”的作品，从这些结果看，中国娼妓不但达到了“以充国用”的特殊效果，又给中国饮酒作乐的知识分子“以充文用”，风化出他们笔下的文学。流风所及，中国文人几乎无一不跟娼妓饮酒作乐，写诗漫爱。这种“饮酒作乐”的特色，本来是“酒家”与“妓女户”二合一的，到了现在，形式上已经一分为二，形而上者不能搞，形而下者不能聊，所有“玉人何处教吹箫”的时代，已经完全远去，中国文人的作品也就更不堪设想了！
 
-“饮酒作乐”不但是中国娼妓业的固有文化，甚至此一行业的远流，就从饮酒作乐而来。中国古代没有“娼”字，娼字是6世纪才出现的。在它以前，都用“倡”字。倡就是音乐，“倡优”是一回事，就是歌唱表演。倡字后来来个细胞分裂，人字旁变口成为“唱”（纯音乐），变女成为“娼”（纯妓女），倡字本身保留原样的部份，只做为“提倡”“倡导”来用——自己不介入声色场所，清高起来了。
+“饮酒作乐”不但是中国娼妓业的固有文化，甚至此一行业的远流，就从饮酒作乐而来。中国古代没有“娼”字，娼字是 6 世纪才出现的。在它以前，都用“倡”字。倡就是音乐，“倡优”是一回事，就是歌唱表演。倡字后来来个细胞分裂，人字旁变口成为“唱”（纯音乐），变女成为“娼”（纯妓女），倡字本身保留原样的部份，只做为“提倡”“倡导”来用——自己不介入声色场所，清高起来了。
 
 中国娼妓的语源，既然一开始就“穷声色之娱”，外加饮酒助兴，所以，在称呼方面，就有“声妓”、“歌妓”、“酒妓”、“饮妓”、“酒纠”等名目，这些名目所象征的文化特色，自然也就我中华只此一家。
 
@@ -832,13 +810,11 @@ WhilethereisasoulinprisonIamnotfree.
 
 中国民族太古老了，从青史看青楼，虽然红袖香销，可是却残颜难褪，一段青楼的青史，使我们看到几番血色，多少苍白！真令人掩卷。
 
-1979年7月25日
+1979 年 7 月 25 日
 
-《时报周刊》第七十七期1979年8月19日
+《时报周刊》第七十七期 1979 年 8 月 19 日
 
-
-
-##古书新见
+## 古书新见
 
 清朝的张文襄公（之洞）在他的名著《书目答问》后面，曾有一段“劝刻书说”，其中要求“凡有力好事之人，若自揣德业学问不足过人，而欲求不朽者，莫如刊布古书一法”。他进一步指出：“但刻书必须不惜重费，延聘通人，甄揭秘籍，详校精雕，其书终古不废，则刻书之人终古不泯。……岂不胜于自著书自刻集者乎？且刻书者，传先哲之精蕴，启后学之困蒙，亦利济之先务，积善之雅谈也！”
 
@@ -864,13 +840,11 @@ WhilethereisasoulinprisonIamnotfree.
 
 中国近代的战乱不断，图书上的损失早已无法估计，不论无意的被焚于兵祸，或是有意的聚毁于七塔，对文化而言，自属有害无益。今天我们得现代印刷术之便，又赶上今日世界以研究“汉学”为显学，乘机多刊印一些普及而实用的典籍，该是一件有意义的事。《中华古籍丛刊》的问世，在取舍定夺方面，大致与上述主旨相近。有现代眼光的知识分子，必然会对这部丛书的选刊，有所肯定。
 
-1968年4月30日
+1968 年 4 月 30 日
 
-〔附记〕这是我十一年前，为《中华古籍丛刊》写的序，原题《〈中华古籍丛刊〉缘起》，现在改名。1979年8月22日
+〔附记〕这是我十一年前，为《中华古籍丛刊》写的序，原题《〈中华古籍丛刊〉缘起》，现在改名。1979 年 8 月 22 日
 
-
-
-##这样笨，还要做强盗！
+## 这样笨，还要做强盗！
 
 日本童话里，有一则《阿苏史和强盗》。
 
@@ -882,7 +856,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 这个日本童话，我认为最适合用来描写这个岛国。我读日本史、读中日关系史，读来读去，每当掩卷遐思，我都想到光着屁股的阿苏史，和那笨得要命的五个强盗。
 
-1933年，英国一代文豪萧伯纳，访问日本。在日本爱国者高叫征服中国的时候，他以讽世的口吻，告诉日本人：“日本人绝不能征服中国的，除非日本人能准备一个警察对付一个中国人。”
+1933 年，英国一代文豪萧伯纳，访问日本。在日本爱国者高叫征服中国的时候，他以讽世的口吻，告诉日本人：“日本人绝不能征服中国的，除非日本人能准备一个警察对付一个中国人。”
 
 日本警察一个对一个日本人还不够用，当然无法外销支那，所以，萧老顽童的铁口直断，自然也就言必有中。
 
@@ -914,7 +888,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 有些字眼，大家都不要，却喜欢丢给对方，“东洋”两个字，就是其中之一。日本称中国做东洋，其实日本在中国东面洋中，自己才是名副其实的东洋，于是，中国将这字眼掷回，叫日本是东洋。什么东西都好端端的，可是一东洋化，就糟糕伊妈死，像“东洋菜”（料理）、“东洋车”（人力车）、“东洋参”（日本羶参）等等，一东洋，就荒腔走板，小题大做。其中最要命的，是“东洋统计学”。
 
-19世纪的英国首相狄士累利，有一句名言，他说“谎话有三种：谎话、可恶的谎话和统计学。”（Therearethreekindsoflies：lies,damnedlies,andstatistics.）统计学这种科学方法，和东洋参一样，消受不好，就大受其害。日本町人喜欢打小算盘，抓到了统计学，认为独得其秘，开始大统其计，什么都一厢情愿的统计起来。他们认为根据统计学，打中国会贏；根据统计学，打美国也会贏，殊不知毛病就出在统计上。最后吃了原子弹，证明了统计学是谎话，东洋统计学是东洋谎话，结果是，美国军人占领了日本。
+19 世纪的英国首相狄士累利，有一句名言，他说“谎话有三种：谎话、可恶的谎话和统计学。”（Therearethreekindsoflies：lies,damnedlies,andstatistics.）统计学这种科学方法，和东洋参一样，消受不好，就大受其害。日本町人喜欢打小算盘，抓到了统计学，认为独得其秘，开始大统其计，什么都一厢情愿的统计起来。他们认为根据统计学，打中国会贏；根据统计学，打美国也会贏，殊不知毛病就出在统计上。最后吃了原子弹，证明了统计学是谎话，东洋统计学是东洋谎话，结果是，美国军人占领了日本。
 
 美军占领日本以后，日本的东洋统计学家还在执迷不悟，搬弄个没完。吉田茂做首相，料理善后，为解决粮食问题，向美国要食米。日本农林部估计需要四百五十万吨才能过关，可是美军总部一算，不到六分之一——七十万吨——就能过关了。麦克阿瑟把吉田茂找来，问他日本人的统计学怎么可以这样？吉田茂手一摊、脸一笑，说日本如果统计做得好，当年也不会发动太平洋战争了！
 
@@ -950,17 +924,17 @@ WhilethereisasoulinprisonIamnotfree.
 
 “日学为用”的东洋统计学！
 
-据吉田茂总计：1945年8月15日，日本在完全枯竭中停止作战。这个历史上最大的错误估计，使日本过去的许多成就，都为之殉葬。战争使日本损失了六十八万平方公里的领土，差不多是战前的一半。战争使日本死了两百万人，毁了二百五十万栋房子，首都出现三百万吨垃圾！更严重的是日本人心理上的打击。“因大多数日本人相信极端民族主义者所谓日本是无敌的断言，他们深信国家从事太平洋战争是正当的。由于这些信念，他们在战争中曾经做巨大的牺牲，忍受无数的艰难痛苦，结果目击他们的国家作战的理由毫无根据，并被认为是侵略者。当然很多人为之震顫，对他们来说，这些事件的转变等于精神权威和他们所信奉的一切格言全部破碎。”
+据吉田茂总计：1945 年 8 月 15 日，日本在完全枯竭中停止作战。这个历史上最大的错误估计，使日本过去的许多成就，都为之殉葬。战争使日本损失了六十八万平方公里的领土，差不多是战前的一半。战争使日本死了两百万人，毁了二百五十万栋房子，首都出现三百万吨垃圾！更严重的是日本人心理上的打击。“因大多数日本人相信极端民族主义者所谓日本是无敌的断言，他们深信国家从事太平洋战争是正当的。由于这些信念，他们在战争中曾经做巨大的牺牲，忍受无数的艰难痛苦，结果目击他们的国家作战的理由毫无根据，并被认为是侵略者。当然很多人为之震顫，对他们来说，这些事件的转变等于精神权威和他们所信奉的一切格言全部破碎。”
 
 “好的失败者”？
 
-如果时光倒流，把上面这些统计数字，带到1941年11月29日的日本重臣会议上，不知东条有何感想？当天的会议，除了74岁的冈田外，没人反对打珍珠港。东条会上大骂冈田是老不死，声言日本打美国，不是乱打的，“有详细数字的根据”！好个详细数字的根据！所有的详细数字，都化成了千百万吨碎砖断瓦，变成了吉田茂的历史凭吊。
+如果时光倒流，把上面这些统计数字，带到 1941 年 11 月 29 日的日本重臣会议上，不知东条有何感想？当天的会议，除了 74 岁的冈田外，没人反对打珍珠港。东条会上大骂冈田是老不死，声言日本打美国，不是乱打的，“有详细数字的根据”！好个详细数字的根据！所有的详细数字，都化成了千百万吨碎砖断瓦，变成了吉田茂的历史凭吊。
 
 乍看起来，东条是祸国者，吉田茂不是，其实全不对。做奉天总领事时代的吉田茂，做田中内阁外务省次官的吉田茂，根本就是侵略的元凶，就像做满洲国实业部次长的岸信介，做东条内阁商工大臣的岸信介，根本也是侵略元凶一样。日本人不论文的武的、老的少的，他们的心灵深处，都是武士町人的情结。因人而异的，只是比例的多少，而非事实的有无。
 
 日本人咒骂原子弹盲目杀人不人道，说一下子使广岛伤亡十三万，灾民十七万。但日本人何不想想：他们在南京睁着眼睛“人道”的杀人，一杀就是三十万！当日本东京八十万人大游行，庆祝攻占南京的时候，《日日新闻》的随军记者，在《紫金山下》专文中，曾有这样的报道：
 
-准尉宫冈和野田曾约定做一个砍杀一百敌人的比赛。12月10日，两人在紫金山下相见，彼此手中都拿着砍缺了口的军刀。野田道：“我杀了一百零五人，你的成绩呢？”宫冈答：“我杀了一百零六人！”于是，两人同作狂笑：哈哈，宫冈先生多杀了一个！可是很不幸：就确定不了是谁先杀达到一百之数的？因此，他们两人决定这次是不分胜负，重新再赌谁先杀满一百五十名中国人：12月11日起，比赛又在进行中。
+准尉宫冈和野田曾约定做一个砍杀一百敌人的比赛。12 月 10 日，两人在紫金山下相见，彼此手中都拿着砍缺了口的军刀。野田道：“我杀了一百零五人，你的成绩呢？”宫冈答：“我杀了一百零六人！”于是，两人同作狂笑：哈哈，宫冈先生多杀了一个！可是很不幸：就确定不了是谁先杀达到一百之数的？因此，他们两人决定这次是不分胜负，重新再赌谁先杀满一百五十名中国人：12 月 11 日起，比赛又在进行中。
 
 这种事，除了日本人以外，还有哪国人干得出来？
 
@@ -970,7 +944,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 一次，日本兵以三辆卡车，运妇女到兵营去，逐一强奸。我阻止他们，无效。这些妇人，由十二三岁至四五十岁。我曾目击日兵的强奸。有时候，日兵在沐浴处强奸中国的妇人。后来，我们走进去，我看见沐浴处的裸体女人在哭。
 
-又一次，我同马基氏到南门东新开路第7号。发现该家十一人被杀，三人被强奸。妇人之中，两人十四岁，一人十七岁，日军于强奸后，把东西塞入阴户中。另一年轻的女子，在桌上被强奸，桌上有血。又有一家人，乘船过河。至河中，被日兵发现。日兵检查船内，发现青年女子，就在老父与丈夫面前强奸。丈夫非常愤怒，被日兵所杀，老父和女儿也同投河溺死。
+又一次，我同马基氏到南门东新开路第 7 号。发现该家十一人被杀，三人被强奸。妇人之中，两人十四岁，一人十七岁，日军于强奸后，把东西塞入阴户中。另一年轻的女子，在桌上被强奸，桌上有血。又有一家人，乘船过河。至河中，被日兵发现。日兵检查船内，发现青年女子，就在老父与丈夫面前强奸。丈夫非常愤怒，被日兵所杀，老父和女儿也同投河溺死。
 
 这种事，除了日本人以外，还有哪国人干得出来？
 
@@ -982,7 +956,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 二次大战期间，美国国防当局邀请人类学家班妮迪（RuthFultonBenedict）研究日本，她写下《菊花与剑：日本文化型模》（TheChrysanthemumandtheSword：PatternsofJapaneseCulture）一书，认为日本人有高雅如菊花、残暴如剑两面性格。日本人残暴倒是真的，但高雅却从何说起？高雅需要大智慧，可是日本人太笨了，日本人老是全国上下一心，勤勤恳恳，大家努力做笨事。吃原子弹以前，他们耀武扬威不识大体，笨事主题是“军事侵略”；吃原子弹以后，他们灰头土脸的爬起来，笨事主题改成“经济侵略”，还是不识大体，不顾国际贸易的平衡，老占别的国家的便宜，使人积恨。
 
-去年11月，《每日新闻》驻华盛顿特派员古森义久，报道访问美国前驻日公使耶玛逊的谈话说：1978年的日本，跟1930年的日本，情形最像，日本在走危险的老路。
+去年 11 月，《每日新闻》驻华盛顿特派员古森义久，报道访问美国前驻日公使耶玛逊的谈话说：1978 年的日本，跟 1930 年的日本，情形最像，日本在走危险的老路。
 
 日本人怎能不走危险的老路？日本人伺候好美国大兵，就以为自己是一个“好的失败者”（GoodLoser），其实好的失败者在能从失败中得到目光远大的教训，而不是另一套方式的卷土胡来。日本人从不是一个“好的胜利者”，所以，他也很难是一个好的失败者。
 
@@ -990,13 +964,13 @@ WhilethereisasoulinprisonIamnotfree.
 
 东条是武士世家，他要“日本模式”对付老美，除了“切腹”，还有什么呢？还等什么呢？
 
-但他在等，等到1945年9月11日下午4点，等到美国宪兵到了他家门口，他才举枪自杀——没有“日本模式”、没有“切腹”的自杀。
+但他在等，等到 1945 年 9 月 11 日下午 4 点，等到美国宪兵到了他家门口，他才举枪自杀——没有“日本模式”、没有“切腹”的自杀。
 
 消息传了出去，有人大骂：“猪！”
 
 更猪的还在后头呢！东条自杀居然没死，给救活了，给送到“敌人的法庭”，当了被告了！
 
-三年以后的12月23日凌晨，东条被戴上黑色头罩，吊死在绞架。日本人捡到他和六个同死战犯的部分骨灰，埋在名古屋郊外山顶，题名“殉国七士墓”。
+三年以后的 12 月 23 日凌晨，东条被戴上黑色头罩，吊死在绞架。日本人捡到他和六个同死战犯的部分骨灰，埋在名古屋郊外山顶，题名“殉国七士墓”。
 
 二十年后，日本“又是一条好汉”，又还魂了。日本的脖子接受了失败，日本的脑袋却没接受，日本的经济侵略照旧“那新那鲁”（National），日本的“日学为用”仍然八个牙露。菊花还是菊花、剑还是剑。艺妓脸上还是白粉，日本人还是强盗。
 
@@ -1004,27 +978,25 @@ WhilethereisasoulinprisonIamnotfree.
 
 八个牙露！
 
-1979年6月28日
+1979 年 6 月 28 日
 
-《中国时报》1979年7月6日
+《中国时报》1979 年 7 月 6 日
 
-
-
-##《左舜生选集》序
+## 《左舜生选集》序
 
 左舜生是当年青年党的青年党员，四十五年下来，青年党已变成“老年党”，左舜生也变成这个党的元老。但是，实际上，左舜生所象征的，显然并不是一个小党的元老，一个小党的元老不足以尽左舜生的为人，左舜生的为人，还有他高明光大的一面。
 
-1893年（民国纪元前十九年），左舜生生长在湖南长沙的一个破落读书人家，“乡下无半亩之田，城内无一间之屋。”二十岁前，一直在长沙度过，住家“不知迁徙过多少次，但大抵不出南门的一角”。这就是他在家乡活动的范围。他跟湖南的空间关系虽然很少，但在精神上，他显然感染了那种强烈的“大湖南主义”。这种湖南本位的思想，不但使他一生中频频乐道谭嗣同、叶德辉、王壬秋、王先谦、皮锡瑞、杨度、黄兴、宋教仁、蔡锷等人，甚至齐白石、琼瑶、唐宝云等人，也都跟着沾了光。他近年写《黄兴评传》《宋教仁评传》，字里行间，都多少有一种“鸣不平”的味道，“不平”之事，本就该“鸣”了，又何况是湖南人的“不平”？左公左袒之，自更不在话下。
+1893 年（民国纪元前十九年），左舜生生长在湖南长沙的一个破落读书人家，“乡下无半亩之田，城内无一间之屋。”二十岁前，一直在长沙度过，住家“不知迁徙过多少次，但大抵不出南门的一角”。这就是他在家乡活动的范围。他跟湖南的空间关系虽然很少，但在精神上，他显然感染了那种强烈的“大湖南主义”。这种湖南本位的思想，不但使他一生中频频乐道谭嗣同、叶德辉、王壬秋、王先谦、皮锡瑞、杨度、黄兴、宋教仁、蔡锷等人，甚至齐白石、琼瑶、唐宝云等人，也都跟着沾了光。他近年写《黄兴评传》《宋教仁评传》，字里行间，都多少有一种“鸣不平”的味道，“不平”之事，本就该“鸣”了，又何况是湖南人的“不平”？左公左袒之，自更不在话下。
 
-左舜生在家乡念的是长沙师范，1913年（民国二年）到了上海。后来在震旦学院里，认识了不同班的同学曾琦。1918年（民国七年），“少年中国学会”成立，主事人有曾琦、王光祈、陈愚生（淯）、周无（太玄）、张尚龄（梦九）、李大钊（守常）、雷宝菁（眉生）等，由于曾琦的关系，王光祈南下拉左入会，左舜生便成了“少年中国学会”的会员。
+左舜生在家乡念的是长沙师范，1913 年（民国二年）到了上海。后来在震旦学院里，认识了不同班的同学曾琦。1918 年（民国七年），“少年中国学会”成立，主事人有曾琦、王光祈、陈愚生（淯）、周无（太玄）、张尚龄（梦九）、李大钊（守常）、雷宝菁（眉生）等，由于曾琦的关系，王光祈南下拉左入会，左舜生便成了“少年中国学会”的会员。
 
-“少年中国学会”曾出版两种刊物，一种是《少年中国》、一种是《少年世界》，左舜生曾担任过编辑。学会于1923年（民国十二年）后无形瓦解，会员大体分裂成两支：
+“少年中国学会”曾出版两种刊物，一种是《少年中国》、一种是《少年世界》，左舜生曾担任过编辑。学会于 1923 年（民国十二年）后无形瓦解，会员大体分裂成两支：
 
 一支是李大钊系，有恽代英、邓中夏（康）、毛泽东、刘仁静、张闻天、沈泽民、黄日葵、赵世炎、侯绍裘、杨贤江等，成为中国共产党的一路；
 
 另一支是曾琦系，有李璜、张梦九、左舜生、何鲁之、余家菊、陈启天、刘泗英（正江）、魏嗣銮、赵曾畴、陈登恪等，成为中国青年党的一路。
 
-青年党正式成立于1923年（民国十二年）12月2号，地点是法国巴黎。青年党的标帜是国家主义，实际上则是效慕法西斯主义，不外是主张“专制手段”、“激烈手段”救国那一套。这些言论和行动，从青年党党魁的遗著中和其他有关文件，我们不难发现。当时共产党的一个党小组也在巴黎，主事人是周恩来、李立三、李维汉（罗迈）、李富春、王若飞、陈毅、陈延年、赵世炎、蔡和森、任卓宣（叶青）等人，他们双方不乏分合水火的记录。青年党后来在宣传中，一再声言他们反共反得最早，并挖苦国民党联俄容共，其实话说开来，真可叫“大哥莫话小弟”，自己以法西斯的手法救国，还有什么好说？
+青年党正式成立于 1923 年（民国十二年）12 月 2 号，地点是法国巴黎。青年党的标帜是国家主义，实际上则是效慕法西斯主义，不外是主张“专制手段”、“激烈手段”救国那一套。这些言论和行动，从青年党党魁的遗著中和其他有关文件，我们不难发现。当时共产党的一个党小组也在巴黎，主事人是周恩来、李立三、李维汉（罗迈）、李富春、王若飞、陈毅、陈延年、赵世炎、蔡和森、任卓宣（叶青）等人，他们双方不乏分合水火的记录。青年党后来在宣传中，一再声言他们反共反得最早，并挖苦国民党联俄容共，其实话说开来，真可叫“大哥莫话小弟”，自己以法西斯的手法救国，还有什么好说？
 
 显然的，青年党在近代中国政治史中扮演的角色，是因人成事的跑龙套角色，投身在青年党的人，大体说来，一流人物，甚为少见，一流人物而以才思英敏姿态出现者，又更为少见。在这方面，左舜生显然是属于少见中的卓越个人。说他是老一辈青年党中最值得称道的人，也不为过。
 
@@ -1034,11 +1006,9 @@ WhilethereisasoulinprisonIamnotfree.
 
 左舜生对中国近代史，很早就有研究，民国十五年就出版《中国近代史资料》，二十二年又出版《中国近百年史资料续编》。内容虽被陈恭禄等苛诋，然仍不失为这一行中的一种开山文献。左舜生文字的特色是说理清楚生动，学术功力并不太深。设使左舜生这一辈子，少跑些龙套、多写些文章，成绩当不止此，而这部选集的内容，也就更要丰富了。
 
-1968年1月10日
+1968 年 1 月 10 日
 
-
-
-##绝子如不见
+## 绝子如不见
 
 绝子如不见：
 
@@ -1052,7 +1022,7 @@ WhilethereisasoulinprisonIamnotfree.
 
 刚才在电话里告诉杏如，叫她好好管住你，不要交李敖这种坏朋友。你太“天真活泼”，这年头“天真”就不要“活泼”，“活泼”就别“天真”。换言之，“天真”就要槁木死灰；“活泼”就该老奸巨猾。你够老却不够奸，够巨却不够猾。回家抱住老婆即新娘子，好好想想我的话。
 
-敖之1979年8月22日
+敖之 1979 年 8 月 22 日
 
 附录
 
@@ -1086,13 +1056,11 @@ WhilethereisasoulinprisonIamnotfree.
 
 敖之泻肚，半生著作已等身。
 
-梦公10月3日
+梦公 10 月 3 日
 
-《中国时报》1979年10月17日
+《中国时报》1979 年 10 月 17 日
 
-
-
-##伤心之地的文学
+## 伤心之地的文学
 
 ——我看《台湾文学全集》
 
@@ -1104,11 +1072,9 @@ WhilethereisasoulinprisonIamnotfree.
 
 李鸿章把台湾割给日本，他痛苦地说，台湾是“伤心之地”。“光复前台湾文学”，不是台湾地区的文学，是全世界被侮辱与被损害者的文学——是伤心之地的文学。
 
-1979年7月
+1979 年 7 月
 
-
-
-##为他有那样的敌人而爱他
+## 为他有那样的敌人而爱他
 
 有的人吸引人，并不全靠他本人吸引人，有时候，因为他有了受人讨厌的敌人而变得吸引人。
 
@@ -1122,7 +1088,4 @@ WhilethereisasoulinprisonIamnotfree.
 
 美国布瑞格（EdwardS.Bragg）将军支持克利夫兰（GroveCleveland），在演说中指出：“人们为他有正直、卓见和刚毅而爱他；为他有那样的敌人而爱他爱得要命。”（Theylovehim……forhisintegrityandjudgmentandironwill；buttheylovehimmostfortheenemieshehasmade.）这句名言，后来转成为第一人称“我们为他有那样的敌人而爱他”（Welovehimfortheenemieshehasmade.）后人读来，可真够味儿。
 
-1979年6月
-
-
-
+1979 年 6 月
