--- a/02.精品散文类/波波颂.md
+++ b/02.精品散文类/波波颂.md
@@ -1,4 +1,8 @@
-#《波波颂》目录
+# 《波波颂》目录
+
+<!-- toc -->
+
+## 目录
 
 * 《波波颂》自序
 * 一、对自然要自然
@@ -55,9 +59,7 @@
 * 五二、魂牵梦萦贝克特
 * 五三、索尔仁尼琴错在哪儿？
 
-
-
-##《波波颂》自序
+## 《波波颂》自序
 
 《波波颂》出版前，先有广告如下：
 
@@ -73,9 +75,7 @@
 
 1990年9月25日
 
-
-
-##对自然要自然
+## 对自然要自然
 
 昨天收到你1日的信。你写看到秋天枯叶遍地，增添凄凉感伤一段，我另有不同的看法。
 
@@ -99,9 +99,7 @@
 
 月冷寒江静，心头百念消。欲眠君照我，无梦到明朝。
 
-
-
-##与阳光有约
+## 与阳光有约
 
 每天午饭后，到下午开始做运动前，有两个多小时特别安静的一段时间，比夜里还安静，因为经常梦魇的邻居们午睡时倒不叫。我认为午睡是浪费，所以从来不睡午睡。所以我特别能清醒的独占这两个多小时的特别安静。本来每天二十四小时都属于我，但这两小时好像更属于我，尤其是星期天的这两小时。
 
@@ -113,9 +111,7 @@
 
 1973年12月9日狱中作
 
-
-
-##时不我与，我不与时
+## 时不我与，我不与时
 
 因为太久太久没有钟也没有表，甚至没有计时烛（markedcandle），没有滴漏（clepsydra），也没有沙漏（hourglass），看时间的习惯已经退化。你无法准确的知道时间有多短或有多长，你开始没有一分钟、没有五分钟、十分钟……没有一小时、两小时。任何完整的时间感已经没有了。代替准确时间的，只是一些模糊的大段落：邻居早起者的声音，大概是5点多；早饭推进来，大概是6点半；午饭推进来，大概是11点；又是塑胶小壶来，大概是2点半；晚饭推进来，大概也推进了5点（17点）；6点起身和9点（21点）入睡的两次音乐通知是一天中最准确的两次，9点过后，擦地、洗脸、铺被、看书等，总拖到大概10点才睡。自己好像一个大沙漏，从起身到入睡，十六七个小时正好漏完。
 
@@ -127,9 +123,7 @@
 
 1973年12月23日午后狱中作
 
-
-
-##用冰冷表现洁白
+## 用冰冷表现洁白
 
 二十五年没见过雪，这次久别重逢，你的感觉自然是深刻动人的。你说“假如人的品德能像雪那样的洁白，心地不像雪那么冰冷该有多好”，但你有没有注意到，有些洁白，却正用冰冷来表现？
 
@@ -145,9 +139,7 @@
 
 1974年1月11日狱中作
 
-
-
-##朋友的没落
+## 朋友的没落
 
 时代变了，朋友的定义好像也不同了。对某些行业的人说来，朋友是奢侈品。
 
@@ -167,9 +159,7 @@
 
 1974年5月4日狱中作
 
-
-
-##活在湿度计里
+## 活在湿度计里
 
 为了使光线好一点，为了干净一点，我买了两刀稿纸，来糊四面斑驳的墙，印格子的一面朝墙，四边抹糨糊，贴上去，立刻弄平。从最下面贴起，墙与地板接缝处露缝宽窄不一，先用桥牌拦腰一摺，成九十度角，一边贴墙上，一边贴地板上，再盖上稿纸，一张稿纸可盖住四张半桥牌。桥牌也是正面朝墙，于是自王（King）到后（Queen）和什么保皇党贾克（Jack）等，都像法国路易十六（LouisXVI）和玛丽安托内特（MarieAntoinette）等等一样，都完了。糨糊干了的时候，稿纸就绷得很平。大功告成以后，一行行稿纸背面，白里透绿，一个个小格子都衬出来，每个格子都是空白的，就好像每天的生活一样。
 
@@ -179,9 +169,7 @@
 
 1974年6月2日夜狱中作
 
-
-
-##孤独与鬼
+## 孤独与鬼
 
 我想到“老僧闭关”时的孤独情味。
 
@@ -193,9 +181,7 @@
 
 1974年7月7日夜狱中作
 
-
-
-##论坐牢的好处
+## 论坐牢的好处
 
 坐牢的坏处有五百种，但是也有五种好处：
 
@@ -211,9 +197,7 @@
 
 1981年7月19日
 
-
-
-##“显性伪君子”和“隐性伪君子”
+## “显性伪君子”和“隐性伪君子”
 
 耶稣虽然爱人，但对一种人却痛恨不已，这种人，就是“伪君子”。在《新约》中，我们可以一再看到耶稣痛恨这种人的话。伪君子的问题，对人类说来，是个又老又大的问题。希腊谚语说：“伪君子生着一张总主教的脸，却有着一颗磨坊主人的心。”如果一个人没有总主教的脸，只有磨坊主人的脸，加上磨坊主人的心，这种人，不算伪君子。只有戴上总主教的面具的，才算伪君子。伪君子的可恶，不在他不是好东西；他的可恶，在他不是好东西却冒充好东西。不是好东西只是“真小人”，冒充好东西就是“伪君子”了。在品级上，真小人要比伪君子诚实得太多了、漂亮得太多了。
 
@@ -239,9 +223,7 @@
 
 1981年
 
-
-
-##“三毛式伪善”和“金庸式伪善”
+## “三毛式伪善”和“金庸式伪善”
 
 有一次，皇冠的平鑫涛请我吃饭，由皇冠的几位同仁作陪，我到了以后，平鑫涛说：“有一位作家很仰慕李先生，我也请她来了，就是三毛。”于是他把三毛介绍了给我。
 
@@ -261,9 +243,7 @@
 
 1981年作
 
-
-
-##呜呼新女性
+## 呜呼新女性
 
 人一有好的条件就难免不知天高地厚，但这种不知天高地厚，发生在男人身上和发生在“新女性”身上，程度就完全不一样。男人可能有五分好条件，就自我膨胀为十分不知天高地厚；可是“新女性”可能有五分好条件，就自我膨胀为五十分不知天高地厚。结果呢，所有有好条件的“新女性”，下场大都很悲惨，都因为她们不知天高地厚而把她们已经到手或可以到手的幸福亲手毁灭掉。
 
@@ -293,9 +273,7 @@
 
 1982年3月18日
 
-
-
-##小公猴与小母狗
+## 小公猴与小母狗
 
 下午散步，看到一个小公猴在笼子里，面目干净而清秀，脖子上还绑了一条铁链。我从几个角度去想跟它四目相对，但它有一股苍茫的骄傲、羞怯与冷漠——它总是一股目中无人的样子，不肯看我。我想起我在狱里时，别人来“参观”时候我的表情，我不禁对这小公猴顿起一股同情与同调。
 
@@ -303,9 +281,7 @@
 
 1982年9月8日
 
-
-
-##人到底该怎么选择？
+## 人到底该怎么选择？
 
 小痴兄：
 
@@ -347,9 +323,7 @@
 
 敖之1982年9月14日
 
-
-
-##爱丽丝与新党
+## 爱丽丝与新党
 
 十七年前，我写《〈蒋廷黻选集〉序》（《李敖全集》第三册），谈到1949年组织新党的事，我结论说：
 
@@ -365,9 +339,7 @@
 
 1982年10月23日
 
-
-
-##别弄拧了堂吉诃德
+## 别弄拧了堂吉诃德
 
 这次索尔仁尼琴到台湾来，有人说他像堂吉诃德（DonQuixote），这种比喻，显然对堂吉诃德太不了解了。
 
@@ -383,9 +355,7 @@
 
 1982年11月17日
 
-
-
-##我是圣人
+## 我是圣人
 
 妮娜：
 
@@ -399,9 +369,7 @@
 
 “仁爱教育实验所”学长李敖，1982年12月12日
 
-
-
-##论“向将军道歉”
+## 论“向将军道歉”
 
 在美国的一次酒会上，美国驻日大使格鲁做司仪，他一时粗心，把艾森豪威尔将军的夫人玛咪，称做马歇尔将军夫人。当时艾森豪威尔将军、马歇尔将军和所有宾客都笑起来。格鲁大窘，赶忙说：“我要向将军道歉！”玛咪反应快，即时打趣他说：“向哪一位〔将军〕道歉啊？”此言一出，大家笑得更厉害了。向将军道歉的格鲁，更窘上加窘了。
 
@@ -477,9 +445,7 @@
 
 （附记）国民党垄断的报纸，是不登党外的广告的。但这次《生根》的道歉广告，国民党却大登特登，国民党“与人为善”“闻过则喜”，竟一至于此！
 
-
-
-##皮尔逊与黑资料
+## 皮尔逊与黑资料
 
 1983年8月4日，在《生根》杂志社社长吴乃仁，被迫向警备总司令陈守山将军道歉之后，我批评吴乃仁和陈守山，写了《论〈向将军道歉〉》（收在“李敖千秋评论号外”第二期《开枪斗牛蛋》），举了一个故事，我说：
 
@@ -501,9 +467,7 @@
 
 1985年10月8日午
 
-
-
-##别孵那贼蛋！
+## 别孵那贼蛋！
 
 ——第六层巢在等我们
 
@@ -533,9 +497,7 @@
 
 1983年9月5日晨以一小时半写成
 
-
-
-##“把李敖‘流’去大陆”
+## “把李敖‘流’去大陆”
 
 台美基金会来信
 
@@ -573,9 +535,7 @@
 
 过去中农学院院长王志鹄，曾建议将胡适空投大陆；我入狱时，《新闻天地》曾建议送李敖去大陆。此皆国民党之“流刑”也！（1979年7月12日）
 
-
-
-##波波颂
+## 波波颂
 
 我是不过旧历年的，但是朋友要过。朋友离开台北几天，知道我照样工作，不会乱跑，特以其宠物波斯猫相托，代为照顾吃喝拉撒睡，我就答应下来了。
 
@@ -621,9 +581,7 @@
 
 〔附记〕《世说新语-容止篇》描写曹操（魏武）说：“魏武将见匈奴使，自以形陋，不足雄远国，使崔季珪代，帝自捉刀立床头。既毕，令间谍问曰：‘魏王何如？’匈奴使答曰：‘魏王雅望非常；然床头捉刀人，此乃英雄也！’魏武闻之，追杀此使。”这真是个有趣的小故事。
 
-
-
-##能下床就是好猫
+## 能下床就是好猫
 
 《伊索寓言》里有一条“猫和爱神”，说一只猫爱上一位美男子，请求爱神把它化成美女，爱神答应了。化成美女后，美男子喜欢上它，就和它结婚。当天晚上，爱神要试试猫变美女后，是否还猫性没改，乃在卧室中放出老鼠一只。美女一见之下，故态复萌一跃下床，直追老鼠。爱神大失所望，只好把美女再恢复成猫。寓言的教训是：“本性胜过教养。”（Natureexceedsnurture.）
 
@@ -635,9 +593,7 @@
 
 1984年2月12日
 
-
-
-##“本姑娘也点一个”
+## “本姑娘也点一个”
 
 有人以为历来女人不论在床上床下，一直压在男人下面，这是不正确的。女人曾有过压人的时代，只是那种风光，后来被男人反压了。到了18世纪以后，女权运动逐渐形成，于是女人开始夺权。女人夺权，在某些争平等的目标上是好的，不幸的是，女人在争平等时，常常得意忘形，为打倒“大男人主义”而沦为“大女人主义”，她争平等，却不与人平等相处，最要命的，她又想压人，要以“行同男人”的愚蠢来压男人，于是，一切器小易盈的局面，便一一发生。雷克洛（J.Leclercq）教授在他的专书里，指出新女性“以行同男人为新理想，可是这种行为，反倒害了女人。因为女人要行同男人，只能做个失败的男人”。
 
@@ -645,9 +601,7 @@
 
 1984年2月20日晨
 
-
-
-##古董与今董
+## 古董与今董
 
 我小时候住在故都，对古董有所见闻，我又是学历史的人，对古董的了解，自然又高出别人。和胡茵梦在一起的时候，胡茵梦好古董，我随喜之，但只是陪美人玩物而已，绝不丧志。胡茵梦就像是20世纪的古董，有她在，复有何玩？何况台湾比起故都来，实在是文物边陲，所谓古董，实不足论。此地有所谓中国文物爱好名家，事实上，只是一些文物外行。试以郭良蕙而论，郭良蕙者，新女性又复女作家者也，竟俨然成为陶瓷家。外行当道，竟一至于此！1981年7月，她在《艺术家》杂志写了一篇专文，文中大放厥词，把一件宋朝窑枕上面刻的唐朝白居易的诗：“时难年荒世业空，弟兄羁旅各西东。田园寥落干戈后，骨肉流离道路中。吊影分为千里雁，辞根散作九秋蓬。共看明月应垂泪，一夜乡心五处同。”误作为宋人“不具真名诗人”的作品，并大放其屁，说这个价值七千美元的窑枕，单单以此感人肺腑的“宋代诗文”，便值回票值了。白居易这首诗是最普通的一首唐诗，见于《唐诗三百首》，但是郭良蕙都不知道，这种对中国文化如此不及格的人，竟成为此地中国文物爱好名家，国民党统治下的附庸风雅，能不笑死人吗？
 
@@ -661,9 +615,7 @@
 
 1984年3月6日清晨
 
-
-
-##天堂不是我们的
+## 天堂不是我们的
 
 ——鸡犬升天，猫在哪里？
 
@@ -687,9 +639,7 @@
 
 ①《抱朴子》上有这样一段：“若且欲留在世间者，但服半剂而录其半。……不死之事已定，无复奄忽之虑，正复且游地上，或入名山。……彭祖言：‘天上多尊官大神，新仙者位卑，所奉事非一，但更劳苦。’故不足役役于登天，而止人间八百余年也！……笃而论之，求长生者，正惜今日之所欲耳，本不汲汲于升虚，以飞腾为胜于地上也！若幸可止家而不死者，亦何必求于速登天乎？”若戏言之，彭祖在人间活八百岁还不肯上天堂，显然是袭白石先生之故智了。这里所说“但服半剂而录其半”，就是《太平广记》所说的“不乐升天，但服半剂为地仙，恒居人间”之意。“半剂”就是只吃一半仙丹，仙丹若全吃了，就升天了，只吃一半，就在人间长寿，做地上之仙。
 
-
-
-##用替身可也！
+## 用替身可也！
 
 今年2月号《花花公子》（Playboy）杂志有漫画一幅，画修道院中洋和尚师徒对面打坐，结果师父以假象示人，真身却在背后偷睡。这一图画，使我想起顾恺之。
 
@@ -709,9 +659,7 @@
 
 1984年6月27日
 
-
-
-##美国人忘了什么？
+## 美国人忘了什么？
 
 ——寄美国在台协会文化中心的头儿
 
@@ -733,9 +681,7 @@
 
 李敖1984年8月16日
 
-
-
-##神像百年一感
+## 神像百年一感
 
 今年7月3至6日，就是美国纽约自由女神像一百年了。美联社的消息说，在庆典活动上，将动用多架直升机、二百三十艘辅助船、六千五百名警察联合警戒。美国总统里根将在7月3日重新点燃神像上的火把，象征维护自由云云。
 
@@ -747,9 +693,7 @@
 
 1986年6月29日晨
 
-
-
-##纵裸女战斗
+## 纵裸女战斗
 
 佛教里观音的造型，在一般习惯是女性。一般善男信女，都以为观音是女的，但一般稍通佛理的人，却说观音不是女的，只不过看起来像女人而已，观音实际“男人女身”，根本是男的。这个观音是男是女的糊涂账，所以发生，是由于一般人不看书的缘故，其实观音是男是女，早在《琅嬛记》里有了精巧的解释：
 
@@ -777,9 +721,7 @@
 
 1984年9月24日晨
 
-
-
-##陶潜者，今之我也
+## 陶潜者，今之我也
 
 4至5世纪的陶潜，在刘裕篡晋以后，把名字陶渊明改为陶潜，他不用刘宋的年号，表示了他的不合作主义。
 
@@ -795,9 +737,7 @@
 
 1985年7月11日晨
 
-
-
-##国民党和它同路人的知识水平
+## 国民党和它同路人的知识水平
 
 白纸黑字的错误有三种：第一种是“手民之误”，是排字先生的误植；第二种是“笔误”，是作者自己的误写，承认了也无妨，不承认，推给手民先生，当然更佳；第三种最要命，绝非“手民之误”或“笔误”，而是自己怎么赖也赖不掉的错误，这种错误，是不容分说的、没什么见仁见智的，把“冯京”写成“马凉”、把“银河”（MilkyWay）翻成“牛奶路”、把张飞大战了尉迟恭，这种粗心、这种马虎，可以被原谅，可是不能不被识者所笑、被大方之家所笑。“哀矜而勿喜”是好的，但不妨碍寻寻开心、逗个乐子，字面上戏套《诗经》的话，这叫“谑浪笑敖，中心是悼”。这篇文章，在随手举出一些国民党和它同路人的第三种错误，用来检查他们是如何不学，不学还不知藏拙，还要暴殄文字、附庸风雅。我这篇心存忠恕、文存消遣的小手笔，在用纯证据驳倒纯错误，使大家警惕一——下一写文章要细心、要量力，笔杆不是那么好耍的！
 
@@ -883,9 +823,7 @@
 
 1985年12月6日夜12时
 
-
-
-##再记国民党和它同路人的知识水平
+## 再记国民党和它同路人的知识水平
 
 我在“千秋评论”第五十一期里，发表了一篇《国民党和它同路人的知识水平》，列举蒋介石、萨孟武、曾宝荪、钱穆、余英时、叶庆炳、郎裕宪、杨国枢、冷欣、何凡等十个人在知识上所闹的错误和笑话。现在再列举一些。
 
@@ -931,9 +869,7 @@
 
 1986年12月5日晨
 
-
-
-##优先反叛，干死他们
+## 优先反叛，干死他们
 
 李昂致李敖
 
@@ -967,9 +903,7 @@
 
 李敖1985年12月25日
 
-
-
-##李老哥手复
+## 李老哥手复
 
 申虹老弟也如晤：
 
@@ -983,9 +917,7 @@
 
 李老哥手复，1986年1月23日
 
-
-
-##“燕京大学新闻系毕业”？
+## “燕京大学新闻系毕业”？
 
 ——妇产科医生林永丰
 
@@ -1031,9 +963,7 @@
 
 〔附记〕说张继高是燕京大学毕业的，如果只是中华书局出版的《中华民国当代名人录》一本书这样说，也就视作笔误算了。事实上，许多有关张继高的书都是这样说的。例如1981年11月出版的《21世纪世界彩色百科全书》（蔡辰男发行的）就说他是“燕京大学毕业”；1982年1月国民党《黄河》杂志就说他是“燕京大学新闻系毕业”；1982年6月中国名人传记中心出版的《中华民国现代名人录》就说他是“燕京大学新闻系毕业”……可见众口一声，积非成是，实在不能以笔误视之了。
 
-
-
-##吴心柳冒充大学毕业
+## 吴心柳冒充大学毕业
 
 ——致妇产科医生林永丰的信
 
@@ -1053,9 +983,7 @@
 
 敖之1986年7月11日
 
-
-
-##童子功加老子功
+## 童子功加老子功
 
 施珂大哥：
 
@@ -1071,9 +999,7 @@
 
 敖之1986年4月8日
 
-
-
-##“你做成我的梦”
+## “你做成我的梦”
 
 ——给王荣文的信
 
@@ -1101,9 +1027,7 @@
 
 总之，人生百年，缘归一梦，猿鹤虫沙，例皆尘土，但在百年孤寂之后、尘土长封之时，总希望有些永存的功业与交情留为雪泥爪印。这些雪泥爪印，我不知道我能留下多少，但即使不多，我想也有你老弟的一份。真要谢谢你！
 
-
-
-##探探和事佬的底
+## 探探和事佬的底
 
 19世纪山阴南菁书院的山长——大儒黄以周，在屋里墙上写了八个大字：“实事求是，莫作调人。”调人就是和事佬。人间的纠纷事，并非不可和，但要和得有立场、有原则、有主张，并不是和稀泥，和稀泥就不是“实事求是”。做“调人”的，如果不能在“实事求是”标准下达成调和的使命，这种“调人”是要不得的。不幸的是，大凡做“调人”的，做来做去，很少不对“实事求是”的真理造成伤害，结果总是以和事之“老”收场，人一成为“老”，其身份可知矣！
 
@@ -1141,9 +1065,7 @@
 
 1986年6月10日以三小时一气写成
 
-
-
-##介绍托斯基大作
+## 介绍托斯基大作
 
 ——《醉翁亭记》仿作也
 
@@ -1161,9 +1083,7 @@
 
 （“托斯基”，就是“苦苓”，当年文网太密，他不敢用“苦苓”写这种文章，所以化名“托斯基”。现在戒严已解，“托斯基”可以见天日了。1990年6月1日李敖附记。）
 
-
-
-##顺风与逆风
+## 顺风与逆风
 
 ——复陈淑华
 
@@ -1183,9 +1103,7 @@
 
 李敖1986年9月7日
 
-
-
-##我最佩服以色列人
+## 我最佩服以色列人
 
 维桢：
 
@@ -1215,9 +1133,7 @@
 
 敖之1986年11月19日夜
 
-
-
-##腰斩两次与再加两枪
+## 腰斩两次与再加两枪
 
 无知的国民党政工出身的万年“立委”费希平，1982年10月16日，在《政治家》第三十九期上，发表《亟待澄清的观念差距》说：
 
@@ -1237,9 +1153,7 @@
 
 1987年2月12日
 
-
-
-##打碎玉壶也是冰
+## 打碎玉壶也是冰
 
 维桢：
 
@@ -1285,9 +1199,7 @@
 
 敖之1987年2月13日午
 
-
-
-##拳王的索寞
+## 拳王的索寞
 
 绰号“褐色轰炸机”（BrownBomber）的重量级拳王乔路易斯（JoeLouis），从1937年到1949年，独霸拳坛十二年。他在三十多年前，到台湾做过一次表演赛，美中不足的是：在众目睽睽之下，竟然没有可堪一击的对手能配他一战，他在台上，表情只是一片索寞。一个不量力的美国军官颇有拳名，上台跟乔路易斯比划，可是拳未伸出，人已被撂倒，乔路易斯表情继续索寞——他索寞，因为在这个岛上，没有真正可堪一击的“敌人”。
 
@@ -1299,9 +1211,7 @@
 
 1987年3月31日午
 
-
-
-##想起施洗者约翰
+## 想起施洗者约翰
 
 想起施洗者约翰（JohntheBaptist）。
 
@@ -1317,9 +1227,7 @@
 
 1987年6月17日
 
-
-
-##以得礼始，以失礼终
+## 以得礼始，以失礼终
 
 棣华：
 
@@ -1339,9 +1247,7 @@
 
 〔附告〕我可不像谢东闵那样笨，我从不亲拆包裹，所有包襄都由我的一个IQ零蛋的“敌人”代拆，任何炸弹都炸不到我。当然你不会寄炸弹，所以附告者，戏言耳！
 
-
-
-##文人之雄
+## 文人之雄
 
 ——潘毓刚
 
@@ -1363,9 +1269,7 @@
 
 敖之1988年1月7日
 
-
-
-##“平生之志，不在温饱”
+## “平生之志，不在温饱”
 
 宋朝魏泰的《东轩笔录》里，有一条记王曾（沂公）的故事。王曾状元及第，翰林学士刘筠（子仪）向他开玩笑说：“状元试三场，一生吃着不尽。”不料王曾却板着脸回答说：“曾平生之志，不在温饱！”
 
@@ -1387,9 +1291,7 @@
 
 1988年8月2日
 
-
-
-##一生不得为人师
+## 一生不得为人师
 
 ——寄车之鉴
 
@@ -1403,9 +1305,7 @@
 
 李学长1988年11月26日晨
 
-
-
-##跑出来的理由
+## 跑出来的理由
 
 二十年前，李翰祥请我到他家打梭哈，骆明道等在座，一起玩得高兴。李翰祥牌打得好，去取之间，纵横捭阖，极见功夫。有一道牌，骆明道出了钱，事后李翰祥摊开双方的牌，说按牌理你骆明道没有这样出钱的理由，请你说说你的理由看。骆明道大而化之，一时也说不出为什么这样出了钱，有一点窘。打完牌后，骆明道坐我的车回家，路上大笑，说：“翰祥真荒唐，玩牌就是玩牌嘛，谁还要花脑筋找什么理由！”骆明道这番话，当时我也一笑置之，后来所见人间万象已多，发现也不无至理在，因为理由、理由，无须别寻理由的事，人间也有很多，又何必一定找理由呢？许多事，理由是“不证自明的”（self-evident），理由就在单纯的、原始的本义之中，又何必巧立名目呢？
 
@@ -1425,9 +1325,7 @@
 
 1989年1月22日
 
-
-
-##魂牵梦萦贝克特
+## 魂牵梦萦贝克特
 
 我是学历史的人，在独与天地精神往来的当儿，会有一些历史人物，不可思议的进入我的意识里，令我神往，令我对他们别有灵犀，而起古今同调之感、异代遥怜之悲。这些人中，在我出世前七百六十五年死去的那位英国殉道者托马斯贝克特（ThomasBecket），就是最使我魂牵梦萦的一位。
 
@@ -1441,9 +1339,7 @@
 
 1989年3月20日
 
-
-
-##索尔仁尼琴错在哪儿？
+## 索尔仁尼琴错在哪儿？
 
 在西方民主社会里日渐过气的索尔仁尼琴，到了台湾，突然被奉为至宝，大大的风光了十一天，全世界肯用43辆车队追逐他的，除了这个地方，又到哪儿去找？难怪他活像大独裁者出巡一般的，踌躇满志了。最后，号称分文不取的他，拿了5000美金走路。12月10日，东京来的消息证实了他的确拿了钱，于是，在他使我们倒胃这么多天以后，我们最后，可真要吐一次了。
 
@@ -1484,6 +1380,3 @@
 让我们对左拉、对卡沙斯致敬，有了他们第一流的，对任何第二流的，我们都不必失望。索尔仁尼琴证明了自己是二流货，因为第一流的，是不会这样来，也不会这样去的。
 
 1982年11月11日夜
-
-
-
