--- a/02.精品散文类/独白下的传统.md
+++ b/02.精品散文类/独白下的传统.md
@@ -1,4 +1,8 @@
-#《独白下的传统》目录
+# 《独白下的传统》目录
+
+<!-- toc -->
+
+## 目录
 
 * 一、快看《独白下的传统》
 * 二、直笔——“乱臣贼子惧”
@@ -22,9 +26,7 @@
 * 二十、一种失传了的言论道具
 * 二一、记一个不合作主义者
 
-
-
-##快看《独白下的传统》
+## 快看《独白下的传统》
 
 写这本书的目的，是帮助中国人了解中国，帮助非中国人——洋鬼子、东洋鬼子、假洋鬼子——别再误解中国。
 
@@ -138,9 +140,7 @@
 
 1979年经年累月足不出户之日在台湾写
 
-
-
-##直笔——“乱臣贼子惧”
+## 直笔——“乱臣贼子惧”
 
 孔夫子活的时候，天下大乱了，其实天下永远是大乱的。
 
@@ -290,9 +290,7 @@
 
 提倡写“直笔”的孔夫子，当他竟也骗人，写了“曲笔”的时候，历史上，也留下他的纪录。历史是不讲感情的，讲感情便不是真历史。历史只讲求真相，由求真的人，不断的、千方百计的记载它的真相。古往今来，许多坏蛋们想逃过历史、改变历史，可是他们全部失败了。历史是一个话匣子，坏蛋们怕人说话，可是历史却说个没完。坏蛋们真没法子。
 
-
-
-##避讳——“非常不敢说”
+## 避讳——“非常不敢说”
 
 五代时候，有一个号称“长乐老”的大臣，叫做冯道，他又字“可道”。这个人在遇到危难的时候，别人着急，他却自自在在。他很俭朴，一点也没有大官的架子，他跟仆人们一起吃饭，吃同样的东西。有的凶狠的将军们，抢来漂亮女人，送给他，他表面上收下，骨子里却把漂亮女人送还她自己的家里去。在五代的纷乱局面里，他跟过四个姓的朝代，在十个皇帝手下做过大臣。他的人生观是“莫为危时便怆神，前程往往有期因”，他永远是乐观而机智的。当契丹灭了后晋这个朝代，冯道也跟着跑到契丹的朝廷里，契丹的皇帝骂冯道说：“你跑来干嘛？”冯道说：“我们没有城，也没有兵，打不过你们，怎么敢不来？”契丹的皇帝是野蛮人，要把中国人一城一城的杀光，可是自从冯道投降后，契丹的皇帝便放弃了这种野蛮的手法，因为他接受了冯道的巧妙劝说，冯道的智慧太高了，外国头脑简单的皇帝，不得不听他的。
 
@@ -374,9 +372,7 @@
 
 中国在走入20世纪以后，慢慢的，也学会了用一个尊敬的人的名字了，也慢慢知道这并不是不可以的事了。“中山县”、“立煌县”、“罗斯福路”、“麦克阿瑟公路”等等，都是这种转变的证明。时代毕竟是进步的，中国也不知不觉的在进步。在进步过程中，一切落伍的旧习惯，都必须被抛弃。在没有忌讳的新时代里，一切旧的忌讳，都将是历史的陈迹。让我们了解它，可是不要再复兴它。
 
-
-
-##谏诤——“宁鸣而死，不默而生！”
+## 谏诤——“宁鸣而死，不默而生！”
 
 中国古代的政府是专制政府，专制政府的代表人是皇帝。
 
@@ -468,9 +464,7 @@
 
 〔附记〕有人拿谏诤事实与制度，来比拟言论自由的事实与制度，这是比拟不伦的。谏诤与言论自由是两回事。甚至谏诤的精神，和争取言论自由的精神比起来，也不相类。言论自由的本质是：我有权利说我高兴说的，说的内容也许是骂你、也许是挖苦你、也许是寻你开心、也许是劝你，随我高兴，我的地位是和你平等的；谏诤就不一样，谏诤是我低一级，低好几级，以这种不平等的身份，小心翼翼的劝你。
 
-
-
-##传令——全国大跑马
+## 传令——全国大跑马
 
 古代皇帝常常向四方诸侯发命令，命令很多、很怪。
 
@@ -598,9 +592,7 @@
 
 对增加传达命令的速度，中国古人曾有过美丽的幻想。旧小说《水浒传》中，曾说有一个叫戴宗的人，外号叫“神行太保”。因为他有一种秘密的魔术：他有一种叫做“甲马”的小东西，当把两个“甲马”绑在腿上，再做起“神行法”的法术，一天便能走五百里路；若把四个“甲马”绑在腿上，再做起“神行法”来，一天便能走八百里路。至于说把八个“甲马”绑在腿上是不是能走一千六百里路，《水浒传》中没有交代清楚，我们就不好乱猜了。就算是一天能走一千六百里路，又如何呢？在现代科学的高速进步下，一天一千六百里，已经是一个可笑的小数字了；但对我们善于幻想的古人说来，却已是一个不能想像的伟大速度。在制造速度一方面，我们的老祖宗留下一个落伍的纪录，在清朝末年的一件事情上，表现得最为明显。当清朝的大臣、曾国藩的儿子曾纪泽到俄国去，他的报告由电报打到上海，时间只花了一天；可是这个报告再由上海朝北京转，就要花十天的工夫，因为上海北京之间，没有电报，只有船和马。这件事，使当时大臣李鸿章起了大念头，他立刻要求政府赶快设立电报局。从那个时候起，我们的国家，才开始多了滴滴答答的电报声，少了嗒嗒嗒嗒的马蹄声。那个时候，已是公元1879年，距离发明电报的日子，已经晚了四十多年了！四十多年是一个多么教人落伍的日子呵！
 
-
-
-##新闻——报纸像杂志
+## 新闻——报纸像杂志
 
 现代人早上一起来，就看报，一看报，就知道日本皇帝怎么了；下午一睡醒，又看报，一看报，就知道日本皇帝的老婆（学名皇后）又怎么了。现代人所要知道的事，从报纸上，一看就知道了。昨天地球上北极发生的事，今天地球南极的人就知道了；早上美洲发生的事，下午亚洲就知道了。消息的传达快极了。
 
@@ -696,9 +688,7 @@
 
 现在我们所看的报纸，都是前面这些“老祖宗报”以后的产品，所以只是一些“小孙子报”。这些“小孙子报”的最大特色，就是它的版面变大了，大得像一张报，而不再像一本杂志。现在如果你有机会，看到“老祖宗报”的时候，你绝对不会以为那原来是一份报，你一定以为那是一本杂志，其实那才是报——道道地地原原本本的报，你可别认错了。
 
-
-
-##征兆——来头可不小
+## 征兆——来头可不小
 
 中国人几千年来有一个大传说，人人都信。
 
@@ -820,9 +810,7 @@
 
 征兆是中国人五千年来的只此一家大传统，当然也是五千年来只此一家的大骗局。它的历史太深了、太远了。深远得变成了一个坚固的骗人公式，大家一提到某某名人，就会公然用公式套他一下，明知是鬼话，可是谁也不敢说破，只要有利，谁也乐得相信，或者教别人相信。你别以为这些是历史了，才不呢，就是这套大哲学，使中华民国袁大总统世凯先生抛弃了总统，想改行当皇帝，为了他相信他自己曾以“五爪大金龙”的正身，睡在过床上。“真龙转世”的大哲学，在上为帝王将相，在下为王元龙李小龙，以至看相摸骨的龙海山人，人人都多少反射到。你老兄一定也有这种传统的荒谬反射，不然的话，你为什么老是在浴室镜子里，偷偷看你“主贵”的那颗痣？
 
-
-
-##吃人——动物吃人，人也吃人
+## 吃人——动物吃人，人也吃人
 
 你一定看过中国的一部小说《水浒传》，《水浒传》第二十六回是——
 
@@ -946,9 +934,7 @@
 
 总之，吃人肉，不管是什么理由，都是一件荒唐的事情，真没想到这种荒唐的事情，竟在中国历史上，有着那么多的血淋淋的记录。现在人唱《满江红》，唱到“壮志饥餐胡虏肉，笑谈渴饮匈奴血”，竟然洋洋自得，大概是传统老毛病的发作吧？不然的话，怎么这样莫名其妙？
 
-
-
-##喝酒——喝也不行，不喝也不行
+## 喝酒——喝也不行，不喝也不行
 
 清朝乾隆皇帝的时候，主编《四库全书》的大文人纪昀（晓岚），是一个大幽默家。他长得很怪：大秃头、大鼻子、大耳朵、一对三角眼睛、两行细眉毛——好像隔壁那少奶奶一样。有一次，一个大富翁造了一幢大房子，听说纪昀很有名气，特地请他为这幢大房子起个名字。纪昀打听出来这个大富翁本是铁匠出身，后来发了财，十足一个暴发户，暴发户附庸风雅，他认为是可笑的。于是，他提起毛笔，为这幢房子起了一个名儿——“酉斋”。
 
@@ -1074,9 +1060,7 @@
 
 历史上，用酒来办事、来避祸的例子也很多。曹参为了怕官吏打扰老百姓，整天喝酒示范，表示我们做官的，只要喝酒就好了，别去找老百姓麻烦；陈平也为了对政事不表示意见，整天喝酒装糊涂。很多人很多人，他们在酒中得到了真理与存在。历史上禁酒的工作都没有成功，也永远不会成功，因为酒——如果喝得好、喝得少、喝得巧，到底是一个不会出卖你的朋友。
 
-
-
-##音乐——华夷交响乐
+## 音乐——华夷交响乐
 
 你高兴的时候，除了吃牛肉干以外，是不是还会哼呀哼的，哼个不停？
 
@@ -1086,7 +1070,7 @@
 
 四只猫，会喵喵叫；四只狗，会汪汪叫；四个人，会喵喵叫也会汪汪叫，可是他们不甘心学猫叫狗叫，他们觉得那样叫太单调。并且，他们发现，他们的喉咙（那时候还不知道什么叫“声带”）和嘴巴，出声的本领实在很奇妙，它会发出一些稀奇古怪的声音，高高低低一串一串的出来。那时候，他们一点也不晓得，这些稀奇古怪的声音，会被后来人类叫做“原始音乐”。他们如果晓得，四人一组，一定毫不需要准备的，就成立四千个“披头歌唱团”！
 
-古代的披头们，他们本来高兴的时候就哼呀哼，不高兴的时候也哼呀哼或呀哼哼的，本来哼得好好的，大家又跳又唱，十分快乐。不料就在这时候，有一些老夫子们出现了，老夫子们听了他们的歌声，皱起眉毛，翅起胡子，表示不满意了。老夫子们给这些自自然然的音乐家戴了一顶可怕的大帽子，叫做“亡国之音”。什么是“亡国之音”呢？“亡国之音”是当时老夫子们眼中的活泼泼的音乐，比如说山歌啦、情歌啦、民间的轻快歌曲啦、令人兴奋的小调啦，都是一般群众喜欢而为老夫子们所反对的。	‘
+古代的披头们，他们本来高兴的时候就哼呀哼，不高兴的时候也哼呀哼或呀哼哼的，本来哼得好好的，大家又跳又唱，十分快乐。不料就在这时候，有一些老夫子们出现了，老夫子们听了他们的歌声，皱起眉毛，翅起胡子，表示不满意了。老夫子们给这些自自然然的音乐家戴了一顶可怕的大帽子，叫做“亡国之音”。什么是“亡国之音”呢？“亡国之音”是当时老夫子们眼中的活泼泼的音乐，比如说山歌啦、情歌啦、民间的轻快歌曲啦、令人兴奋的小调啦，都是一般群众喜欢而为老夫子们所反对的。 ‘
 
 老夫子们赞成什么呢？老夫子们赞成的歌儿叫做“雅乐”——所谓高“雅”的音“乐”。这种“雅乐”，听起来是死板板的，唱起来是要立正站着的，奏起来是要恭恭敬敬的，听这些所谓“雅乐”，你会静、静、静、静得像井里的水、像睡大觉。老夫子们认为，只有这种严肃的音乐才是音乐，轻轻快快蹦蹦跳跳的音乐不是音乐；只有这种严肃的音乐才是“德音”——所谓有道“德”的声“音”；轻轻快快蹦蹦跳跳的音乐是“溺音”——所谓不道德的声音。当然，你只要有一点思考能力，你就会奇怪，声音怎么会有“道德的”或“不道德的”分别呢？（就好像说：电灯光怎么会发生“道德的”或“不道德的”分别呢？一杯白开水怎么会发生“道德的”或“不道德的”分别呢？）可是老夫子们不管这些，他们也不许年轻人们怀疑这些，反正他们总是不断的抬出“雅乐”“雅乐”“雅——乐”！
 
@@ -1136,9 +1120,7 @@
 
 〔附记〕埃及有一种弹弦乐器，叫“诺夫尔”（nofre），是琵琶的老祖宗。诺夫尔传到阿拉伯，传到波斯、大夏，再传到中国。张骞通西域的时候，传来了用琵琶弹的“西洋流行歌曲”，演变到中国出了许多琵琶专家。有姓曾的一家，“父祖子孙兄妹皆称琵琶名手”。唐朝人最迷琵琶，武则天送给东洋鬼子的琵琶，现在还保存在日本，可见当时的流行程度。流行到和尚都不守清规，在庙里大弹特弹；至于《琵琶行》中的怨女，琴瑟不调，琵琶别抱，自然更不在话下了。
 
-
-
-##家族——人愈多愈好
+## 家族——人愈多愈好
 
 一个男人，只是一个男人，造不出来什么。
 
@@ -1238,9 +1220,7 @@
 
 中国家族的流弊，可真不少。家族观念走火入魔的时候，还要进一步“开祠堂，执家法”，包括依“族规”第几条第几款，应该打多少大板或别的。更超越前进的，是以族姓为单位，统统有奖。张献忠到四川，杀得兴起，“百家姓”中个个遭殃，但对“张亚子庙”、“张桓侯（张飞）庙”，因为同宗，一律优待；张献忠的老前辈黄巢更宽大，他在湖北，不但不杀姓黄的，甚至连带黄字的地方都一律放生，所以能留下许多“黄冈”人“黄陂”人给我们领教、给我们消受，这真所谓“盗亦有道”、“盗亦友盗”了！
 
-
-
-##女性——牌坊要大，金莲要小
+## 女性——牌坊要大，金莲要小
 
 在古代，有一件怪事：男人离不开女人，可是男人又看不起女人；更怪的是，不但男人看不起女人，连女人也看不起她们自己。
 
@@ -1368,9 +1348,7 @@
 
 附带要说的是，中国人小脚哲学如日中天的时候，竟发展到连男人的脚也以小为贵。所谓“君子大头，小人大脚”。要想做君子，脚大是不行的。所以男人也有以白布包脚的习俗，先包好，再穿袜，因此鞋前面比较尖。中国书呆子谈中国哲学史、中国思想史、固有文化，却没看到中国人的小脚哲学，非但有眼不识泰山，也有眼不识泰水的脚了！
 
-
-
-##光绪朝对节妇贞女的旌表
+## 光绪朝对节妇贞女的旌表
 
 俞樾《右台仙馆笔记》（春在堂全书本）记乔氏一条，很可代表晚清对贞节观念的立论：
 
@@ -1490,9 +1468,7 @@
 
 八、《大清德宗景皇帝实录》（大满洲帝国国务院发行）。
 
-
-
-##从高玉树为儿子“冥婚”看中国两面文化
+## 从高玉树为儿子“冥婚”看中国两面文化
 
 5月29号中午，台北市长高玉树先生的大少爷高成器，在山仔后别墅，突然跟吴家大小姐吴纯纯双双服毒，从容自杀。出事以后，高玉树先生和女方家长们“悲喜交集”——在丧事中加办了一桩喜事，为这两位青年人补办一场婚礼。消息传出，大家只注意这个事件的新闻意义，但它的历史意义，却看不见有谁提出来。
 
@@ -1548,9 +1524,7 @@
 
 1968年6月13日
 
-
-
-##欢喜佛
+## 欢喜佛
 
 “欢喜”一个词，最早见于《战国策》。《战国策-秦策》记载武安君的话，说：“长平之事，秦军大克，赵军大破，秦人欢喜，赵人畏惧。”佛教传到中国以后，翻译佛经的人，把这个本国语借来用做佛语，例如《法华经-譬喻品》中，就有“欢喜踊跃”的话；并且，还把释迦的弟子阿难陀尊为欢喜。此外有“欢喜海”、“欢喜贤”、“欢喜丸”、“欢喜日”等种种词汇，欢喜两个字，佛味很浓。
 
@@ -1622,9 +1596,7 @@
 
 1979年1月30日以两个小时初稿，5月10日以四个小时修订
 
-
-
-##中国民族“性”
+## 中国民族“性”
 
 世界上，任何专家都犯一个毛病，就是自己这一行最重要，人类没有他这一行，就完了。事实上，他这一行虽非不重要，但没重要到他所说的那种程度、那种比例。但专家绝对不肯这样想，他只肯吹牛，不知道他在牛角尖里。
 
@@ -1740,9 +1712,7 @@
 
 漫无心肝的中国知识分子，漫无心肝的日子太久了，实在应该认清自己，振作一下，洗洗这些耻辱的标记。
 
-
-
-##人能感动蝙蝠论
+## 人能感动蝙蝠论
 
 研究中国人想什么，怎么想，一定得注意中国人的怎样想什么。中国人有时候会发伟大的奇想，这种伟大的奇想，想入非非，使人怎么也想不透人为什么要这样想、能这样想，这样想又何苦来。
 
@@ -1790,9 +1760,7 @@
 
 1979年5月14日三小时写成
 
-
-
-##人能感动老虎论
+## 人能感动老虎论
 
 校对《人能感动蝙蝠论》的时候，意犹未尽，再写一篇。
 
@@ -1848,9 +1816,7 @@
 
 1979年5月24日一个小时完工
 
-
-
-##鼓声咚咚的中国之音
+## 鼓声咚咚的中国之音
 
 鼓是人类最早的乐器。从埃及到亚述、从印度到波斯，到处都有鼓的存在。世界各文化区，鼓的出现是不谋而合的。像西欧、英国那样，连鼓的出现都要仰仗外来的那种情形，实在少有。西欧、英国的鼓，是罗马传过去的。
 
@@ -2066,9 +2032,7 @@
 
 (16)金朝海陵王正隆二年（1157）置登闻鼓院；元朝世祖至元十二年（1257）立登闻鼓；明朝十三道御史轮值登闻鼓；《大清会典》卷三十七说：“状内事情必关军国重务大贪大恶奇冤异惨，方许击鼓”；又说：“设登闻鼓于都察院门首，每日轮流御史一员监值。”
 
-
-
-##一种失传了的言论道具
+## 一种失传了的言论道具
 
 中国历史上是专制王朝，偶尔也有网开几面的时候。网开几面，有的见之于制度，有的见之于实物，这种实物，是网开的一种象征，可叫做“言论道具”。因为本质上、实际上，这都是戏。既然是戏，配合它的，不是“道具”是什么？
 
@@ -2158,9 +2122,7 @@
 
 1979年5月11日三小时写成
 
-
-
-##记一个不合作主义者
+## 记一个不合作主义者
 
 李二曲，生在1629年，死在1705年，一生正当明末清初（明朝崇祯二年到清朝康熙四十四年），活了七十六岁。
 
@@ -2215,6 +2177,3 @@
 李二曲晚年闭户不出，不见客。四方之士老远跑来看他，都吃了闭门羹。有见识的高人，了解他为什么这样做；不识大体的俗人，自会骂他“懦种”。俗人当然不了解李二曲的大勇、李二曲的远见、李二曲的决绝，和李二曲在淫威之下辛苦抱持的不合作主义。
 
 1979年5月18日
-
-
-
