--- a/03.惊世杂文类/上下古今谈.md
+++ b/03.惊世杂文类/上下古今谈.md
@@ -1,4 +1,8 @@
-#《上下古今谈》目录
+# 上下古今谈
+
+<!-- toc -->
+
+## 目录
 
 * 一、从《秀嫚信箱》到《上下古今谈》
 * 二、开场白——“浪子”回头
@@ -59,9 +63,7 @@
 * 五七、最后的肯定
 * 五八、《上下古今谈》李敖自拟简介
 
-
-
-##从《秀嫚信箱》到《上下古今谈》
+## 从《秀嫚信箱》到《上下古今谈》
 
 ——《上下古今谈》代序
 
@@ -243,9 +245,7 @@
 
 郊游，补习功课，或是学点什么的（例如外语、洋裁等），或是选一本名著读读，这佯，您的暑假会过得又快又充实。（1965年7月27日《中华日报》）
 
-
-
-##开场白——“浪子”回头
+## 开场白——“浪子”回头
 
 《台湾日报》的发行人夏晓华先生，在跟《台湾日报》诸位朋友热心办报之余，居然“心血来潮”，决定拉我给他们写一块小专栏。他们留给我一方之地，要我每天“上下古今”地谈它一谈。我个人本是哇哩哇啦好说好道之徒，又不善于假惶惺，所以毫不考虑，一口便答应下来。
 
@@ -263,9 +263,7 @@
 
 《台湾日报》1965年7月5日
 
-
-
-##破题——从《人间喜剧》说起
+## 破题——从《人间喜剧》说起
 
 《开场白——“浪子”回头》里提到的巴黎浪子，最早出现在巴尔扎克的《人间喜剧》（LaComedieHumaine）里。在这套《人间喜剧》最后完稿后90多年，美国的萨洛扬又出现了他的新的《人间喜剧》（TheHumanComeby）。这两出喜剧，虽然在同一书名下亮相，可是它们所代表的时代意义，却相差得很多。
 
@@ -283,9 +281,7 @@
 
 《台湾日报》1965年7月6日
 
-
-
-##“上下”与雅俗
+## “上下”与雅俗
 
 “上下”两字在中国古书中，最早的意义是用来指空间。慢慢的，它的含义开始增加，不但用来表示“天地”、“俯仰”，也用来表示“名分”、表示“君臣”、表示“长幼”、表示“山川”、表示“丰年与凶年”……
 
@@ -303,9 +299,7 @@
 
 《台湾日报》1965年7月7日
 
-
-
-##“古今”与骆驼
+## “古今”与骆驼
 
 我们中国的湖北人有一句土话，叫做“牵骆驼”。
 
@@ -325,9 +319,7 @@
 
 《台湾日报》1965年7月8日
 
-
-
-##“谈”什么？
+## “谈”什么？
 
 在过去四天里，我头两天说明这个小专栏的缘起和题目；后两天交代我的文体和“坏习惯”，如今已一一说得清清楚楚。读者经过我这四天的“点化”以后，若要再乱吃我的“草药”，那么“病责自负”，不要再怪我啦！
 
@@ -341,9 +333,7 @@
 
 《台湾日报》1965年7月9日
 
-
-
-##对“好人”播音
+## 对“好人”播音
 
 吴相湘先生最近因反对黑暗势力辞去台大教授的时候，他对我说：“我这回‘退让贤路’了！”我回答他说：“吴老师，你错了，你退让的不是贤路，而是道道地地的‘恶路’！”
 
@@ -359,9 +349,7 @@
 
 《台湾日报》1965年7月10日
 
-
-
-##不仅仅是做“好人”
+## 不仅仅是做“好人”
 
 四十三年前的5月13号，蔡元培、王宠惠、罗文幹、汤尔和、陶行知、王伯秋、梁漱冥（溟）、李大钊、陶孟和、朱经农、张慰慈、高一涵、徐宝璜、王征、丁文江、胡适等十六个人，在《努力周报》第2期上，登出了《我们的政治主张》。他们集体提出了“好政府”的要求，并且要求“好人”要有奋斗的精神。他们说：
 
@@ -377,10 +365,7 @@
 
 《台湾日报》1965年7月11日
 
-
-
-
-##大奶奶运动史
+## 大奶奶运动史
 
 今年青年节的晚上，在高雄县六龟乡的中庄，一个叫做陈廖犇的46岁女人，拿了一把大剪刀，咔嚓一声，把她年轻邻居女人的一只乳房剪掉了三分之一。她供述行凶的理由是：她这个年轻邻居的乳房太大了，大到足以诱惑她的丈夫的程度。为了防患于未然，不得不剪刀行事，去乳为快。
 
@@ -394,9 +379,7 @@
 
 《台湾日报》1965年7月12日
 
-
-
-##由大奶奶到上空装
+## 由大奶奶到上空装
 
 “大奶奶运动”到了公元1964年的6月里，突然有了一个划时代的剧变，这就是“上空装”（topless）的出现。
 
@@ -414,9 +397,7 @@
 
 1965年7月13日
 
-
-
-##“赤子之心”？
+## “赤子之心”？
 
 在习惯上，我们常常运用的一些词汇和论证，一经推敲起来，便问题横生。
 
@@ -434,9 +415,7 @@
 
 《台湾日报》1965年7月14日
 
-
-
-##没良心
+## 没良心
 
 在《一见哈哈笑》里，有一个笑话叫做《问心》。大意是说，有六个兄弟同住在一家旅馆，旅馆的粪坑里掉下一个柿子，大家看不清楚，都以为是一颗心。旅馆的老板问这颗心是谁的？老大说：“不是我的。我的心是黑的，不能那样赤。”老二说：“也不是我的心。我心不在胸中，现在胁下。”老三说：“更不是我的心。我的心是两个联在一处，人人常说我有二心，我何尝是一个心？”老四说：“我的心早已丢了。至今尚未去寻，所谓有放心而不知求者，即是我。”老五说：“我的心早坏了。若不是胆包着，早掉了。”最后老六说；“我生下来，就没有心。故人常骂我天生来没良心，我何曾有过心？”
 
@@ -454,9 +433,7 @@
 
 《台湾日报》1965年7月15日
 
-
-
-##可怕的哥哥
+## 可怕的哥哥
 
 最近苗栗发生的县立中学教员陈占美被毁容案，报纸已经登了不少的消息和评论，我愿意从一个别人不太注意的角度，提出一点看法。
 
@@ -470,9 +447,7 @@
 
 《台湾日报》1965年7月16日
 
-
-
-##好汉做事好汉当
+## 好汉做事好汉当
 
 中国的名人中，有个叫李耳，又有个叫张耳；有个叫李敖，又有个叫张敖。
 
@@ -496,9 +471,7 @@
 
 《台湾日报》1965年7月17日
 
-
-
-##“好汉”与负责
+## “好汉”与负责
 
 汉朝贯高的精神是“好汉做事好汉当”。所谓“好汉做事”，有时候是把事做得功德圆满，有时候却把事做得一败涂地，在做得一败涂地的时候，做“好汉”的，就该挺身出来，做负责的表示，他不该东推西托，不该拆下滥污让别人来收拾。换句话说，他不该让别人替他“擦屁股”。大丈夫有屁股自己擦，为什么要别人擦？
 
@@ -514,9 +487,7 @@
 
 《台湾日报》1965年7月18日
 
-
-
-##“一字师”和改文章
+## “一字师”和改文章
 
 宋朝“先天下之忧而忧，后天下之乐而乐”伟大人物范仲淹，在写《严先生祠堂记》的结尾，曾有十六个字称赞严光（庄光），他说：“云山苍苍，江水泱泱，先生之德，山高水长。”这篇文章写好后，他的一个朋友劝他说：过十六个字中有一个字不好，那就是“先生之德”的“德”字，如果把这个“德”字改成“风”字，那就再好没有了。
 
@@ -532,9 +503,7 @@
 
 《台湾日报》1965年7月19日
 
-
-
-##从乡愁到大气派
+## 从乡愁到大气派
 
 明朝末年的刘源渌，在他临死前说过一段话：“人与我，一天而已，何畛域之有焉？”这种不分地域的观念，在清朝的林则徐也有了呼应。林则徐在鸦片战争后，被贬到新疆，他当时作了两段名言：一段他预言“终为中国患者，其俄罗斯乎”；一段他指出“只分良莠，不分汉回。”这是何等的远见和胸襟！
 
@@ -554,9 +523,7 @@
 
 《台湾日报》1965年7月20日
 
-
-
-##臭皮匠政治
+## 臭皮匠政治
 
 今日我们滥用的名词中，最可笑的是“风化”两个字，这两个字的意义，事实上是等于“有伤风化”四个意义恰恰相反的字。所以，从而所谓“风化区”，事实上恰恰为的是“有伤风化区”。
 
@@ -572,9 +539,7 @@
 
 《台湾日报》1965年7月21日
 
-
-
-##臭皮匠和民主靴
+## 臭皮匠和民主靴
 
 在“三个臭皮匠，胜过诸葛亮”的民主政治里，它的主要意义，就在用多数人的平庸智慧，平稳的制造一个“民主靴”，维护并监督这个民主靴。使这双靴子为小百姓翻山越岭，跋涉长途，不受专制者的侵害。
 
@@ -596,9 +561,7 @@
 
 《台湾日报》1965年7月22日
 
-
-
-##“永不录用”的法律问题
+## “永不录用”的法律问题
 
 清朝时候有一种惩罚官吏的法条，叫做“永不叙用”。在《大清会典事例》中的吏部处分例里，说明“贪酷者，革职提问，如事在赦前，免罪，永不叙用”。可见官吏贪污枉法，就构成了一辈子休想再做官的条件。
 
@@ -684,9 +647,7 @@
 
 相反的，这几天来，由于翁案的发生，舆论的批评，中兴新村消息传来，说是教育厅正在考虑，公立中学校长此后不得兼任私立中学董事长；甚至又说今后的省中校长，也将和最近实施的国校校长轮调办法，规定任期。凡此虽说都是旨在亡羊补牢，我们却根本怀疑是否明智、是否必要。因为由于平时的失察，出了翁某这样一个省中校长，如今为了预防再有翁某这样的校长出现，不从加强平时考核着手，而另立这些所谓防弊的新法令，我们有理由说：过犹不及，新的防弊法令，不足以防翁某这样的校长之弊，反而对许多规规矩矩、专心办学的校长，平添了麻烦，徒增了困惑。（1965年7月9日）
 
-
-
-##瑞典与废娼
+## 瑞典与废娼
 
 娼妓制度是人类最可耻的制度。废止娼妓制度的呼声，是近代文明中的主要呼声之一。今日世界中，废止娼妓制度最成功的国家是北欧的瑞典。这个国家是有名的现代国家。她的社会福利，全世界第一；她的性开放，也世界第一。
 
@@ -704,9 +665,7 @@
 
 《台湾日报》1965年7月24日
 
-
-
-##废娼效果知多少？
+## 废娼效果知多少？
 
 在《台湾省管理妓女办法》第2条中，明文规定：“各县市取缔娼妓，应划定区域集中居住，加强管理。”这种规定，是很明显的公娼制度。在公娼制度下，第10条中一一列举了妓女户应遵守的事项：如“一、门首悬挂圆形绿色灯，以为标志”；如“四、被褥枕毯隔日换洗一次”；如“十、不得诱迫质买妇女为妓女”；如“十二、不得超过分成规定剥削妓女之收入”；如“十三、不得扣留妓女之许可证”；如“十五、不得强迫妓女接客”等等，种种设想，规定得很多。此外又有妓女户申请登记事项、妓女执业同意书、XX妓女户妓女名簿等等规定，名目又繁多。
 
@@ -720,9 +679,7 @@
 
 《台湾日报》1965年7月25日
 
-
-
-##公娼的黑暗
+## 公娼的黑暗
 
 按照《台湾省管理妓女办法》，今日台湾明显的是在采取公娼制度，在理想方面，这套办法的基本精神是超出公娼之上，换句话说：它的目的在用承队公娼办法来消灭私娼；再从公娼演进到废娼。
 
@@ -742,9 +699,7 @@
 
 《台湾日报》1965年7月26日
 
-
-
-##何秀子的启示
+## 何秀子的启示
 
 在《台湾省管理妓女办法》的失效状态下，目前的局面只是八个大字：“公娼其外，私娼其中。”私娼的横行猖獗，已经到了令人毛骨悚然的地步。私娼这种气焰，并不是暗中表示的，他们已到了公然为之的境界。1960年11月，台中光复路的20家私娼，居然联名上书市议会，声言她们的私娼业已经有40多年的历史，所以要求确保“繁荣”，“以利民困”！这套把戏谁不会耍呢？今年5月里，丰原镇后菜园的私娼馆，也联名上书警察局长，也说他们的历史已有几十年了，已经根深蒂固，而警局派员驻守，只可取缔于一时，却维禁绝于永久，还是不如放他们一条生路吧！
 
@@ -762,9 +717,7 @@
 
 《台湾日报》1965年7月27日
 
-
-
-##何秀子事件的法律观点
+## 何秀子事件的法律观点
 
 台湾最有名的私娼，何秀子的“巧苠沙龙”，5月里被台北市警察局第三分局勒令停业。何秀子不服，又向台北市警察局提出诉愿，警察局在5月27号勒令它永久停业。何秀子又申请成立“娇美沙龙”，7月13号，台北市政府以尊重民意和舆论的理由，批驳不准。于是，这个被英文《中国日报》称做“应召女郎的帝国”，终告垮台。
 
@@ -782,9 +735,7 @@
 
 《台湾日报》1965年7月28日
 
-
-
-##“流氓”与法律
+## “流氓”与法律
 
 宋朝时候有一个坏蛋，大家皆曰可杀，可是没有杀他的法律根据。但是大家还是要杀。当时范仲淹看不过去了，他说：“你们‘法外杀人’，会杀得‘手滑’！”
 
@@ -810,9 +761,7 @@
 
 《台湾日报》1965年7月29日
 
-
-
-##“流氓”应该怎么罚？
+## “流氓”应该怎么罚？
 
 有一次监察委员陶百川先生向我讲一些“取缔流氓”的故事，我这里不便公开引述。我只能说，这些故事是凿凿有据的一些警察人员“逼良为流氓”、“公报私仇”的故事。一些警察人员之所以能够这样，他们所依恃的护符，就是13年前出现的《台湾省戒严时期取缔流氓办法》。
 
@@ -852,9 +801,7 @@
 
 《台湾日报》1965年7月30日
 
-
-
-##圣人教育
+## 圣人教育
 
 中国教育有一个大特色，就是拼命鼓励受教育者做“圣人”，希圣希贤，法古今完人。
 
@@ -878,9 +825,7 @@
 
 《台湾日报》1965年7月31日
 
-
-
-##林森先生打官司
+## 林森先生打官司
 
 今天（8月1号），是前国民政府主席林森（子超）先生去世22年的忌日，这位最有风度的“青芝老人”，最近似乎不大为人追念了。
 
@@ -896,9 +841,7 @@
 
 《台湾日报》1965年8月10日
 
-
-
-##为什么“自力报复”？
+## 为什么“自力报复”？
 
 最近社会里发生了许多案子，都是当事人用一己的力量，直接诉诸违背法律的报复行动。这些行凶的人儿，他们有一个共同的心情，就是：
 
@@ -1028,9 +971,7 @@
 
 ⑦司法机关办理杀人犯受刑人之假释，应力求确实严格，并加强受刑人出狱后之司法保护。由立法机关早日完成《更生辅助法》之立法程序，以建立完善之司法保护体系。（1965年8月26日）
 
-
-
-##李敖不可怕
+## 李敖不可怕
 
 ——致“你们”的几句话
 
@@ -1056,9 +997,7 @@
 
 1965年8月
 
-
-
-##沈之岳也不可怕
+## 沈之岳也不可怕
 
 1965年7月29号发生了一件特殊的事。行政院新闻局的记者招待会上，突然出现了一位特殊的人物，这就是司法行政部调查局沈之岳局长。沈之岳局长的公开和记者见面，这个意义，《台湾日报》第二天社论中曾有说明。这篇以《与广大的人民合作》为标题的社论说：
 
@@ -1084,9 +1023,7 @@
 
 1965年8月3日
 
-
-
-##莎士比亚是特务
+## 莎士比亚是特务
 
 在没有天下太平以前，一个国家为了她的安全，不能没有维持治安的人员。维持治安的人员一般有两种：一种是警察；一种是比警察更“亲爱的”，那就是特务。中国历史上搞特务最成功的统治者，最有名的两个：一个是曹操；一个是雍正皇帝。在外国，能搞特务的皇帝也很多，例如16世纪的英国伊利莎白女王，就是一个。
 
@@ -1106,9 +1043,7 @@
 
 《台湾日报》1965年8月4日
 
-
-
-##闯“红灯”
+## 闯“红灯”
 
 五十一年前的今天，民国三年（1914）的8月5号，这个世界上出现了一种小玩意，那就是我们一出门就可以看到的，马路上面的“红灯”。
 
@@ -1130,9 +1065,7 @@
 
 《台湾日报》1965年8月5日
 
-
-
-##原子弹20岁感言
+## 原子弹20岁感言
 
 整整20年前的今天（8月6号）上午，日本的广岛挨了一颗大炸弹，这颗炸弹，真的卡大卡大，它结束了二次世界大战，并且老老实实的告诉人类：“你们不是好打仗吗？打吧！再打下去，就要吃这个东西，吃得大家同归于尽。看你们还打不打？”
 
@@ -1154,9 +1087,7 @@
 
 《台湾日报》1965年8月6日
 
-
-
-##中法私案的四点分析
+## 中法私案的四点分析
 
 半年来一再演变的“中法三角恋”的案子，最近因为警方限令法国女娃儿丹妮尔离境，黎东方夫妇拦腰抱住丹妮尔，收为养子女，又引起新的高潮。
 
@@ -1180,9 +1111,7 @@
 
 《台湾日报》1965年8月7日
 
-
-
-##“武侠小说”，着镖！
+## “武侠小说”，着镖！
 
 在20世纪的60年代以后，台湾的“读物”里，流行起来一种“群体情绪”（groupfeeling）贯注的焦点，这就是所谓“武侠小说”。
 
@@ -1240,9 +1169,7 @@
 
 （《中央日报》1965年7月2日）
 
-
-
-##斜气下的真理
+## 斜气下的真理
 
 七百九十多年前的今天（1174年8月9号），意大利的比萨（Pisa）塔开始倾斜了。这个举世驰名的塔，并不因为它的倾斜而不朝上“爬”，它在九十年后，又被一个大胆的建筑师加造了三层，一共有七层。再过了八十年，又一个敢死队建筑师替它戴了第八层的圆帽子，并且还加装了七个大钟，钟的重量，一共有25吨！
 
@@ -1264,9 +1191,7 @@
 
 《台湾日报》1965年8月9日
 
-
-
-##陈查某之路
+## 陈查某之路
 
 台湾工商界的巨子，在纺织、贸易、航业、造纸等方面都有成绩的“青果大王”陈查某老先生，8月2号拿了一张100万元的支票交给内政部长连震东先生，做为社会福利事业之用，其中包括贫民救济金、奖学金以及贫民义诊等项目。这次义举，很得人们的称赞。《台湾日报》写《草地人开讲》的朋友说：“他送给贫苦大众100万分温暖和希望”，我很同意这句话。
 
@@ -1284,9 +1209,7 @@
 
 《台湾日报》1965年8月10日
 
-
-
-##社会转型未到家
+## 社会转型未到家
 
 8月5号的《台湾日报》上，有一篇社论——《重视生命与重视贞操》。我看过后，好辩的毛病勃然大发，忍不住要写几句话。
 
@@ -1320,9 +1243,7 @@
 
 要之，情变乃是人类的平常事件，它之所以造成悲剧，是由于防范不当。——重视贞操，是为正常的感情建立堤防；重视生命，是替反常的感情从事疏导，在理性的社会中，这是必须认识和必须鼓励的。（1965年8月5日）
 
-
-
-##笔上无毛说
+## 笔上无毛说
 
 我们的省政府教育厅，在8月5号的厅务会报上，又宣称受主席指示，要“加强国语文教学与中小学学生毛笔字，以发扬我国固有文化”了！并且要台湾书店“自制合乎标准而廉价实用的笔墨，供应学生使用”了！又坚持“国语文及书法教学时间，绝对不可移作他用”了！“学生作文，必须使用毛笔”了！
 
@@ -1368,9 +1289,7 @@
 
 在这里，我们想奉劝年轻朋友一句话：学不好本国语文，绝不是一件体面的事。（1965年8月6日）
 
-
-
-##关公的计程车
+## 关公的计程车
 
 对《上下古今谈》有胃口的人，看了这个《关公的计程车》的题目，一定怪我李敖愈来愈胡扯了。他们心里一定纳闷：“关公”和“计程车”有什么关系？扯在一起干嘛？
 
@@ -1386,9 +1305,7 @@
 
 《台湾日报》1965年8月13日
 
-
-
-##关公曹操三角恋爱论
+## 关公曹操三角恋爱论
 
 曹操刘备联合平了吕布以后，一起向汉朝的皇帝表功。刘备虽说他排行起来，是皇帝的叔叔，可是这回却是第一次见皇上，并且还是曹操介绍的。
 
@@ -1420,9 +1337,7 @@
 
 李敖在他报倡“关公曹操三角恋爱”说，因此想起一出河南戏《挑袍》，关公戟指曹白脸唱道：“俺白天上山打柴烧，晚上还要铡马草，我阴天抱孩子，半夜防强盗，说着想着心头恼，举刀要杀奸曹操！”这时曹操的太太拦在中间，把丈夫数落一顿，又向关公挤眉弄眼：“哎哟，二叔，你就看在俺俩的交情份上，饶了这个龟孙吧！”关公跺足，香香孩子的面孔，作英雄气短状……全剧于焉终场。（《自立晚报》1965年8月16日）
 
-
-
-##福特有福无特
+## 福特有福无特
 
 1914年发生的第一次世界大战，并不是这个世界的“大事”。因为人类相杀相砍，并不算本领。何况这次大战又是挑拨猜忌与偏见的产品，所以它的发生，就愈发没有意义。
 
@@ -1438,9 +1353,7 @@
 
 《台湾日报》1965年8月15日
 
-
-
-##发财的真价值
+## 发财的真价值
 
 东方人说“一钱难倒英雄汉”，西方人说“两个口袋空的人，腰站不直”，这些观念，都概括说出金钱的重要。一般说来，金钱是财产的表征，是生活的基层保障，乃至是一切礼仪制度的先决条件。中国古代的思想家说：“仓廪实而知礼节，衣食足而知荣辱。”这种清楚的见解，彻底道尽了生活基层保障的重要。在生活没有基层保障的时候，只有“大丈夫”才能“贫贱不能移”，一般小百姓，就非“移”不可；而“大丈夫”也至多只能退守于“贫贱”，若连“贫贱”而不可得，面临“饥饿”边缘的时候，即使“大丈夫”，也得向漂母讨饭吃。伯夷叔齐固然超人一等，在“饥饿”边缘，饿死自甘，但这究竟非普通“大丈夫”之所能，至少我李敖，就“做没有到”。
 
@@ -1452,9 +1365,7 @@
 
 《台湾日报》1965年8月16日
 
-
-
-##我要颠倒黑白
+## 我要颠倒黑白
 
 1619年的8月17号，在新大陆阿美利加州上，来了第一批小黑人。这些小黑人本是非洲的土产，这次被“奴隶贩子”（theslavetraders）逮来出售，实开大量贩卖人口的先河。
 
@@ -1470,9 +1381,7 @@
 
 《台湾日报》1965年8月17日
 
-
-
-##读者怒吼之一
+## 读者怒吼之一
 
 我这里每天一篇，上下古今，正愁没有足够的东西好谈，正苦后援不继，忽然接到报社转来的一封信，好像是骂我的。因为信后“附记：本函如蒙公开发表或转交李敖本人文责自负”字样，故“李敖本人”特地“公开发表”于后：
 
@@ -1562,9 +1471,7 @@
 
 文责自负
 
-
-
-##用笑脸做后盾
+## 用笑脸做后盾
 
 杨贵妃的情夫，唐朝最有名的番将安禄山，生平最怕的一个人，是当时的宰相李林甫。李林甫的最大本事，是“笑里藏刀”。“笑里藏刀”这个典故，也就从这时候开始的。
 
@@ -1586,9 +1493,7 @@
 
 《台湾日报》1965年8月19日
 
-
-
-##民主趋向
+## 民主趋向
 
 19世纪早期，正在英国“在国内”走向近代民主政治的时候，欧洲却正走着反动的方向。1814年到1815年的维也纳会议，是这种反动方向的最好说明。反动的群雄头子是奥地利，其他有俄国、普鲁士、法国，和“在国外”的英国。这些反动的势力，虽然盛极一时，可是究竟在近代民主政治的趋向里，他们逃不掉绊脚石和拦路虎的可恶地位，所以他们势力的逐渐衰落，也是必然的事。就在维也纳会议以后的三十三年里（1815-1848），世界上至少发生了十次显明的革命，这些革命，刷新了世界的颜色，直到第一次大战结束（1918），这个世界，又开始用新的面貌出现。
 
@@ -1628,9 +1533,7 @@
 
 《台湾日报》1965年8月20日
 
-
-
-##如果爸爸犯了罪
+## 如果爸爸犯了罪
 
 在《孟子-尽心》篇中，有这样一段对话：
 
@@ -1662,9 +1565,7 @@
 
 周信昌（吴长福）领到这1000元奖金，真是千言万语不知从何说起。（《中华日报》1965年8月25日）
 
-
-
-##西餐叉子吃人肉
+## 西餐叉子吃人肉
 
 三年半前，我在《给谈中西文化的人看看病》一文里，曾讲到一个小故事。我说：一个英国探险家，在探险中碰到一个有吃人肉风俗的蛮人，等到他发现这个蛮人竟是英国大学出身的，他大为惊奇。他问这个蛮人说：“你难道还吃人肉吗？”这个蛮人的答话可妙了，他说：“我现在用西餐叉子来吃了！”
 
@@ -1708,9 +1609,7 @@
 
 四、西药药品之范围，以中外药典或其他正式典籍所记载，并经以科学方法制造其治疗效能成分、用量用法，业经确定者为限。（1965年8月6日）
 
-
-
-##明星即英雄
+## 明星即英雄
 
 三十九年前（1926年）的今天（8月23号），一个伟大的人物死在美国纽约。他的尸体停在那儿，四面有鲜花围绕，消息从四面八方传出来，四海震动。跑到他身边瞻仰遗容的有4万人，他们来看的不是“民族英雄”、不是“政治豪杰”、不是“宗教领袖”，也不是“工商巨子”。他们来送别的，是历史上第一个“大众情人”——大名鼎鼎的影坛“英雄”瓦伦蒂诺（RudolphValentino）。
 
@@ -1726,9 +1625,7 @@
 
 《台湾日报》1965年8月23日
 
-
-
-##王宝钏精神
+## 王宝钏精神
 
 最近因为一中学校长与一海外留学生的太太通奸，引起了不少的争论，当一个省议员提出留学生太太“守空闺”的问题的时候，省主席曾呼吁留学生的太太们要效法王宝钏，要苦守寒窑18年！
 
@@ -1758,9 +1655,7 @@
 
 《台湾日报》1965年8月24日
 
-
-
-##王宝钏的另一面
+## 王宝钏的另一面
 
 王宝钏苦守寒窑18年，我已在《王宝钏精神》一文里，指出这是一种没有意义的“愚贞”，且呼吁我们不但要打倒薛平贵男权至上的思想，也要打倒王宝钏女人自甘吃亏的精神。
 
@@ -1792,9 +1687,7 @@
 
 《台湾日报》1965年8月25日
 
-
-
-##判案不是猜谜！
+## 判案不是猜谜！
 
 嘉义发生的“女护士命案”，男主角刘堂坤医师，在二审中又被“明镜高悬”的法官判处死刑了！这件事，在前天晚上跟台湾省医师公会理事长吴基福先生谈过后，引起我不少的感想。
 
@@ -1814,9 +1707,7 @@
 
 1965年8月23日
 
-
-
-##为叶枫说话
+## 为叶枫说话
 
 住在台中民权路的一位姓李的读者，21号寄了一封限时信给我。信中说：
 
@@ -1872,9 +1763,7 @@
 
 旨哉斯语！夫复何言？（1965年8月19日）
 
-
-
-##最后的肯定
+## 最后的肯定
 
 德国极右派的独裁者希特勒，死了已经20年了。他死在1945年的4月30号。这一天，他先杀掉了心爱的三条狗，然后他的“新娘”服毒自杀完毕，用一把7.65口径的手枪，朝自己的右太阳穴打去。希特勒生前看到他的朋友墨索里尼的最后下场——被人民“悬尸示众”，所以他遗命随从副官，无论如何，要在他夫妇死后，把尸体烧光，使任何人都找不到任何痕迹。
 
@@ -1894,9 +1783,7 @@
 
 《台湾日报》1965年8月27日
 
-
-
-##《上下古今谈》李敖自拟简介
+## 《上下古今谈》李敖自拟简介
 
 李敖：吉林省扶余县人，祖籍山东省潍县，远籍云南省。民国二十四（1935）年生于哈尔滨。
 
@@ -1919,6 +1806,3 @@
 大安
 
 李敖敬上1965年7月3日
-
-
-
