--- a/03.惊世杂文类/为中国思想趋向求答案.md
+++ b/03.惊世杂文类/为中国思想趋向求答案.md
@@ -1,4 +1,8 @@
-#《为中国思想趋向求答案》目录
+# 为中国思想趋向求答案
+
+<!-- toc -->
+
+## 目录
 
 * 一、介绍我的《为中国思想趋向求答案》
 * 二、给谈中西文化的人看看病
@@ -9,9 +13,7 @@
 * 七、中国思想趋向的一个答案
 * 八、文化论战的尾巴
 
-
-
-##介绍我的《为中国思想趋向求答案》
+## 介绍我的《为中国思想趋向求答案》
 
 作为一个热心关切中国思想趋向和时代前途的人，我已经习惯性的东翻西找，给这个问题寻求答案，从黑夜直到黎明。我的小天地靠近河边，住在台湾的人，很少能像我这样单独的享受充分的星光与月色，在人世的兴衰里午夜神驰。
 
@@ -59,9 +61,7 @@ whereisthysting！
 
 1964年5月在台湾
 
-
-
-##给谈中西文化的人看看病
+## 给谈中西文化的人看看病
 
 三百年前，徐昌治编了《圣朝破邪集》。这八卷论丛是中国人对西洋近代文明最早的抗议文献，也是最有力的反西化理论的集成。
 
@@ -369,9 +369,7 @@ Civilizationissyphilization.
 
 《文星》第五十二期，1962年2月2日
 
-
-
-##我要继续给人看看病
+## 我要继续给人看看病
 
 我在五十二号的《文星》上发表《给谈中西文化的人看看病》以后，五十天来，挨了不少“臭骂”（这二字借自胡秋原先生）。有的腾文于杂志，有的匿名于邮简。但用光明正大的态度批评我的，除了徐道邻先生的通讯和胡秋原先生的长文（皆见五十三号《文星》）外，再也找不到了。所以在这篇文字里，我只想就两位先生的观点，提出进一步的诊断。
 
@@ -889,9 +887,7 @@ Civilizationissyphilization.
 
 《文星》第五十四期，1962年4月1日
 
-
-
-##敬答吴心柳先生
+## 敬答吴心柳先生
 
 心柳先生：
 
@@ -971,9 +967,7 @@ Civilizationissyphilization.
 
 吴心柳3月13日香港
 
-
-
-##“文化太保”谈梅毒
+## “文化太保”谈梅毒
 
 在一个优势文化的猛扑下，落后地区是没有办法妄谈选择的，好的固该笑脸迎，“坏”的也要和血吞。它们的“缺点”与“流弊”不是落后地区可以“预防”的，这种难题在理论上似乎杀风景，但在事实上却的确莫奈何！
 
@@ -1133,9 +1127,7 @@ d．EvanW.Thomas,“Syphilis:ItsCourstandManagement”withbibliography（NewYork
 
 读者李成10月2日香港
 
-
-
-##论“处女膜整形”
+## 论“处女膜整形”
 
 打开报纸，常常可以看到两种奇妙的广告：一种是“警告逃妻”；一种就是“处女膜整形”。所谓“处女膜整形”，只是这一类广告的通称。它的表达法有多种，比如：
 
@@ -1527,9 +1519,7 @@ Thatguidesthishandtogivethiswoundtome.
 
 三段旧文献，有的比中国开明（如二），有的跟中国类似（如一、三），有比中国还别出心裁（如用石头打死女人）。
 
-
-
-##中国思想趋向的一个答案
+## 中国思想趋向的一个答案
 
 “无党无派”的自立晚报，希望我这个“无党无派”的人，用四千字的篇幅，给1964年元旦特刊写篇谈中国思想趋势的文字。我知道这是一件不容易的事。
 
@@ -1589,9 +1579,7 @@ Thatguidesthishandtogivethiswoundtome.
 
 （后记）这篇文章，原登在台北《自立晚报》1964年的元旦特刊。是《自立晚报》的社长叶明勋先生拉我写的。（《自立晚报》编辑部“新岁献言”编者略）
 
-
-
-##文化论战的尾巴
+## 文化论战的尾巴
 
 文化论战发生以后十个月，我曾在《十三年和十三月》里写道：
 
@@ -1608,6 +1596,3 @@ Thatguidesthishandtogivethiswoundtome.
 过去的大星已殒落，现在的大星又在哪儿？如果时代不许你的光芒再大，那么，殒落吧，你这颗小星！
 
 1964年6月
-
-
-
