--- a/03.惊世杂文类/为文学开窗.md
+++ b/03.惊世杂文类/为文学开窗.md
@@ -1,4 +1,8 @@
-#《为文学开窗》目录
+# 为文学开窗
+
+<!-- toc -->
+
+## 目录
 
 * 一、没有窗，哪有“窗外”？
 * 二、开窗以后
@@ -22,9 +26,7 @@
 * 二十、介绍一套你该一看的奇书
 * 二一、不论见望，斜眼必矣！
 
-
-
-##没有窗，哪有“窗外”？
+## 没有窗，哪有“窗外”？
 
 今日的中国文坛，像一间暗室。暗室四面，没有窗。
 
@@ -725,9 +727,7 @@ Marksofweakness,marksofwoe.
 
 1980年4月27日夜
 
-
-
-##开窗以后
+## 开窗以后
 
 《没有窗，哪有“窗外”？》发表后，引起原子弹的效果，四面八方，反应太多，我把骂我的部分反应，引证在下面，以示雅量。
 
@@ -855,9 +855,7 @@ Marksofweakness,marksofwoe.
 
 1980年10月25日
 
-
-
-##“花落谁家”与“头落谁家”
+## “花落谁家”与“头落谁家”
 
 1966年5月10日的《台湾日报》上，登出王柳敏的《琼瑶一篇文章，王引几句闲话》，谈到琼瑶对王引改编她的《花落谁家》，大为不满之后，王引反唇相讥——
 
@@ -933,9 +931,7 @@ Marksofweakness,marksofwoe.
 
 1980年10月25日
 
-
-
-##我们应该打倒的滥套词汇
+## 我们应该打倒的滥套词汇
 
 ——以《窗外》为例
 
@@ -1011,9 +1007,7 @@ Marksofweakness,marksofwoe.
 
 1966年8月25日
 
-
-
-##论头不可乱摔
+## 论头不可乱摔
 
 读《窗外》，看到琼瑶造了新词汇，如：
 
@@ -1033,10 +1027,7 @@ Marksofweakness,marksofwoe.
 
 1966年8月25日
 
-
-
-
-##对所谓“女作家”送我所谓“泻药”的一个声明
+## 对所谓“女作家”送我所谓“泻药”的一个声明
 
 《十月小阳春》的作者钟梅音女士《给李敖的一帖泻药》（《文星》第八十一期，1964年7月1日台北出版），我很感谢。不过我现在不宜服“泻药”，因为我没有茅坑可以拉屎，吃了“泻药”，大便畅快而来，岂不要拉野屎？故我建议钟女士，请准许我将这帖“泻药”移赠给那些“占着茅坑不拉屎”的人，例如沈刚伯先生、李济先生……不知善做股票生意的钟女士以为如何？
 
@@ -1080,9 +1071,7 @@ Marksofweakness,marksofwoe.
 
 萧孟能敬复6月18日，《文星》第八十期1964年6月1日
 
-
-
-##居浩然论“硬抑别兴”
+## 居浩然论“硬抑别兴”
 
 1972年7月7日，老友居浩然写了一篇专论他自己文章的文章，他从澳大利亚墨尔本寄来给我，我保存至今。如今，居浩然死了，我重看这篇文章，深深感到浩然老友的见解飘逸、才气纵横，我决定把它宣传给大家看，下面就是这篇文章——
 
@@ -1116,37 +1105,35 @@ Marksofweakness,marksofwoe.
 
 1985年8月24日
 
-
-
-##《硕鼠》今译
+## 《硕鼠》今译
 
 《诗经》中《硕鼠》一诗，是几千年前中国人对黑暗统治者的抗议。1983年8月24日，我在法院旁听椅子上，译成白话，古今对照于后。
 
-硕鼠硕鼠，	胖老鼠啊胖老鼠，
+硕鼠硕鼠， 胖老鼠啊胖老鼠，
 
-无食我黍！	别吃我黄黍！
+无食我黍！ 别吃我黄黍！
 
-三岁贯女，	养你养了三年多，
+三岁贯女， 养你养了三年多，
 
-莫我肯顾。	你却对我不照顾。
+莫我肯顾。 你却对我不照顾。
 
-逝将去女，	我要发誓离开你，
+逝将去女， 我要发誓离开你，
 
-适彼乐土。	去到那乐土。
+适彼乐土。 去到那乐土。
 
-乐土乐土，	乐土啊乐土，
+乐土乐土， 乐土啊乐土，
 
-爰得我所。	那儿才是我住处。
+爰得我所。 那儿才是我住处。
 
-硕鼠硕鼠，	胖老鼠啊胖老鼠，
+硕鼠硕鼠， 胖老鼠啊胖老鼠，
 
-无食我麦！	别吃我小麦！
+无食我麦！ 别吃我小麦！
 
-三岁贯女，	养你养了三年多，
+三岁贯女， 养你养了三年多，
 
-莫我肯德。	你却对我还赖债。
+莫我肯德。 你却对我还赖债。
 
-逝将去女，	我要发誓离开你，
+逝将去女， 我要发誓离开你，
 
 适彼乐国。去到那乐国。
 
@@ -1170,9 +1157,7 @@ Marksofweakness,marksofwoe.
 
 谁之永号？那儿住下，谁还大哭大号？
 
-
-
-##“试吟紫芝曲，应与夏黄同”
+## “试吟紫芝曲，应与夏黄同”
 
 光华商场二楼庄敬书画古艺馆赵中令先生，是国学大师章太炎（炳麟）的小学生。章太炎，浙江余杭人，国学造诣奇高，后倡革命，1903年起，以《苏报》案坐牢三年，同案的“小弟”邹容瘐死。出狱后，东渡日本，主编《民报》，有功革命极大。民国成立后，1914年，又被袁世凯软禁，绝食几死，并谓：“吾死以后，中夏文化亦亡矣！”
 
@@ -1214,9 +1199,7 @@ Marksofweakness,marksofwoe.
 
 1986年8月23日
 
-
-
-##“吾梦不堪碎”
+## “吾梦不堪碎”
 
 爱尔兰诗人叶芝（W.B.Yeats）老去写诗说：“我已梦得疲惫不堪。”（“Iamwornoutwithdreams.”）他对梦的写作、他对梦的珍惜，在一首题为HewishesfortheClothsofHeaven（《他想要天上的呢绒》）中，表露得极为细腻。这首诗的原文是：
 
@@ -1278,9 +1261,7 @@ Treadsoftlybecauseyoutreadonmydreams.
 
 1989年3月4日
 
-
-
-##“或沦无底，或达仙乡”
+## “或沦无底，或达仙乡”
 
 英国诗人丁尼生（AlfredTennyson）写《尤利西斯》（Ulysses）诗，中有警句，《天演论》（EvolutionandEthics）引用之，严复迻译如下：
 
@@ -1302,9 +1283,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 1988年6月7日
 
-
-
-##记莲
+## 记莲
 
 《本草》记“莲藕”：“其根藕、其实莲、其茎叶荷。”再按《淮南子》中《兵略训》注：“荷，莲华也。”则不但莲的“茎叶”叫荷，莲的“华”（花）也叫荷。
 
@@ -1342,9 +1321,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 1968年7月24日下午一小时写定
 
-
-
-##中国文学史中的异源合流
+## 中国文学史中的异源合流
 
 中国文学从古代起，就分为两大干流：一是民间的；一是文人的。这两者来源不同。例如上古的民间文学是“风”，文人文学则是“雅”和“颂”；又如中古的民间文学是汉魏六朝唐的乐府；文人文学则是汉魏六朝唐的诗赋；再如近古的民间文学是宋词元曲，文人文学则是呆板的诗文。……这两大干流、分野都很明白。
 
@@ -1356,9 +1333,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 1981年11月1日
 
-
-
-##中国文学史中的小品文突出
+## 中国文学史中的小品文突出
 
 文学在中国古代，是跟道家、方士、阴阳、纵横家的思想相近的东西，文学寄生在思想文学中，思想文字也孕育出文学。《庄子》中的许多表达，既是思想文字，也是文学。
 
@@ -1366,9 +1341,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 1981年11月1日
 
-
-
-##论中西戏剧
+## 论中西戏剧
 
 习惯了“西皮倒板”式京戏的中国人，实在不容易感受到西方戏剧进步的痕迹。中国戏剧从唐朝的梨园乐，到宋朝的杂剧、鼓子词，到金朝的杂剧、搊弹词、连厢词，到元朝的北曲，到明朝的南曲，直到清朝的京戏、地方戏。声色的范围与深度，相当有限；进步的速度，也备极缓慢。因而在世界戏剧史上，中国戏剧的地位如何，也就一看便知。
 
@@ -1378,9 +1351,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 1982年2月1日
 
-
-
-##我与序
+## 我与序
 
 有人生平喜欢给人写序，胡适之流是也；有人生平不喜欢给人写序，李敖之流是也。
 
@@ -1434,9 +1405,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 为什么要寄到中央研究院呢？因为这最高学术研究机构有个一般人所无的特权，可以进口大陆出版书籍。也因为如此，刘凤翰尽可大胆将王威原著换上自己姓名出书。但他的业师李宗侗教授为什么也助纣为虐呢？若是刘凤翰以大陆出版原书请他业师过目，而李教授仍为之作序，那是通同舞弊。若是刘凤翰不惜抄录之劳，将王书抄本送呈业师过目，难道李教授连抄袭的痕迹都看不出来？还是明知故隐？再如图片等件，顶多只能从原书剪下呈阅，其中“北京”字样犹存，李教授会看不出来？而且在李所作序言说他自己也搜集有“几近万言”的重修圆明园材料，交刘凤翰整理，则李本人更应深知其中甘苦。哪些是刘凤翰可能找到的材料，哪些是不可能找到的材料，例如王威1953年在圆明园所做一个月的实地调查，刘凤翰根本办不到。李教授不问个究竟就乐为之序，岂不是与学生串同欺骗见不到王威原著的读者？由此台湾成为文化沼泽的原因，在《圆明园》里又找到一个！
 
-
-
-##“中国思想与修辞”（RhetoriceinChineseThought）这门课
+## “中国思想与修辞”（RhetoriceinChineseThought）这门课
 
 表达自己思想的极致是“雅”和“达”（“雅”是表达得巧妙；“达”是表达得清楚）；表达别人思想的极致是“信”“雅”“达”（“信”是表达得正确）。严复主张对外人思想翻译要“信”“雅”“达”，其实对国人思想也应如此、对中国古人思想也应如此。孔子讲“辞达”、孟子讲“知言”、《易经》讲“修辞”，关键都在表达思想，和了解别人思想的表达。
 
@@ -1446,9 +1415,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 1995年5月22日
 
-
-
-##语出何典，何能不检点？
+## 语出何典，何能不检点？
 
 今年大专联考，国文作文题是《忧劳所以兴国，逸豫适足亡身》，出了大纰漏，暴露了出题的和支持这样出题的大老爷们的知识程度，证明了他们虽然花太多时间去提倡复兴中华文化，但却花太少时间去看古书。
 
@@ -1468,9 +1435,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 1979年8月31日
 
-
-
-##校书别记
+## 校书别记
 
 校《戏剧纵横谈》
 
@@ -2306,9 +2271,7 @@ ItmaybeweshalltouchtheHappyIsles.
 
 李敖敬上1969年6月26日
 
-
-
-##介绍一套你该一看的奇书
+## 介绍一套你该一看的奇书
 
 远流出版社的王荣文，是中国出版史上最有创造性大手笔的小兄弟。四年前，他和我合作，出版《中国历史演义全集》，创造出中国出版史上划时代的大轰动。四年以后，他写信给我，说：“香港那边，台湾这边，都整理了无数的国学材料，但几乎还没有一个人为现代读者整理出一套可以读得下去、读得懂、包含各方面文化精华的中国名著全集。”因此他相信：“如果能把中国的东西整理出一个定品”，该是一件最值得做的事。
 
@@ -2780,9 +2743,7 @@ ItmaybeweshalltouchtheHappyIsles.
 199、徐霞客游记——徐宏祖
 200、方望溪先生全集——方苞
 
-
-
-##不论见望，斜眼必矣！
+## 不论见望，斜眼必矣！
 
 《鸡肋集》记苏轼说：“陶渊明意不在诗，诗以寄其意耳。采菊东篱下，悠然望南山，则既采菊又望山，意尽于此，无余蕴矣，非渊明意也。采菊东篱下，悠然见南山，则本自采菊，无意望山，适举首而见之，故悠然忘情，趣闲而景远。……”蔡宽夫《诗话》也说，俗本以“见”字为“望”字乃“害理”也。
 
@@ -2801,6 +2762,3 @@ ItmaybeweshalltouchtheHappyIsles.
 陈诚大老粗时代，带兵赏月，下口令：“向上看（月）！”——此目不斜视之极也。陶渊明若躬与其“望”，必“见”逃为逃兵矣！
 
 1992年7月28日
-
-
-
