--- a/03.惊世杂文类/为自由招魂.md
+++ b/03.惊世杂文类/为自由招魂.md
@@ -1,4 +1,8 @@
-#《为自由招魂》目录
+# 为自由招魂
+
+<!-- toc -->
+
+## 目录
 
 * 一、独裁中的民主
 * 二、张宗昌，我梦到了你！
@@ -22,9 +26,7 @@
 * 二十、为什么涨价？
 * 二一、《叶明勋密件》书后
 
-
-
-##独裁中的民主
+## 独裁中的民主
 
 19世纪英国的工业革命（IndustrialRevolution），根本上引起了世界经济与社会的改变。工业革命后，兴起了许多有钱的资本家，他们是所谓中产阶级。他们在有钱以后，要取得“权势”，所以努力争取政治上的保障和地位，因而开了近代西方自由民主政治的先河。
 
@@ -122,9 +124,7 @@
 
 1965年6月8日
 
-
-
-##张宗昌，我梦到了你！
+## 张宗昌，我梦到了你！
 
 我的身份证上是吉林人，可是我的祖籍是山东。作为一个具有固有文化中“怀乡”美德的我，在梦里，我回到了四十年前，回到了山东。
 
@@ -172,9 +172,7 @@
 
 〔后记〕这篇十九年前的旧作，当时未能在台湾发表。现在十九年过去了，我把它发表在“李敖千秋评论丛书”里。十九年来，我唯一该更正的是：我对“军阀”张宗昌们好有一比，实在比得太侮辱他们了。很多整年反对“军阀”的人，其实远不如“军阀”，我跟这种人活在一起愈久，我愈相信这一结论！（1984年1月4日）
 
-
-
-##开玩笑的自由
+## 开玩笑的自由
 
 现代人所争的自由，像“身体自由”“居住自由”“迁徙自由”“信教自由”“财产自由”“工作自由”“契约自由”“集会自由”“结社自由”“秘密通信自由”，以至“言论、讲学、著作及出版自由”等等，都可叫做“义正词严的自由”，它们的争来，都经过多少血泪一在统治者死不愿给、被统治者拼命想要的拉锯下，血泪交流，才算进进出出。所以，这些自由，都有点大悲调，都无喜剧成分可言。
 
@@ -226,9 +224,7 @@
 
 1979年11月18日，《中国时报》1979年11月22日
 
-
-
-##没有演说的自由
+## 没有演说的自由
 
 高雄医学院医学系学生会和赵毅先生：
 
@@ -236,9 +232,7 @@
 
 李敖1980年4月4日
 
-
-
-##流血的自由
+## 流血的自由
 
 中国的俗话说：“杀人不见血”，这是一句很惊心动魄的话。所谓“杀人不见血”，有两层意义，两层都是有利于“杀人者”的：
 
@@ -286,9 +280,7 @@
 
 1981年，出狱后又行将入狱之时，在台北改写
 
-
-
-##记一位没有“流血的自由”的先烈
+## 记一位没有“流血的自由”的先烈
 
 禹之谟是湖南湘乡人，有文气，也有侠气。他在1900年参与革命，在唐才常事件脱险，再接再厉，还革个没完。有“贾谊论”派的人，劝他藏器待时，他说：
 
@@ -304,9 +296,7 @@
 
 1981年7月22日
 
-
-
-##漫画的自由意义
+## 漫画的自由意义
 
 《孟子》里有一句话，叫：“说大人，则藐之。勿视其巍巍然。……吾何畏彼哉！”意思是说：见那些大人物呀，可要轻视他们，别给他们唬住了。……为什么要怕他们呢？
 
@@ -326,9 +316,7 @@
 
 《中国时报》1979年11月20日
 
-
-
-##不拍马屁的自由
+## 不拍马屁的自由
 
 在马屁阵阵的时代里，想要维持不拍马屁的自由，也大不易。因为不拍马屁的自由，属于沉默的自由之一。没有沉默的自由，就不会有不拍马屁的自由。
 
@@ -344,9 +332,7 @@
 
 1981年12月1日
 
-
-
-##梦做骆马的自由
+## 梦做骆马的自由
 
 人类最早的罢工描写，是从希腊剧作家亚里士多帕里斯开始的。他在《女人与和平》一剧里，描写雅典与斯巴达战争，前后打了二十七年，可是还没打完。女人们烦死了，认为不罢一次工是不行了，于是全体约好，跑到山上去，不准男人深入人身。最后男人屈服，决心把战争停止。从此以后，罢工的观念深入人心，人类开始进步了。
 
@@ -382,9 +368,7 @@
 
 1981年12月1日
 
-
-
-##论唱反调
+## 论唱反调
 
 八十年前（1902年），美国最高法院大法官出了空缺。老罗斯福总统物色到马萨诸塞州的首席法官小奥立佛温代尔霍姆斯（OliverWendellHolmes,Jr.），认为霍姆斯会支持他。不料霍姆斯到了华盛顿，干起大法官来，却对老罗斯福不买账。老罗斯福气得大骂：“我可以用一根香蕉削出比那家伙还有脊梁的法官来！”（Icouldcarveoutofabanana,ajudgewithmorebackbonethanthat!）
 
@@ -426,9 +410,7 @@
 
 1982年3月21日
 
-
-
-##“敢怒而又敢言”的自由
+## “敢怒而又敢言”的自由
 
 人民对政府的态度，可分三种：
 
@@ -474,9 +456,7 @@
 
 1982年3月28日
 
-
-
-##月亮属于谁的？
+## 月亮属于谁的？
 
 ——维护出版自由的一篇文献
 
@@ -502,9 +482,7 @@
 
 1982年6月21日
 
-
-
-##我们梦想“野蛮之自由”
+## 我们梦想“野蛮之自由”
 
 孙中山在《檀香山隆记报》写过一篇文章，叫《驳保皇报》，有一段说：
 
@@ -620,9 +598,7 @@
 
 1983年1月17日
 
-
-
-##读警总秘密会议记录
+## 读警总秘密会议记录
 
 最近我们透过秘密管道，得到一件警备总部的秘密会议记录（残本），记录标明“机密”“最速件”“（73）隆彻字第4309号”，读后令人触自惊心。
 
@@ -738,9 +714,7 @@
 
 1985年1月19日晨
 
-
-
-##秘雕案的案外意义
+## 秘雕案的案外意义
 
 ——我们该先争哪种自由？
 
@@ -820,9 +794,7 @@
 
 1983年2月6日
 
-
-
-##还是第一声最像
+## 还是第一声最像
 
 这次“立法院”质询，国民党大官人讲了一堆又一堆的连他们自己都不信的屁话，其中一种屁话是关于报禁问题的。这个问题纠缠得太久了，不论党内党外，都被它缠糊涂了，我决定彻底把它谈一次，给大家做一点“机会教育”。
 
@@ -962,9 +934,7 @@
 
 1983年3月27日
 
-
-
-##“春风吹又生”
+## “春风吹又生”
 
 ——新乐府，志大有为政府抢书也
 
@@ -978,9 +948,7 @@
 
 1983年5月27日
 
-
-
-##肚皮里的言论自由
+## 肚皮里的言论自由
 
 ——从“东北作家”到东南家里坐
 
@@ -1614,9 +1582,7 @@ C于4月13日上午10时谈至11时得李科长之结论后辞出。迄今整整
 
 1983年10月17日清晨一点到五点三刻
 
-
-
-##政治迫害音乐的讨论
+## 政治迫害音乐的讨论
 
 《台湾舞曲》进入官方音乐厅（黄怡）
 
@@ -1740,9 +1706,7 @@ C于4月13日上午10时谈至11时得李科长之结论后辞出。迄今整整
 
 1983年12月12日
 
-
-
-##为什么涨价？
+## 为什么涨价？
 
 这个月起，党外周刊联合启事，说“因近日查禁严重，成本增加”“经营日益困难”，所以要调整一下售价，“敬请继续惠予支持”。这一处境，“千秋评论”“万岁评论”也是一样，所以售价也要调整一下。自来我们因义受难，钱都是我们赔，别人是不负担的：禁书搜书的警总不负担，印书的厂商、批书的中盘、售书的书店、卖书的小贩、买书的读者，统统是不负担的。现在，在国民党疯狂的查禁行动下，为了不被它打倒，调整一点售价，由读者（包括买书的敌人）稍微分担一小部分，也属情理之常。
 
@@ -1768,9 +1732,7 @@ C于4月13日上午10时谈至11时得李科长之结论后辞出。迄今整整
 
 1985年1月17日
 
-
-
-##《叶明勋密件》书后
+## 《叶明勋密件》书后
 
 “中华书局”的《中华民国当代名人录》里，“当代名人”叶明勋的简历如下：
 
@@ -1849,6 +1811,3 @@ C于4月13日上午10时谈至11时得李科长之结论后辞出。迄今整整
 看了《叶明勋密件》，深深令人感到做国民党文学侍从之臣的可怜，和国民党控制言论自由的可恨。国民党整掉李万居的《公论报》、整掉李家班的《自立晚报》，它的魔掌，是无孔不人的。它会整你，直到你听命于它为止。如今《自立晚报》听命于它了，名“自立”，实不“自立”，李家班时代的那点余韵流风，已经完全看不见了！
 
 1985年4月18日晨
-
-
-
