--- a/03.惊世杂文类/你是景福门.md
+++ b/03.惊世杂文类/你是景福门.md
@@ -1,4 +1,8 @@
-#《你是景福门》目录
+# 你是景福门
+
+<!-- toc -->
+
+## 目录
 
 * 一、景福门，你们来个屁！
 * 二、双城外记
@@ -43,9 +47,7 @@
 * 四一、民进党挨揍挨得太没意义了
 * 四二、凤凰梦破
 
-
-
-##景福门，你们来个屁
+## 景福门，你们来个屁
 
 美国独立战争时候，一个法国贵族叫拉斐德（MarquisdeLafayette）的，在1777年7月抵达新大陆，参加了反抗英国的作战。他那时二十岁，被任命为少将，很有战功。1779年他回法国，劝说法国国王路易十六（LouisⅩⅥ）派出六千人的远征军支持殖民地人民。1780年他再返新大陆，协助美国独立战争，直到成功为止。1782年他回法国。1784年访问美国，成为好几个州的公民，极得美国人的景仰。此后五年中，他成为法国开明贵族的领袖。1789年法国大革命爆发，他躬与其役。但他反对国王退位、反对过激的权力转移，最后亡命在外，被奥地利幽囚五年。直到1799年拿破仑（BonaparteNapoleon）当政，他才回归祖国。路易十八（LouisⅩⅧ）在位期间，他任众议院议员。1824到1825年间，他又访问美国，受到热烈的欢迎。1830年他指挥国民自卫军，推翻査理十世（CharlesⅩ），迎接路易腓力普（Louis-Philippe）就职。不久退隐于野，1834年死去，活了七十七岁。由于拉斐德一生功在新旧大陆，他被尊为“两个世界的英雄”（theHeroofTwoWorlds）。美国人民为了崇德报功，特别在1824年，在他六十七岁时候，由国会通过，以美金二十万、土地一方为赠，这种赠礼，也算是一种义助，因为拉斐德本人的财产，已在法国大革命时被充公以去，那时候举国若狂，还骂他是卖国贼呢！
 
@@ -59,9 +61,7 @@
 
 1989年5月24日
 
-
-
-##双城外记
+## 双城外记
 
 5月19日我在师大演讲，师大学生问我对这次天安门事件的看法。我铁口直断，说共产党忍无可忍时候一定出兵，军队一开出来，一切学生运动立刻云散烟消。——别以为共产党干不出来，共产党才干得出来呢！
 
@@ -85,9 +85,7 @@
 
 1989年6月9日夜
 
-
-
-##别信“匪情专家”
+## 别信“匪情专家”
 
 昨天午前陈又亮自美国打电话来，告诉我北京清华大学学生在天安门广场散发《李敖论五四》一文的事，两人顺便聊起北京的情形。陈又亮是我台大小老弟中最慧黠过人的，跟他聊天，相激相荡之下，每多妙悟。挂掉电话，我就立刻想写这篇文章。
 
@@ -109,9 +107,7 @@
 
 1989年6月9日
 
-
-
-##从橘子汁到洋酒
+## 从橘子汁到洋酒
 
 6月11日我在《世界论坛报》发表《双城外记》，提到这样一个故事：文星书店有限公司董事长兼李敖出版社董事长苏荣泉，6月4日从北京天安门归来，据他实地了解，天安门广场的学生中，固然有绝食等悲壮表现，却也有另一种现象，可以观察他们的艰苦。有外地来的学生，在天安门前可以享受到香港方面来的免费补给品，可喝到每罐价值三块两毛五的可乐和四块五的橘子汁。而他们的工人工资，每天才四元，学生比工人更穷。如此在天安门有得吃有得喝，无怪北京学生认为该见好就收、外地学生却不肯了。争取自由民主活动，未免抽象；但可乐、橘子汁却是实惠的。令人想起最后挨枪的他们，固为争取自由民主而死，但又何尝不也为了那几罐可乐、橘子汁啊？他们的境遇，真令人同情。
 
@@ -129,9 +125,7 @@
 
 1989年6月13日
 
-
-
-##大风起兮
+## 大风起兮
 
 大风先生的《新官场现形记》业由李敖出版社出版。大风出身台大外文系，在文学院比我高两届，在学校我们并不认识。他毕业后，进政大新闻研究所。1961年，考入外交部，从非洲、菲律宾任职返台，转任外交部欧洲司科长，1969年派到墨西哥任二秘；1972年后出任外交部发言人；1974年派到巴拿马任一秘，实则主持大使馆工作；1975年派到哥伦比亚任一秘；1978年派到巴拉圭任参赞。在巴拉圭期间，他公开发表了批评国民党当局的文章，惹恼当局，当局软硬兼施，要他返台，他软硬都不吃，投奔了“奴役”。——他全家到了美国，与中国驻美大使馆取得了联系，为祖国统一，展开了积极工作。他现任联合国人口基金会一级专员和新闻发布官。他是浙江人，为人慷慨热情，为文淋漓痛快。
 
@@ -159,9 +153,7 @@
 
 1989年6月24日
 
-
-
-##共产党饶你，我不饶你
+## 共产党饶你，我不饶你
 
 我女儿的外公——河南的王光临先生，年前郁郁死去，死时八十多岁，已属长寿，为何郁郁呢？因为他在开放探亲以后，仍不敢回家乡。他在家乡，官拜少将，为了革命，杀人无算。他在河南，地位一如蒋经国在江西的专员职务，生杀予夺，不在话下。为了革命的需要，连他的小舅子都被当成共产党杀掉，其大义灭亲气派，由此可见。逃到台湾后，王少将落魄，下放做台北县南港成德国小校长，大才小用矣！有一次为了接我女儿回来，与他发生冲突，他气得在电话中大骂：“你是共产党！共产党！共产党！”河南土话中党字发平声而不发仄声，听来每逢党字出口，都是男高音，闻之尤觉恐怖。我想，他老先生在河南杀共产党，恐怕认定标准，就是这样从宽录取的。他在台湾，如果有河南专员万分之一的权力，我早就被当成共产党杀了。
 
@@ -187,9 +179,7 @@
 
 1989年9月10日
 
-
-
-##寄语刘宾雁老乡
+## 寄语刘宾雁老乡
 
 好友潘毓刚教授、许以祺博士分别从美国打电话来，说刘宾雁这回去台湾，很想去见你。你上次拒见林希翎，这回可不要拒见刘宾雁了。
 
@@ -205,9 +195,7 @@
 
 1989年12月17日
 
-
-
-##“民运”“民阵”的归宿
+## “民运”“民阵”的归宿
 
 刘宾雁这次来台，我不肯见他。他赠书写信来，我题诗回去。最后两句是：“朱弦休为蓝衣绝，白山黑水子何之？”事后王企祥问我：“蓝衣”改成“青衣”是不是好一点？我说蓝衣特指国民党（国民党有蓝衣社），与红色（朱弦）的共产党相对，意在期勉刘宾雁立场要站稳，不要把自己跟国民党扯在一起。
 
@@ -223,9 +211,7 @@
 
 1990年1月2日
 
-
-
-##美国违反人权记录大曝光
+## 美国违反人权记录大曝光
 
 3月27日，中国外交部长钱其琛驳斥美国对中国人权记录的批评。他说，任何国家或团体自订标准加诸在别的国家作为国际规范，是项不获容许的行为。钱其深也间接指控美国伪善，他说，华盛顿至今未同意的重要人权条约，即因这些条约与美国的法律抵触，但美国却动辄强迫其他国家更改法律及规章。
 
@@ -257,9 +243,7 @@
 
 1991年4月1日
 
-
-
-##改烧自己人
+## 改烧自己人
 
 在埃及北部的塞德港（PortSaid），市民年年以焚烧一名前英国髙级专员的刍像庆祝新春。今年，他们觉得，同为阿拉伯人的萨达姆侯赛因（SaddamHussein）侵略科威特之可恶，较英国帝国主义有过之而无不及，所以，如报上美联社的图片所示，在4月8日的焚刍大会上，他们换上侯赛因的板雕漫画像，改烧自己人了。
 
@@ -269,9 +253,7 @@
 
 1991年4月15日
 
-
-
-##库尔德真苦-美国伪善
+## 库尔德真苦-美国伪善
 
 库尔德人已经不是第一次看到他们梦寐以求的自由，像海市蜃楼一样的化为泡影。美国也不是第一次鼓励这一群山区部落民族叛变，然后又把他们抛弃。
 
@@ -303,9 +285,7 @@
 
 1991年4月15日
 
-
-
-##魏德迈“客观”吗？
+## 魏德迈“客观”吗？
 
 魏德迈（AlbertC.Wedemeyer）将军死了。12月20日，《自由时报》以“中华民国之友/客观有风度的军人/美将领魏德迈逝世”为大标题出现，我这历史家，一看就不服气。
 
@@ -317,9 +297,7 @@
 
 1989年12月21日
 
-
-
-##简体字与“为匪宣传”
+## 简体字与“为匪宣传”
 
 8月20日报上说：台北地检处将于24日上午，传讯人权论坛杂志社发行人刘千云、社长周自立等人，调査有关涉及为“匪”宣传的犯罪事实。由于《人权论坛》杂志以简体字刊载中共《政府工作报告》，而被行政院新闻局认为有为“匪”宣传嫌疑，移送台北地检处侦办。另外，据传世台会开会期间，曾有团体、个人散发简体字文稿，台北地检处亦将深入了解，有无涉及不法情事。根据《惩治叛乱条例》第7条有利叛徒宣传罪规定，以文字、图书、演说为有利于叛徒之宣传者，处七年以上有期徒刑，刑责不轻。
 
@@ -329,9 +307,7 @@
 
 1988年8月21日
 
-
-
-##青天白日满地“红”
+## 青天白日满地“红”
 
 10月28日，国民党《中央日报》登出新闻局局长邵玉铭的谈话，“对有关日前他指苏联是我国的敌人，与外长连战说对苏联保持‘不明确’的态度，是否有抵触的问题时作了说明。他说，苏联侵略我国国土，扶植中共，并支持中共对台湾的主张，从这些历史上的事实来看，苏联是我国的敌人。不过，邵玉铭也认为，外交政策维持‘不明确’的态度，可使国家在外交活动上有较大的回旋空间，对国家的利益自然有所帮助。”这些谈话，充分看出国民党“打苏联牌”心劳计拙的窘态。为什么窘态？因为国民党“打苏联牌”的情结，已经爱恨交并了六十多年，其间分分合合，高潮迭起。整个的结论，套李密《陈情表》中“臣无祖母，无以至今日；祖母无臣，无以终余年”的句子，该是“国民党无苏联，无以至今日；苏联无国民党，无以终余年。”看来看去，不过如此而已。
 
@@ -343,9 +319,7 @@
 
 1988年10月28日
 
-
-
-##恶心到大陆去了
+## 恶心到大陆去了
 
 四十年来，国民党在台湾搞偏安政权、不入流文化，虽然荼毒生灵，所幸范围止于海隅、为祸尚不及于广大中国。不料自从对大陆弛禁以后，国民党式的“产品”，一窝蜂而入，于是污染所及，万里朱殷矣！
 
@@ -361,9 +335,7 @@
 
 1989年5月16日
 
-
-
-##是谁自欺欺人？
+## 是谁自欺欺人？
 
 8月11日《自立早报》上，登有一篇报道，大意说：新任韩国“驻华大使”韩哲洙，昨日在谈论有关韩国改称中共为“中国”一事时，轻描淡写地将之归因于“纯地理因素”，丝毫未顾及“中韩”仍保持正式外交之事实，因而显得这位甫上任的外交使节，其职前专业训练犹有欠缺。事实上，自20世纪80年代起，韩国与中共互相邀访的学者即迭次在研究报告中，建议将中共改称为“中国”，而韩国报刊杂志，更是早已奉行多时，其官方最近的“改名”之举，绝非偶然。称中共为“中国”，韩国可归因于诸如国家利益、国际环境、甚或世界潮流使然，却绝对不宜自欺欺人地妄称仅是地理因素，否则一旦我国朝野皆以“高丽驻华大使”或“南朝鲜驻华大使”相呼，且公开而严肃地表明此项称呼毫无其他意味时，韩哲洙又作何感想？
 
@@ -377,9 +349,7 @@
 
 1988年8月12日
 
-
-
-##为“反共义士”进一解
+## 为“反共义士”进一解
 
 “义士”一词，在中国有长远的历史。古书中《墨子》《庄子》《荀子》《左传》《战国策》中，都有这词儿出现，可见中国人对“义士”的尊重，是源远流长的。宋朝洪迈《容斋随笔》卷八“人物以义为名”条下说：“至行过人曰义，义士……之类是也。”照这一定义，义士云者，是“至行过人”的超人、高人与伟人，我们不可不注意。
 
@@ -435,9 +405,7 @@
 
 1983年6月30日下午以三小时写成
 
-
-
-##劝君读篇古书
+## 劝君读篇古书
 
 现在人心大坏、国文程度也大坏，古书简直没几个人读了。因为要去台中办两天事，所以今天连写六篇文章。写到这第五篇时，忽然想到，何不带读者读篇古书呢？换换胄口，不也很好？于是就这么办了。
 
@@ -455,9 +423,7 @@
 
 1989年9月10日
 
-
-
-##台独、台独，辛苦为谁独？
+## 台独、台独，辛苦为谁独？
 
 3月26日，国民党小官僚新闻局长邵玉铭针对李鹏的谈话指出，“台独”言论在台湾是多元化民主社会正常的现象，政府不能完全压制，中共不能以此作为借口攻打台湾，中共认为应和平统一中国，就应宣布放弃武力犯台。
 
@@ -495,9 +461,7 @@
 
 1991年3月27日
 
-
-
-##《不智的立委，拿二千万人命当儿戏》读后感
+## 《不智的立委，拿二千万人命当儿戏》读后感
 
 一廖天欣《不智的立委，拿二千万人命当儿戏》
 
@@ -523,9 +487,7 @@
 
 1991年6月18日
 
-
-
-##谁杀高山族？
+## 谁杀高山族？
 
 台湾的高山族，被国民党改称为山地同胞，其实究其原始，既不山地，也不同胞。他们是真台湾人，本来好端端的住在平地上，“不知有汉”，更没想到会来了一波又一波口讲闽南话的汉人自称同胞。在这些汉人前后四百年的侵占、屠杀、压迫、驱使、虐待下，这些真台湾人衰亡了，他们是台湾原住民，可是却被同化，或被赶到山上，就这样的，他们变成了高山族，而那些喧宾夺主的汉人，却自称起台湾人来。事实上，对高山族而言，他们是假台湾人。
 
@@ -537,9 +499,7 @@
 
 1988年7月12日
 
-
-
-##原住民的呐喊
+## 原住民的呐喊
 
 由“台湾原住民族还我土地运动联盟”发起的“还我土地运动”，8月21日在台中县和平乡环山地区举行说明会后，发表《台湾原住民族还我土地共同声明》，并预定25日发动各区高山族，乘二十辆游览车到台北，向行政院抗议。这一抗议，是对的，只是对象太狭窄了，因为该被抗议的，除行政院外，还多着哪！
 
@@ -553,9 +513,7 @@
 
 1988年8月23日
 
-
-
-##这回可是真吴凤
+## 这回可是真吴凤
 
 去年年底，在民进党员和教会人士的杰作下，包括十余名高山族在内的二十多名男女，拆毁了嘉义市火车站前的吴凤铜像。同时发表演说，指吴凤“杀身成仁”的故事，是日本人和国民党制造的神话。
 
@@ -575,9 +533,7 @@
 
 1989年3月18日
 
-
-
-##自命正义之士，何不支持“原独”？
+## 自命正义之士，何不支持“原独”？
 
 3月31日，《自立晚报》登出一则我最感兴趣的消息，标题赫然是：《原住民争权益将成立临时政府十二族代表拟于4月2日召开大会宣告自治》。内文是：
 
@@ -601,9 +557,7 @@
 
 1991年4月1日
 
-
-
-##原住民世界中的台湾原住民
+## 原住民世界中的台湾原住民
 
 南美洲七个国家原住民妇女，针对所谓“哥伦布发现美洲五百周年大庆”发起抗议，并强调印第安人的权利。
 
@@ -635,9 +589,7 @@
 
 1991年4月17日
 
-
-
-##台湾原住民的声明
+## 台湾原住民的声明
 
 台湾原住民权利促进会发表声明，这是台湾的重要文献，不可不存而记之：
 
@@ -677,9 +629,7 @@
 
 1991年4月22日
 
-
-
-##为布农族抱不平
+## 为布农族抱不平
 
 “玉山国家公园”管理处长叶世文5月2日说，“玉山国家公园”园区内目前是禁猎的，这是为了让野生动物有喘息、传宗接代的机会；等到野生动物族群增加到一定数量后，将允许布农族山胞，在“玉山国家公园”园区内做游憩性的打猎活动，但这只是一种季节性的打猎活动。届时将核发执照给布农族山胞，只有领有执照的才准予打猎。但在野生动物的生殖季节不得进行。准许期间，不得猎杀雌性、幼小的动物，猎杀的数量也将有限制。他表示，布农族以前使用弓箭打猎，不会影响野生动物的族群成长，但后来改用陷阱后，就不同了。
 
@@ -689,9 +639,7 @@
 
 1991年5月3日
 
-
-
-##台湾人的“功利”性格
+## 台湾人的“功利”性格
 
 我来台湾四十年，结交台湾人无数，有真台湾人（高山族），也有假台湾人。不论真假，有些台湾人是极真诚、极可敬的，其中之一，就是刘峰松。
 
@@ -805,9 +753,7 @@
 
 上述四种民性的“根”或“源”，及其衍生的形形色色性格特征，形成了一种独特的民性，也构成了多彩多姿的台湾社会。政治家如何针对台湾民性的特点，取其长、去其短；或导其利、纠其弊，使台湾社会更和谐、更光明、更进步，应该是一件极为重要的课题。
 
-
-
-##台湾人“但爱做官”漫谈
+## 台湾人“但爱做官”漫谈
 
 《王世杰日记》去年出版，其中除了骂李敖的话外，亦颇有可读部分，未可全部以人废言。在第七册1964年2月14日条下，有这样的日记：“蔡培火来谈，谓丘念台近甚消极，吴三连杨肇嘉等不肯入国民党，且谓台湾人对政府税收、警察，以及办理地政人员之愤慨。此人颇敢说话，但爱做官。”
 
@@ -829,9 +775,7 @@
 
 1991年3月20日改作
 
-
-
-##台湾政客小气八拉的活证
+## 台湾政客小气八拉的活证
 
 国民党台北市长黄大洲和民进党台北县长尤清4月29日在台北市县共同问题研讨会中首度公开会面，但对于市县共同问题，由于双方各说各话，并未谈出具体结果。
 
@@ -845,9 +789,7 @@
 
 1991年4月30日
 
-
-
-##“黑名单”与“谁懦种”
+## “黑名单”与“谁懦种”
 
 现代史有所谓《何梅协定》，是蒋介石爪牙何应钦将军与日本军头梅津美治郎的秘密协定，何应钦直到临死前还喊冤枉说从来没有这一文件，但日本人却说你何应钦明明签了“6月9日酒井参谋长所提各种事项、期望均承诺之，且自动实施。特此通知。此致梅津司令官宛。何应钦”的文件，不是《何梅协定》又是什么？一笔糊涂账，一直扯不清。不过史家结论是：纵无此文件，也有此无异协定的事实，何应钦实在没什么好赖的。但是何老将不管，直到临死，还一直赖。
 
@@ -885,9 +827,7 @@
 
 1991年4月2日
 
-
-
-##给外省人戴帽子
+## 给外省人戴帽子
 
 台湾人法务部长萧天赞的关说案，内幕备出，阴谋论也、两李斗争论也、媒体压力论也、政治交易论也……不一而足。不过，最令我难以置信也意不能平的，是所谓外省人打击台湾人论。
 
@@ -903,9 +843,7 @@
 
 1989年10月3日
 
-
-
-##民进党的司法倒车
+## 民进党的司法倒车
 
 今天《自立早报》报道：“高雄市地院推事张盛喜加入民进党，业经屏东县党部审核通过，并派专人呈送中央党部，原定在近日内该党部新厦落成时再公布此讯息，据该党部主委苏嘉全表示，他真没想到这件事提早曝光。”“苏嘉全说：张盛喜是位踏实的司法人员，早在半年以前就表示要加入民进党，并经过三次的深入接触。原定去年11月12日国父诞辰时就加入民进党，主要是他进入司法界后感觉到竟然执政党的知识分子率先违背了国父遗教，所以他选在国父诞辰是给执政党一点小警告。”“苏嘉全并指：张盛喜认为目前执政党改革的步调过慢且不够诚意，而民进党是个新生婴儿，在精神上有些瑕疵，但可以依照‘理想’来塑造，因此他选择了民进党加入。”“张盛喜入党的介绍人是邱连辉与苏贞昌，其入党之手续均完备，于日前业经该县党部审核通过，本月25日已派专人专案呈中央党部。”
 
@@ -919,9 +857,7 @@
 
 1989年3月28日
 
-
-
-##民进党的劣币战
+## 民进党的劣币战
 
 经济学中有所谓“格雷欣法则”（Gresham'slaw），意思是说：如两种铸币，由面值相同但价值不同的金属铸成，则价值低的货币，会使价值高的货币在市面上出局。（Iftwocoinshavethesamenominalvaluebutaremadefrommetalsofunequalvalue，thecheaperwilltendtodrivetheotheroutofcirculation.）这一法则，即所谓“劣币驱逐良币（badmoneydrivesoutgood）”。
 
@@ -941,9 +877,7 @@
 
 1989年6月15日
 
-
-
-##民进党的制度战
+## 民进党的制度战
 
 三个星期前，5月25日，张俊宏和包奕洪夜访我家。他们两位的哥哥都是我的老同学，所以他们在我眼中，全是小弟弟耳，我固目无什么民进党秘书等大员也。
 
@@ -955,9 +889,7 @@
 
 1989年6月16日
 
-
-
-##民进党的权术水平
+## 民进党的权术水平
 
 昨天午前，小老弟包奕洪和张俊宏再来看我，俊宏送我一本这个月出版的《到执政之路——“地方包围中央”的理论与实际》，这本书的摘要，我已在报上先看过了，俊宏心思细密，是我早就知道的。他写这本书，这么认真的驳斥民进党中新潮流系的错误，很令人佩服。不过，在举岛滔滔的心浮气粗中，究竟有多少人肯坐下来读点书，倒不无疑问。午饭时候，我向俊宏半开玩笑的说：“你说‘地方包围中央’吗？我看地方还没包围到国民党中央，你们民进党中央，就先被地方包围了。——新潮流系在搞‘群众包围精英’‘暴民包围精英’呢，你们党中央到地方讲话，都要被嘘啊！政治不是读书人搞的，是流氓搞的，我看你这位小老弟还是别搞政治了吧？”
 
@@ -973,9 +905,7 @@
 
 1989年6月17日
 
-
-
-##民进党又何来“人格者”？
+## 民进党又何来“人格者”？
 
 8月9日，民进党施明德发表了竞选民进党主席声明全文，开宗明义就说：
 
@@ -1023,9 +953,7 @@
 
 1991年8月11日
 
-
-
-##令人忧虑的新潮流系
+## 令人忧虑的新潮流系
 
 今天晚报登：“一向被认为纪律严明的民进党新潮流系，昨天在召开会员大会时，做成一项出人意表的决议：现任民进党中执委的该系成员邱义仁、黄昭凯、李逸洋、张温鹰及黄昭辉等五人，因在日前民进党中执会抗争不力，分遭停止代表新潮流系参与民进党内权利及党权、系内权利之处分。”“这项处分决议，在台湾政治发展上，可谓破天荒第一遭，加上邱义仁目前身兼新潮流系召集人，他的受到处分，更令人对新潮流系内的长幼、从属关系感到好奇。”“据指出：邱义仁遭停权一年，并不影响他现任民进党中执委的权利，但在年底民进党四全改组时，将不可能被新潮流系推出来参选党中央任何职务。”
 
@@ -1045,9 +973,7 @@
 
 1989年7月21日
 
-
-
-##贵宾的马后炮
+## 贵宾的马后炮
 
 一周前我在台中的时候，文星书店有限公司董事长兼李敖出版社董事长苏荣泉电话向我报告说：“民进党给你寄来贵宾证，邀请你出席他们在中山楼的大会。”我说：“我不会出席的。”
 
@@ -1067,9 +993,7 @@
 
 1989年7月30日
 
-
-
-##评民进党的路线之争
+## 评民进党的路线之争
 
 3月31日的《台湾时报》上，登出了日来民进党内部美丽岛系与新潮流系，近年来因路线之争所作的重要论战文章是许信良办公室重要顾问陈昭南写的，标题是《岂可轻忽台湾人民的力量——复新潮流系发言人吴乃仁先生》。这一阵子论战，是从1月开始的。
 
@@ -1099,9 +1023,7 @@
 
 1991年3月31日
 
-
-
-##民进党挨揍挨得太没意义了
+## 民进党挨揍挨得太没意义了
 
 5月1日，民进党又有了动作，据《自立晚报》登：民进党主席黄信介今天上午11时20分，在记者会后率该党立委、国代组成之“宪改列车”出发时，在立法院外中山南路上遭警方阻挡，随后双方发生严重拉扯冲突，民进党主席及多位公职人员遭保一警察挥棒殴打，“宪改列车”随即往总统府方向行走，并在遭阻挡后静坐抗议，直至12时左右方结束对峙。民进党“宪改列车”上午在立法院群贤楼集合，但宣传车辆被警方阻挡无法开至立院门口，黄信介于是率领立委、国代、党工干部数十人要行走至该党之北市党部，不料警方此时却站出到中山南路，举牌警告不得游行，民进党公职人员抗议不成，双方随即发生严重拉扯，立委洪奇昌、国代张贵木数度冲闯不成挨警方挥棒殴逐，混乱中黄信介腹部也遭警棍殴打，黄信介并记下向他挥棍的警察臂章为0443号。警方阻挡不了民进党队伍，数度将之推往快车道，这当中立委魏耀乾也挨揍，11点半左右，队伍推推扯扯行进到介寿路中山南路口，黄信介等人不满被阻挡，于是就地静坐抗议，镇暴警察也加派人手，双方于介寿路形成对峙僵持。至11时50分左右，下起大雨，警方与民进党主席黄信介、立委郑余镇等人协调，同意让民进党所准备的“宪改列车”游览车开到现场接走他们，民进党才结束抗争。12点5分，“宪改列车”开向首站桃园云。
 
@@ -1111,9 +1033,7 @@
 
 1991年5月2日
 
-
-
-##凤凰梦破
+## 凤凰梦破
 
 3月1日清早，一群愁眉苦脸的人，在宜兰集合，要上车到台北请愿了。
 
@@ -1136,6 +1056,3 @@
 宜兰人埋怨陈定南他们，固然看出小市民的反复无常，但陈定南他们也该面对这一责难。19世纪英国首相迪斯累里（BenjaminDisraeli），是近代保守党的开山大师，他有个一生争的死对头，就是格莱斯顿（WilliamGladstone）。格莱斯顿三任英国首相，一辈子气虎虎的瞪着迪斯累里，迪斯累里死的时候，他丧都不吊，为了迪斯累里常常开他的玩笑。有一次，迪斯累里倒阁成功，却不肯授命组阁，被人大加责备，因为这是不可以的。——你拆了别人的台，你就必须承担别人走后的后果。如今宜兰山转路不转，又要继续穷下去了，苏澳镇长林祺山激动得唉声叹气：“这几个月我们一直在庆祝，先是苏澳镇就为这条路办了五六次庆祝活动，现在真不知道要如何善后！”如何善后，容易得很，去找陈定南他们算账，罢免他们。不再选他们，以为不识大体徒知作秀的政客戒！始作俑者，其落选乎？对民进党政客，就该给他们一个教训。
 
 1991年3月2日
-
-
-
