--- a/03.惊世杂文类/历史与人像.md
+++ b/03.惊世杂文类/历史与人像.md
@@ -1,4 +1,8 @@
-#《历史与人像》目录
+# 历史与人像
+
+<!-- toc -->
+
+## 目录
 
 * 《历史与人像》自序
 * 一、袁世凯的祀孔
@@ -14,9 +18,7 @@
 * 十一、李易安再嫁了吗？
 * 十二、对《徐树铮先生文集年谱合刊》的批评
 
-
-
-##《历史与人像》自序
+## 《历史与人像》自序
 
 这本《历史与人像》，包括十二篇文字，是我十一年来有关历史人像的论文和札记的一部分。其中最早的一篇是《杜威的教育思想及其他》，是我十七岁（1952年）高中一年级时候写的；最晚的一篇是《李易安再嫁了吗？》，是今年4月写的，我已经二十八岁了。这十二篇文字的主题和写法虽不尽相同，但都是环绕在历史和人像上面的，所以我把它们收集在一起。
 
@@ -24,9 +26,7 @@
 
 1963年8月18日
 
-
-
-##袁世凯的祀孔
+## 袁世凯的祀孔
 
 ——现代史的一条札记
 
@@ -114,9 +114,7 @@
 
 “ThereisnoreasontodoubtthesincerityofYuanShih-k'ai'shomagetoConfuciusandhisteachings,butYuanhimselfwasdistrusted-withverygoodreason.bothbymonarchistsandbyrepublicans，andhispatronagedidthecauseofConfucianismmoreharmthangood,Inhishands,theConfuciansystemwasmerelyapoliticalinstrucment.HehopedbyitsaidtopavehiswaytotheThrone,andthereisnodoubtthattheusehemadeofittendedtodiscreditConfucianisminrepublicancirclesandtostrengthenthebeliefthattheConfuciansystemandtheinstitutionofmonarchyroseorfelltogether.”
 
-
-
-##余玠人格品质的分析
+## 余玠人格品质的分析
 
 本文尝试用“人格心理学”的方法分析余玠的“人格品质”（Personalitytraits），故一切史料在此方法运用下只能供作“獭祭”之用。
 
@@ -192,9 +190,7 @@
 
 1962年1日16日夜9——晨3时写成
 
-
-
-##杜威的教育思想及其他
+## 杜威的教育思想及其他
 
 ——悼念杜威先生
 
@@ -246,9 +242,7 @@
 
 这当然是一篇非常不成熟的东西，我现在把它收进来，只不过为了它是我十年前的残余作品，也象征着我在制式教育底下对“进步教育”的渴望。
 
-
-
-##桑格夫人和节育运动
+## 桑格夫人和节育运动
 
 “监狱不是我最后的目的。还有别的工作要去做，而我将首先去做。如果监狱跟着到来，我将呼吁所有的人帮助我。我要拿出直接的行动来，促成废止这种法律，担当一切后果。”
 
@@ -576,9 +570,7 @@ ByorderofthePostOfficeDepartment.
 
 这项会议被宣布的第二天，桑格夫人并不晓得。因为她已经病势弥留。随即逝世于塔克森。桑格夫人晚年卜居塔克森，担任计划家庭国际协会主席。她逝世后各地唁电如涌。她的一位长时间工作同僚赞扬她说：“她使美国及全世界，相信避孕乃是一种基本人权。”（《时与朝》第二二五期，1966年10月31日，译自《新闻周刊》）
 
-
-
-##纪翠绫该生在什么时候？
+## 纪翠绫该生在什么时候？
 
 真自由非真爱不能成立，真爱非真自由不能存在。——卡彭特（EdwardCarpenter）
 
@@ -798,9 +790,7 @@ A（七出或六出）＜B（三不去）＜C（义绝、恶疾、奸）
 
 《史记-孝文纪》，十三年诏云：“法有肉刑三，其除之。”又载景帝诏云：“除肉刑，出美人，重绝人之世。”《汉书-景帝纪》：“诏述文帝，正作除宫刑，出美人。”《刑法志》言：“文帝易髡鲸劓斩左趾右趾。”志又言：“男女淫佚，髡钳之罚，不足以惩。”又言：“男女淫乱，乃复古刑。”《景帝纪》中四年秋云：“死罪欲腐者，许之。”其后司马迁、许广汉、张贺之属，皆是也。《晁错传》云：“肉刑不用”，又云：“除去阴刑”，是文帝除宫刑，事迹明白，后用抵死及刑淫佚。司马迁不喜书宫刑字，班固视之不审，又见时有宫刑，故志言除髡劓鲸耳。而汉书景纪，诏称孝文景帝“除诽谤，去肉刑……不私其利也；除宫刑，出美人，重绝人之世也”。分别言之，除宫刑在肉刑之外，明矣！《史记集解》孟康云：“肉刑三：鲸一、劓一、左右趾一。”索隐引崔浩《汉律序》云：“文帝除肉刑，而宫刑不易。”张裴注：“以淫乱人族类，故不除之。”乃前后不精审之类。（1963年4月6日）
 
-
-
-##行李考
+## 行李考
 
 “行李”一作“行理”，盖因李理二字，字异义同，于古时本通用故。《说文解字》李字下段注云：“古李理同音通用，故行李与行理竝见，大李与大理不分。”
 
@@ -840,9 +830,7 @@ A（七出或六出）＜B（三不去）＜C（义绝、恶疾、奸）
 
 李敖《中央日报》副刊1958年2月15日
 
-
-
-##“两昆仑”考
+## “两昆仑”考
 
 清光绪二十四年（1898）政变死难的“戊戌六君子”之一谭嗣同，三十岁前曾著《莽苍苍斋诗》二卷，梁启超称赞他的诗“独辟新界而渊含古声”。嗣同就义前曾有《狱中题壁》绝笔诗七绝一首，原文是：“望门投止思张俭，忍死须臾待杜根。我自横刀向天笑，去留肝胆两昆仑。”当时各报多竞予登载，日本人且配以乐谱，传诵海宇之间。据《光绪东华续录》卷一，戊戌年八月九日慈禧太后下诏逮捕嗣同等，十日全部被禁，十三日因“若稽时日，恐有中变”的理由，未经刑部讯即行处斩，故该诗之作当在此数日间，时嗣同年仅三十三岁。
 
@@ -880,9 +868,7 @@ A（七出或六出）＜B（三不去）＜C（义绝、恶疾、奸）
 
 1963年4月7日
 
-
-
-##宋帝始生异象考
+## 宋帝始生异象考
 
 ——读宋史札记之一
 
@@ -1002,9 +988,7 @@ A（七出或六出）＜B（三不去）＜C（义绝、恶疾、奸）
 
 1963年4月7日
 
-
-
-##宋禁科场书
+## 宋禁科场书
 
 ——考试大全一类的书在宋代是查禁的
 
@@ -1066,9 +1050,7 @@ A（七出或六出）＜B（三不去）＜C（义绝、恶疾、奸）
 
 1962年11月27日
 
-
-
-##夫妻同体主义下的宋代婚姻的无效撤销解消及其效力与手续
+## 夫妻同体主义下的宋代婚姻的无效撤销解消及其效力与手续
 
 夫妻同体主义下的宋代婚姻
 
@@ -1972,9 +1954,7 @@ A（七出或六出）＜B（三不去）＜C（义绝、恶疾、奸）
 
 四、这种论文的写作，日本学者仁井田升博士的著作给了我不少的启发，我很佩服他的功力和见解。（1963年4月12日）
 
-
-
-##李易安再嫁了吗？
+## 李易安再嫁了吗？
 
 《中央日报》1963年4月13号朴人先生的《李易安的再嫁》一篇文章，重新给一段错误的历史记载加以传布，这是大可不必的事。
 
@@ -2030,9 +2010,7 @@ A（七出或六出）＜B（三不去）＜C（义绝、恶疾、奸）
 
 （后记）这篇文章原登《文星》第六十七号（1963年5月1日台北出版）。5月8号的台北《民族晚报》上，雍叔先生以“再嫁夫人”为题，也谈到李易安再嫁这个问题，他认为“这本是一件不确实的历史记载，虽然由李敖先生不惮烦劳地详细作了一番考证，但是总不能因此就完全廊清了许多人所已经造成的错误印象。李易安所受的谤诬，似乎还会继续传下去。这诚然是李易安的悲哀，也是女人的悲哀。”（1963年5月20日
 
-
-
-##对《徐树铮先生文集年谱合刊》的批评
+## 对《徐树铮先生文集年谱合刊》的批评
 
 子“不”为父隐，“曲”在其中矣！——改写孔丘的话
 
@@ -2463,6 +2441,3 @@ D.外蒙古撤治问题：
 我综合前边的大意作一结论，只两句话：《徐谱》不是一本成功的年谱，却是一本不可多得的妙书。（1962年12月12日）
 
 （李敖按）凤翰此文登在《文星》第六十七号（1963年5月1日台北出版），他答应我收进这本书里做为“附录”，并代我做了一次校改。（1963年5月21日）
-
-
-
