--- a/03.惊世杂文类/我是天安门.md
+++ b/03.惊世杂文类/我是天安门.md
@@ -1,4 +1,8 @@
-#《我是天安门》目录
+# 我是天安门
+
+<!-- toc -->
+
+## 目录
 
 * 一、香港的机会，中国的机会
 * 二、有关香港的几段鲜事
@@ -30,9 +34,7 @@
 * 二八、《长征》短说
 * 二九、谢谢你，帝国主义！
 
-
-
-##香港的机会，中国的机会
+## 香港的机会，中国的机会
 
 1842年，鸦片战争中国打败的时候，清朝大臣耆英上奏皇帝，说英国鬼子宣布说，他们要“直抵京师（北京）讲话”，皇帝紧张了，第二天就密谕耆英，同意割让香港，密谕中皇帝告诉耆英，说你们不要说已接到我的命令，你们要假装是自己的意思，告诉洋鬼子说：
 
@@ -124,9 +126,7 @@
 
 1983年9月12日在台湾
 
-
-
-##有关香港的几段鲜事
+## 有关香港的几段鲜事
 
 香港问题最近苦恼了香港、中共和英国，台湾这边的国民党，也颇苦恼似的。10月7日，国民党行政院长孙运璿有了表示，这一表示，可谓之“孙四点”：
 
@@ -198,9 +198,7 @@
 
 1983年11月16日夜
 
-
-
-##中共何妨回归
+## 中共何妨回归
 
 向国民党屡抛媚眼的旅美学人熊玠，日前从大陆穿梭来台，8月10日宣称，中共领导当局（据说是邓小平）在7月30日透露给他，中共对统一问题有了重大转变。8月13日，他在《中国时报》的专访稿上，更明确说明如下：“现在强调‘一国一制’，至于什么政体，则靠双方谈判决定，也可能回归中华民国宪法，包括改国旗、改国号也可以商量；不过比较起来，他们认为回归五五宪草（因有中共代表周恩来、董必武参加）可能比较简单。”这一说明见报后当天，国民党国家安全会议秘书长蒋纬国，在“北伐六十周年学术研讨会”上答复记者，也谈及此事。8月14日《中国时报》报道：“对于‘协商宪法’的说法，蒋纬国认为，只要他们能接受中华民国宪法第一条，‘中华民国基于三民主义，是民有、民治、民享的民主共和国’，何必再协商？他表示，中共当年也有代表参与‘五五宪草’的制定，这点是他们很容易找到下台阶的条件，应该可以接受。”
 
@@ -214,9 +212,7 @@
 
 1988年8月14日
 
-
-
-##中国没裤子穿的问题
+## 中国没裤子穿的问题
 
 1989年11月号的香港《解放月报》上，登有一篇“实地考察”的文字，题为《全家只有一条裤子——西北地区城乡贫穷状况实录》。
 
@@ -232,9 +228,7 @@
 
 1989年12月6日
 
-
-
-##中国没裤子穿的片段
+## 中国没裤子穿的片段
 
 我在1989年12月6日写了一篇《中国没裤子穿的问题》（《千秋评论》第一百期下册）。今晚再续写一点。
 
@@ -244,9 +238,7 @@
 
 1990年6月11日
 
-
-
-##读《毛岸英给表舅的一封信》
+## 读《毛岸英给表舅的一封信》
 
 6月26日，老友龚忠武传来最近《人民日报》刊出的《毛岸英给表舅的一封信》。原信如下：
 
@@ -310,9 +302,7 @@
 
 1991年6月29日午
 
-
-
-##“依然骨肉，几家能够？”
+## “依然骨肉，几家能够？”
 
 清朝顾贞观写《金缕曲》词给流放东北的吴兆骞，中有名句是：“数天涯，依然骨肉，几家能够？”意思是说，天涯海角之内，骨肉之亲，能够在一起的，又有几家呢？人世的乱离既不可避免，只好“留取心魂相守，但愿得河清人寿”，等你回来。
 
@@ -334,9 +324,7 @@
 
 1988年12月3日
 
-
-
-##强者的喘息
+## 强者的喘息
 
 中国历史有“假道灭虢”故事，说晋国要打虢国，送好玉好马给虞国，请虞国借路让晋国军队过境，有人劝虞王说，不能借路呀，因为虞国和虢国唇齿相依，虢国亡了，唇亡齿寒，虞国也保不住了。虞王不听，果然最后也被晋国所灭。亡国之日，晋国的总司令荀息把送给虞国的好玉好马都收回来了，他向晋王说：“璧则犹是也，而马齿加长矣！”意思是说：送去的玉还是老样子，只不过送去的马老了一点而已。我们晋国，当时好像损失了好玉好马，其实在“大气候”成熟以后，我们损失的，都可以收回来，我们老谋深算，我们是不吃亏的。
 
@@ -350,9 +338,7 @@
 
 1996年8月11日
 
-
-
-##硬的是他，但他不要硬
+## 硬的是他，但他不要硬
 
 9月7日，台湾国民党的第一党报《中央日报》第一版上，大字登出“保钓我严正抗议日制造事端”的标题，并以副标题宣示：“李总统强调固有领域外交部宣示护土决心”。但是翻到第二版，却在“国防部认应透过外交解决”一栏下，有这样有趣的内容：
 
@@ -372,9 +358,7 @@
 
 1996年9月8日在中国台湾
 
-
-
-##中国问题的真解决
+## 中国问题的真解决
 
 ——为美国《侨报》而作
 
@@ -424,9 +408,7 @@
 
 1990年8月30日
 
-
-
-##为钱其琛谈话进一解
+## 为钱其琛谈话进一解
 
 美联社27日北京电：中国外长钱其琛今天驳斥美国对中国人权记录的批评。他说，任何国家或团体自订标准加诸别的国家作为国际规范，是项不获容许的行为。钱其深也间接指控美国伪善，他说，华盛顿至今未同意重要的人权条约，即因这些条约与美国的法律抵触，但美国却动辄强迫其他国家更改法律及规章。
 
@@ -448,9 +430,7 @@
 
 1991年3月29日
 
-
-
-##是亦人权
+## 是亦人权
 
 国民党“中央通讯社”4月27日发出电讯稿，标题是“朱启桢将生存权曲解为大陆首要人权”，内文是：“中共驻美国大使朱启桢在一项演讲中，把生存权解释为大陆首要的人权，并据此宣称，中共已经解决了大陆最大的人权问题。朱启桢于24日在华盛顿附近的麦迪逊大学发表演讲。新华社引述他说：‘在中国，最基本的人权首先是生存权。’他接着宣称，由于中共养活了十一亿人，也就等于解决了最大的人权问题。他又为中共打压反对势力作辩护。他说：‘保持稳定对中国来说，至关重要；失去稳定，也就意味着失去基本人权。’但是国际人士认为，中共镇压民主运动是严重侵犯了人权。由于大陆的人权问题成为美国是否决定继续给予中共最惠国待遇的关键问题，所以最近中共频频作出解释，其一致的口径是把大陆人民已经温饱，说成大陆人权问题基本解决。”
 
@@ -462,9 +442,7 @@
 
 1991年4月28日
 
-
-
-##为西藏问题求真相
+## 为西藏问题求真相
 
 路透社12日新德里电：达赖喇嘛的一位高级助理12日说，达赖打算撤回他在西藏独立问题上对中共所作的让步，并让甫选出的西藏强硬派“流亡国会”来决定西藏未来的政策。达赖10日曾表示，他准备放弃他在1987年及1988年提出降低西藏独立要求的建议。他在纪念西藏“抗暴”三十二周年的演说中表示，他的提议迄今仍未得到中共领导阶层的任何正式回应。他说：“如果在短期内中共方面没有新的主张，我认为这些提议已不分我具有任何约束力。”
 
@@ -512,9 +490,7 @@
 
 1991年3月16日
 
-
-
-##西藏为中国不可分割的一部分
+## 西藏为中国不可分割的一部分
 
 5月23日为和平解放西藏四十周年之日，国务院总理李鹏19日表示，中国对达赖喇嘛的政策根本原则只有一条，即西藏是中国不可分割的一部分。他说：“在这个根本问题上，没有任何讨价还价的余地。”
 
@@ -538,9 +514,7 @@
 
 1991年5月20日
 
-
-
-##潘毓刚教授妙笔写活佛
+## 潘毓刚教授妙笔写活佛
 
 潘毓刚教授是热爱祖国的伟大学人，几十年来，他为祖国做了许许多多了不得的贡献。今年5月23日，正值西藏和平解放四十周年之日，我想到他寄我信中所谈会晤西藏人物的一些故事，特写此文。
 
@@ -572,9 +546,7 @@
 
 1991年5月20日
 
-
-
-##达赖喇嘛怎样迫害人权？
+## 达赖喇嘛怎样迫害人权？
 
 英国作家乔治奥威尔（GeorgeOrwell）写《一九八四》（1984）之书，写极权统治之极致，有“老大哥”（BigBrother）巨眼逼人，赫赫常在。我看了，窃笑英国作者所见者小。奥威尔如知西藏的神权统治、其凶狠有甚于“老大哥”者，他的《一九四》，也就不必写了。
 
@@ -610,9 +582,7 @@
 
 1991年5月21日
 
-
-
-##查查“达赖喇嘛的人权记录”
+## 查查“达赖喇嘛的人权记录”
 
 前一阵子，诺贝尔委员会把1989年诺贝尔和平奖给了达赖喇嘛，理由是：“达赖喇嘛在寻求解放西藏的奋斗中，一直反对使用暴力，他主张使用以容忍和相互尊重为基础的和平解决方法，以期维护西藏人民的历史与文化遗产。”（……DalaiLamainhisstrugglefortheliberationofTibetconsistentlyhasopposedtheuseofviolence.Hehasinsteadadvocatedpeacefulsolutionsbasedupontoleranceandmutualrespectinordertopreservethehistoricalandculturalheritageofhispeople.）这一阵子，达赖喇嘛访问美国，美国国会领袖纷纷致词欢迎他，所说颂辞，也与诺贝尔委员会如出一辙，并且还强调了他争人权的记录。
 
@@ -646,9 +616,7 @@
 
 1991年5月27日夜二时半
 
-
-
-##我是天安门
+## 我是天安门
 
 我的名字叫天安门，我是一大栋雄伟的建筑，我不是人，人们当然也不以为我是人，但我实在是人，虽然人们不知道我会说话。
 
@@ -684,9 +652,7 @@
 
 1989年6月5日
 
-
-
-##共产党上了两个当
+## 共产党上了两个当
 
 法国老虎总理克里蒙梭（GeorgeClemenceau）说：“一个人二十岁前不信共产主义，这种人就没有良知；二十岁后还信共产主义，这种人就是傻瓜。”美国总统候选人威尔基（WendellLewisWillkie）说：“任何人四十岁前不来点社会主义者，没心肝者也；四十岁以后还干社会主义者，没头脑者也。”（Anymanwhoisnotsomethingofasocialistbeforeheisfortyhasnoheart.Anymanwhoisstillasocialistafterheisfortyhasnohead.）共产主义是社会主义的一种，说社会主义，可涵盖共产主义在内。美国人闻道较法国人为迟，所以觉悟年纪，延了二十岁。不过，二十岁也好，四十岁也罢，照他们说法，都不是再适合做共产党的年纪了，过了这种年纪的人还信共产主义，一定出了什么差错。
 
@@ -700,9 +666,7 @@
 
 1989年6月7日
 
-
-
-##双城外记
+## 双城外记
 
 5月19日我在师大演讲，师大学生问我对这次天安门事件的看法。我铁口直断，说共产党忍无可忍时候一定出兵，军队一开出来，一切学生运动立刻云散烟消。——别以为共产党干不出来，共产党才干得出来呢！
 
@@ -726,9 +690,7 @@
 
 1989年6月9日夜
 
-
-
-##中国大局不可感情用事
+## 中国大局不可感情用事
 
 法国最性格的政治家戴高乐，拯救祖国与危亡之际，有识之士，对他莫不佩服。他做法国总统，一天接见一国的大使，这位大使以见到戴高乐为荣，当面很感性的说了一大堆奉承的话，不料戴高乐却冷静的教训这位年轻的大使说：大使是一国的重要政治人物，重要政治人物不可以这样感情用事。
 
@@ -752,9 +714,7 @@
 
 1989年7月1日
 
-
-
-##中国大局不可轻易悲观
+## 中国大局不可轻易悲观
 
 我在7月1日写《中国大局不可感情用事》，提到自从这次天安门事件以来，从台湾到海外、到大陆，眼之所见、耳之所闻，几乎每个人都感情澎湃、气愤填膺。台湾这边，集这种反应之大成。项目众多，一应俱全。在台湾以外，在海外、在大陆，一波波感性的画面与声音也此起彼落。总括的感觉是，我认为大家都过于感情用事了。
 
@@ -772,9 +732,7 @@
 
 1989年7月23日
 
-
-
-##学生干政的限度
+## 学生干政的限度
 
 二十年前，我和段宏俊出版《胡适语粹》一书，在“学生干政”的标题下，我摘录胡适《五四运动纪念》一文如下：
 
@@ -796,9 +754,7 @@
 
 1989年7月2日
 
-
-
-##从法国大革命看中国
+## 从法国大革命看中国
 
 1789年7月14日下午六点钟，当巴黎市民攻下象征四百年禁锢权威的巴士底（Bastille）监狱的时候，这些人们根本就没有想到这是一个革命开始的大日子。但是他们的“敌人”中，却有了先知式的预感。当法国皇帝路易十六（LouisXIV）听到巴士底陷落，大呼“这是造反啊”的时候，他的大臣李恩古（Liancourt）却提醒他说：“不，陛下，这是一次革命。”
 
@@ -820,9 +776,7 @@
 
 1989年7月14日
 
-
-
-##你是毛泽东
+## 你是毛泽东
 
 “北京四大不要脸”之一郭沫若歌颂斯大林，说斯大林是“亲爱的钢，水恒的太阳”。毛泽东自己要“东方红”，太阳吝于予人，所以虽然也歌颂斯大林，却不及郭沫若。早在郭沫若歌颂前十年（1939年12月20日），毛泽东就发表“斯大林是中国人民的朋友”，歌颂“只有斯大林指示的方向，只有斯大林的援助，才能解脱人类的灾难”。“因此要拥护斯大林、敬爱斯大林”（《毛泽东选集》第二卷）。可见毛歌颂比郭歌颂其“歌德派“大异其趣，但肉麻如斯，却不舍昼夜。
 
@@ -882,9 +836,7 @@
 
 1993年10月29日
 
-
-
-##牺牲哪一代
+## 牺牲哪一代
 
 古今中外，志士仁人舍己为人，无不“牺牲小我，成全大我”。不过，这种牺牲的信仰，有时也会走火入魔，从个人的自我牺牲的美德变为集体的中风狂走的强制，形成举国若狂的牺牲场面，这种宗教式的集体狂热所带来的问题，也就多了。
 
@@ -896,9 +848,7 @@
 
 孙中山提倡“以俄为师”，所以国民党也感染出“牺牲个人的自由，为了国家的自由”等怪论。这类怪论，自是具体而微的“牺牲这一代以为下一代”。不过，由于国民党腐化得快，它的宗教狂热，很早冷却。但这一冷却，未尝不救了它。我曾说：国民党革命革到头来，大家都不想再革命，甘愿小鼻子小眼做“太平犬”以终老，这种个人价值的觉悟，岂不正是它堕落中的新境界？在个人价值的觉悟下，人们会发现：不论哪一代，都不该刻意用牺牲来追求什么、成全什么，哪一代都不是蚂蚁啊！
 
-
-
-##长使《长征》泪满襟
+## 长使《长征》泪满襟
 
 曾任《纽约时报》副总编辑的哈里森索尔兹伯里（HarrisonE·Salisbury），是美国一代名家，是名作家、也是名记者。他一生遍访了许多战场，不是吊古，而是鉴今。1983年以前，他出版过二十四种书籍，尤以《列宁格勒被困九百天》（The900Days——TheSiegeofLeningrad），为其中经典之作。可是，到了他出版第二十五种书——《长征》（TheLongMarch）以后，真正的经典之作，又重新立下了里程碑。
 
@@ -918,9 +868,7 @@
 
 1989年7月28日
 
-
-
-##《长征》短说
+## 《长征》短说
 
 李敖出版社即将出版哈里森索尔兹伯里（HarrisonE.Sqlisburv）的《长征》TheLongMarch，我亲加配图，补充附录，以期使这中译本，比原本更为完善。这种李敖出版社的版本胜于其他一切版本的信誉，已由我树立很久。此书也不例外。
 
@@ -938,9 +886,7 @@
 
 1989年7月29日
 
-
-
-##谢谢你，帝国主义！
+## 谢谢你，帝国主义！
 
 帝国主义本是人类的一种老毛病，它的发展基础是“强凌弱、众暴寡”，这种毛病从中国到外国、从穴居人到高楼大厦的，都是一样。人类在自己成为弱者的时候，就满口和平，一旦成为强者，就犯老毛病。国民党宣传中国是爱好和平的民族，但是从汉武“事四夷”，到乾隆“十全武功”，我们实在不能不说是帝国主义的杰作。乾隆打四川西北边的大小金川（大金川是四川理番县的绥靖屯、小金川是四川懋功县），对那样小的崇山峻岭，要前后用兵五年、糜饷七千万，所谓中国民族爱和平，爱得真过头了。
 
@@ -1017,6 +963,3 @@
 ②丹麦根本不用帝国主义手段对付格陵兰。
 
 ③英国离开加纳后，给这个非洲国家留下了国会、文官制度、公正的司法传统和善选制度，此真英式帝国主义之遗爱也！
-
-
-
