--- a/03.惊世杂文类/文化论战丹火录.md
+++ b/03.惊世杂文类/文化论战丹火录.md
@@ -1,11 +1,13 @@
-#《文化论战丹火录》目录
+# 文化论战丹火录
+
+<!-- toc -->
+
+## 目录
 
 * 一、开场白
 * 二、文化论战丹火录
 
-
-
-##开场白
+## 开场白
 
 玉皇大帝皱着眉，朝观世音菩萨说道：
 
@@ -47,9 +49,7 @@
 
 1964年6月25日《为中国思想趋向求答案》出书之日
 
-
-
-##文化论战丹火录
+## 文化论战丹火录
 
 ——这次文化论战的一些史料和笑料
 
@@ -2338,6 +2338,3 @@ Arecentexampleofthistendencyisthedebate,whichstartedinJanuary1962,onthe“proble
 1964年7月22日在台北
 
 18年后（1982）补加小标题
-
-
-
