--- a/03.惊世杂文类/李敖杂文集.md
+++ b/03.惊世杂文类/李敖杂文集.md
@@ -1,6 +1,10 @@
-#《李敖杂文集》目录
+# 李敖杂文集
 
 《李敖杂文集》简介：这些文章没有收录在友谊版《李敖大全集》中，有的是从网上找来，有的是蛋蛋版有的，剩下的是友谊版《千秋评论丛书》中找出和《李敖大全集》所没有收录的文章。
+
+<!-- toc -->
+
+## 目录
 
 * 一、狱中书信两封
 * 二、阿扁的四条出路
@@ -61,9 +65,7 @@
 * 五七、二二事件的前因后果（孙铭九）
 * 五八、《鹰犬将军》前言（宋希濂）
 
-
-
-##狱中书信两封
+## 狱中书信两封
 
 屡承你寄书，至感。所中书刊检查官制办法春来稍有更动，“书刊以曾经内政部登记有案准许出版者为限”，纵经登记有案出版者，如有左列情形之一之书刊，概不发阅（未经登记者自更属之）
 
@@ -117,9 +119,7 @@ j按：
 
 3.以上二信原件图版收在文化顽童李敖（武陵版），原图字小且为草字，故我的打字可能有错，惨。
 
-
-
-##阿扁的四条出路
+## 阿扁的四条出路
 
 我在台湾住了51年，认识很多朋友，但有两个人看了心里总不痛快。一个是自晚搞垮后，在公视做头子的吴丰山，因为这人从来不笑，而且笑起来比哭还难看。另一个就是阿扁，他皮笑肉不笑，尤其现在做了总统，更令人看了浑身不自在。
 
@@ -151,9 +151,7 @@ j按：
 
 阿扁只有摆脱党内压力，让这4条路成功，就能再做8年总统，其中若能勾结到宋楚瑜，对他将是一大利多。
 
-
-
-##国民党的前途在哪里？
+## 国民党的前途在哪里？
 
 ——“大势已去！”
 
@@ -167,9 +165,7 @@ j按：
 
 1989年1月31日
 
-
-
-##邓朴方忆受难岁月
+## 邓朴方忆受难岁月
 
 邓小平长子邓朴方在文革时被红卫兵折磨，自楼上推下，以致半身瘫痪。日前他接受香港《明报》访问，今日《中国时报》转引内容如下：
 
@@ -193,17 +189,13 @@ j按：
 
 1991年1月19日
 
-
-
-##为什么要声讨法轮功？
+## 为什么要声讨法轮功？
 
 宗教可分两类，一类是旧有宗教，就是佛教、道教、基督教、天主教、回教等传统宗教；一类是新兴宗教，就是五花八门种类繁多的民间宗教。传统宗教都有源远流长的发展，虽然也不脱荒诞与迷信，但因为行之有年，发展成了型，尚称稳定。马克思说“宗教是人民的鸦片”，就是这些传统宗教的写照；但新兴宗教就不同了，它的走向极不稳定，一旦发展到走火入魔状态，后果不堪设想，美国70年代的“人民圣殿教”，最后集体自杀时一死就是914人，还包括276名儿童！美国90年代的“大卫教派”，最后集体自杀时一死就是86人，还包括17名儿童。如果走火入魔到只是自杀，也就罢了，日本“奥姆真理教”最后从化学实验室制造出了毒死上千万人的毒气，根本就是要杀人了。非常明显的，这些宗教都是邪教。它们不算是“人民的鸦片”，它们是“人民的迷幻药”，鸦片有害，还是飘飘然的，有个谱儿；迷幻药可就离谱了。
 
 “法轮功”是中国的新兴宗教，它的教主在1998年12月25日写信明说：“我们不是健身气功，我们是修炼，但是我们能够使修炼者达到祛病健身”。如果纯粹是“祛病健身”，没人要反对它，问题出在它要“修炼”，这就是祸源。中国历来的民间宗教，从汉朝的“五斗米道”开始，邪教无不以“修炼”起家，到头来以动乱祸国。它的走向，连邪教自己都掌握不住，都收拾不了。更恐怖的是，它的扩散能力，由于现代科技的帮助、广播、电视、网络、电影、传真等等，已经爆发出惊人的“运动战”能量。想想看，中国共产党成立77年的时候，党员才5000万，可是“法轮功”创办了只7年，就号称弟子一亿人了，一旦弟子走火入魔了，“白莲教”和“义和团”又算老几呢？再加上唯恐中国不乱的洋人介入，（yubar按:从美国的洛杉矶支援大游行到美国的46名参议员签名推广“法轮功”教主进军诺贝尔和平奖），我们不难看到这一走向。所以，我赞成声讨“法轮功”，因为它有爆炸性的祸害，它太不稳定了。
 
-
-
-##从生离到死别
+## 从生离到死别
 
 ——《上山上山爱》广告词
 
@@ -225,9 +217,7 @@ j按：
 
 《上山上山爱》一个白色恐怖下的红色故事，你可用黄色的眼光去看它！
 
-
-
-##论“快乐律”
+## 论“快乐律”
 
 人在一天生活中，完全在快乐里毕竟极少，人有苦闷的时候，也有完全平静的时候（这时候并不苦闷，但也没什么快乐。）
 
@@ -259,9 +249,7 @@ j按：
 
 （此文是长编，剪裁上未加细修。因为是随手在狱里写的，为了存真与纪念，也不修饰了。）
 
-
-
-##民国定义和总统定义
+## 民国定义和总统定义
 
 1914年，中华民国总统袁世凯请王闿运做清史馆馆长，王闿运以八十一岁高龄，倚老卖老，写出门联讥讽，全文是：
 
@@ -283,9 +271,7 @@ j按：
 
 1999年9月8日
 
-
-
-##乱世母女泪
+## 乱世母女泪
 
 最近我凑足十几万元，使妈妈得以绕道美国，转赴香港，跟来自大陆的大姐、二姐，相聚一周。
 
@@ -319,9 +305,7 @@ j按：
 
 1983年9月12日收到她们照片；9月13日上午写
 
-
-
-##国家利益与家庭利益
+## 国家利益与家庭利益
 
 二十八年前，在读物管制的国民党伪政府黑狱中，我有幸看到一本《读者文摘》，书中一个故事，吸引了我。故事写广州的一对青年情侣，觉得他们在祖国的生活太苦了、太不自由了，一起朝香港用游泳方法偷渡。游到半途，男的淹死了，女的却以无比的毅力与深情，拖着男的死尸，终于游到香港，她在香港海滩上对着情人的死尸说：我们成功了，我们死也要死在我们向往的地方！
 
@@ -349,9 +333,7 @@ j按：
 
 1999年9月30日在中国台湾写。
 
-
-
-##永远失职，永不失业！
+## 永远失职，永不失业！
 
 本为圣朝无弊政，敢将衰朽做委员。
 
@@ -417,9 +399,7 @@ j按：
 
 1981年5月17深夜在中国的台湾岛上写
 
-
-
-##台大校长不要脸
+## 台大校长不要脸
 
 台大校长不要脸，过去也有不要脸的校长，可是像现在校长陈维昭这样不要脸的，是第一个。
 
@@ -443,9 +423,7 @@ j按：
 
 我们看到台大校长不要脸，一个是在自己任内不断延任，干到现在；第二个，明明你公开说台大迫害殷海光，然后请你作证却耍赖不出庭，不尊重真理、人权、司法。
 
-
-
-##粗谈中国知识分子五病
+## 粗谈中国知识分子五病
 
 中国知识分子在谈到本身的时候，总喜欢冒出一股特别之气。旧式一点的会冒出“万般皆下品”，新式一点的会冒出“我们读书人”如何如何。这一股特别之气，常常把自己裹住，神气活现，自成一种人。
 
@@ -489,9 +467,7 @@ j按：
 
 （附记）这是我代丁潁为王晓波《象牙塔外》写的序。《象牙塔外》1970年7月由丁潁的蓝灯出版社出版。
 
-
-
-##退孙中山的票
+## 退孙中山的票
 
 1900年的7月24日，一群搞革命的中国人，为了取得外国人的援助，联名写了一封信给香港总督。这封信可说是集“告洋状”的大成。首先说他们想“挽救”“时艰”但是自感“势力微弱”、“政府冥顽”、大臣“观望”，他们想“定乱苏民”，要找谁呢？最后好了，他们找到英国、找到英国殖民地总督，“深知贵国素敦友谊，保中为心；且商务教堂，遍于内地。故某等不嫌越分，呈请助力，以襄厥成，愿借殊勋，改造中国。”他们告诉洋人说：“我南人”（我们南方人），要单独跟洋人合作，并且“机不可失，合则有成。”如果洋人肯帮他们，并且代为“转商同志之国，极力赞成”，完成大事后，“受其利者，又不特华人已也”。为什么洋人也占便宜呢？因为他们事先承诺了条件。条件是他们愿为洋人的安全与方便“迁都”；愿意还洋人债务；愿意放弃关税自主，“如关税等类，如有增改，必先与列国妥议而行”；愿意在铁路、矿产、船政、工商各业方面，让洋人“分沾利益”；最后还愿意照洋人司法制度来改革，“大小讼务，仿欧美之法，立陪审人员，许律师代理，务为平允，不以残刑致死，不以拷打取供。”
 
@@ -513,9 +489,7 @@ j按：
 
 1989年7月18日
 
-
-
-##美国总统的请帖
+## 美国总统的请帖
 
 美国总统布什访问大陆，邀宴各路中国人士，包括方励之在内。今早消息传来，方励之与外国友人乘车赴长城饭店途中，被中共警察拦下来，向他说明他并未在美国特勤单位提供的来宾名单上。此后，他们走到哪里，都有六、七个警察及公安人员跟踪。晚上十二点，方励之到白宫记者团下榻的香格里拉饭店举行记者会。另一方面，布什在和中共领导人会谈时，并没提及人权问题，在晚宴中，他似乎不知道第四十一桌方励之的座位空无一人。
 
@@ -529,9 +503,7 @@ j按：
 
 1989年2月27日
 
-
-
-##我将归来开放
+## 我将归来开放
 
 ——二十三年前的预言诗
 
@@ -569,9 +541,7 @@ j按：
 
 1957年7月29日
 
-
-
-##让我们笑着分手
+## 让我们笑着分手
 
 人生既是巧合，
 
@@ -591,9 +561,7 @@ j按：
 
 1974年狱中作
 
-
-
-##呈光中
+## 呈光中
 
 现代诗的头儿呀！
 
@@ -643,9 +611,7 @@ j按：
 
 wjm_tcy注：当年李敖和余光中还是好朋友，后来余光中投靠国民党，李敖就开始声讨了！
 
-
-
-##关于厦门大学聘书诗三首
+## 关于厦门大学聘书诗三首
 
 jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学都聘他为教授，而厦门大学也跟进，请李敖做终身讲座教授。李敖写了这三首诗，一给朱崇实校长，一给陈支平院长，也写了一首给居中传信的好友陈平景先生，以下请看：
 
@@ -703,9 +669,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 唯你是问
 
-
-
-##义助慰安妇
+## 义助慰安妇
 
 ——李敖百件珍藏义卖活动专辑缘起
 
@@ -731,9 +695,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 自来妇女不幸沦为妓女的，或为家庭、或为穷困、或为救夫、或为援子，她们的舍身，多少有正面的意义，但被日本人强迫做慰安妇，意义是负面的，日本人毁了她们一生，在生命终老的前夜还要利用剩余价值，“私了”以平世界公议，我们实在不能再沉默、再坐视了，我们要举办这次活动，援助慰安妇，使她们虽然屈辱了青春、屈辱了一生，但在生命尽头，终于有了正面的意义，让她们告诉世界、告诉人类、告诉历史：日本人既不是“好的胜利者”，也不是“好的失败者”，日本人失败了还如此卑鄙可恶，他们绝非高雅的菊花，“终战”五十年，他们终于还是站在那里的衣冠禽兽！
 
-
-
-##遥想东坡当年
+## 遥想东坡当年
 
 苏轼（1036-1101），字子瞻，号东坡居士，四川眉山人。
 
@@ -753,9 +715,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1983年4月6日，病中写完
 
-
-
-##“黑屁股”与毛
+## “黑屁股”与毛
 
 我在军法处做政治犯的时候，有一次同一个无所不偷的小偷住在一起，小偷长得奇黑，我用台湾话给他起外号叫“欧卡曾”（白话是“黑屁股”，文言是“黑臀”，古人真有人叫“黑臀”）。因我对他不错，他说很感谢我，他出狱后，一定找个脱衣舞女用摩托车载来，在我窗下大跳一次，在警卫赶到前，再用不熄火的摩托车载运逃走。他说：“龙头啊！不要太用功了！那时候该休息一下，看看脱衣舞，看看死脱瑞普，看看也好！”他一边说，一边扭动，学脱衣舞的模样，丑态可掬，使我笑得腰都弯了！我坐牢多年，但是从来没有那样大笑过。
 
@@ -775,9 +735,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1983年4月13日
 
-
-
-##最后的九日
+## 最后的九日
 
 1970年1月里，彭明敏在全天候被国民党软禁下，神秘偷渡到瑞典，并取得政治庇护。消息传来，国民党立刻把我软禁，不分日夜，由专车一辆、专人若干，对我紧迫盯人起来。这一紧迫盯人，先由警察单位派人，后由警总单位接力，前后“跟监”（跟踪监视）了我14个月，直到我在1971年3月19日被捕为止。
 
@@ -823,9 +781,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 18日（跟踪我的）小郑说，保安处共有“花木兰”六人，都丑得要命。
 
-
-
-##因祸为福说
+## 因祸为福说
 
 一、因祸为福
 
@@ -851,9 +807,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 我读《史记》（管晏列传）写管仲，说“其为政也，善因祸而为福，转败而为功。”我最欣赏这种人生态度。人生横逆之来，一般人的反应是失望、是沮丧、是泄气、是抱怨、是发怒、是流泪、是惊讶，而我的反应，却是从横逆中立刻笑嘻嘻的打主意，由劣势变到优势、由危机得到转机，想法子“因祸而为福，转败而为攻”，最后从中胜利。这种顽强与训练，是我完成的最佳成果之一，这次赶出二十三期，做得真是炉火纯青了。
 
-
-
-##读《卡内基自传》
+## 读《卡内基自传》
 
 自图书馆借来AndrewCarnegie的Autogiography，商务版，于树生译、汉译世界名著的版本，1939年3月初版，1947年2月再版。
 
@@ -911,9 +865,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1955年8月10日
 
-
-
-##电话-驴
+## 电话-驴
 
 亚历山大贝尔（AlexanderGrahamBell）刚发明电话的时候，人们想都没想到：电话这玩艺儿，居然可以做为联络的工具，居然可以给小姐们谈情说爱、给太太们约牌搭子、给老爷们骂人、摔……贝尔费了九牛二虎的气力，发明出电话，可是电话、电话，在人们眼中，只是个玩艺儿，只是个玩具，它的价值，当时并没得到人们的肯定。
 
@@ -939,9 +891,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1983年12月30日晨
 
-
-
-##法官陈贻男竟不判伪造文书
+## 法官陈贻男竟不判伪造文书
 
 国民党财阀支持的报纸——《自由时报》——跟我的案子，共分两个部分：
 
@@ -981,9 +931,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1990年10月5日
 
-
-
-##评法官陈重瑜眼中的法律和正义
+## 评法官陈重瑜眼中的法律和正义
 
 为国民党《中央日报》悍然违约拒刊“李敖出版社”广告事，前由“李敖出版社”起诉该报，本年9月10日，由台北地方法院民事第一庭法官陈重瑜做出七十九年度简字第六八八号民事判决。现在提起上诉如下：
 
@@ -1055,9 +1003,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1990年10月9日
 
-
-
-##夜阑散记
+## 夜阑散记
 
 谁感谢谁
 
@@ -1105,9 +1051,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1990年10月15日
 
-
-
-##七绝诗
+## 七绝诗
 
 落花诗
 
@@ -1165,9 +1109,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1990年9月13日
 
-
-
-##从侮辱圣母到侮辱国父
+## 从侮辱圣母到侮辱国父
 
 基督教兴起后，崇拜偶像演变成一股风气，到了8世纪，为了向教会夺权，罗马皇帝下令破除教堂中偶像，引起动乱伤亡，史不乏书。罗马皇帝这种行为，就是“圣像破坏”（Iconoclasm），也叫做“画像破坏”、“偶像破坏”。今天彼教中人，只奉十字架而不供圣母等像者，此派余绪也。
 
@@ -1214,9 +1156,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1987年10月23日
 
-
-
-##预官记趣
+## 预官记趣
 
 1959年9月9日起，我开始受第八期预备军官训练，后来在野故部队中担任陆军排校，做到1961年2月6日退伍。这一段军人生涯，是我人生中的重大转捩。我在艰难之中，辛苦留下了一天都不缺的日记，最近整理完毕，即将出版。三十年前的鸿爪余痕，重看之下，不无沧桑之感。但在沧桑之中，也有啼笑人间事，因小见大，亦堪足述。乃写预官记趣数则，以存雪泥。
 
@@ -1292,9 +1232,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月19-20日
 
-
-
-##和胡茵梦有关的笑话
+## 和胡茵梦有关的笑话
 
 一、史学家汪荣袓教授来台时，跟我说了一个笑话。他说有一次饭局，大家同桌聊了很多。过了几天，朋友谈到胡茵梦，荣祖问：“胡茵梦是李敖的前妻，我从没见过她。”朋友说：“那天一起吃饭的，就有胡茵梦啊！”——这个故事，一直被我的同班兼荣祖的夫人陆善仪所笑，她笑荣祖美色当前，竟书呆如此。其实，同类的笑话还不止荣祖。有一天，盂绝子到我家，碰到银霞，我介绍了。银霞走后，老孟问：“谁是银霞？”我笑着说：“银霞你都不知道！她是甄珍的妹妹呀！”老孟问：“谁是甄珍？”从此以后，我再也不要同书呆子谈名女人。
 
@@ -1318,9 +1256,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月8日
 
-
-
-##被禁忆趣
+## 被禁忆趣
 
 我的书，至今被国民党政府查禁者，达九十六种之多，已是世界纪录。在戒严时期，国民党政府不但査禁书，还期期来抢书。最早抢书的馊主意是1967年从对付李敖开始的，嗣后悬为定例。为了对付这一强盗政权，我也组成一个班子，专门跟他们捉迷藏。班子中分了很多股，有明股、有暗股。换句话说，有的是捉迷戴，使他们捕捉不到你的主力；有的是明着让他们知道，诱使他们去抢，必须让他们知道一些明的——当一群狼在追你时，你必须丢半条死猪给它们去抢，或者让它们回去交差，否则它们骚扰得更厉害。这种周旋的局面拖久了，我的手下跟他们的手下干脆“串通”起来了。大家讲明白，你们也不必整天辛苦，到处东奔西走找我们的书了，干脆分你们一些回去交差，想要记功或放特别假的，还可酌情多分一点，你们每天上班时间可出去玩，下班后来领书就行啦！就在这种“串通”下，瓦解了国民党对我的全面封杀。后来我睁一只眼闭一只眼的得知，双方手下，甚至还在一起打过麻将呢！
 
@@ -1332,9 +1268,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月13日
 
-
-
-##浮生一粲
+## 浮生一粲
 
 ①我的母亲张桂贞，当年吉林女子师范的锋头女学生也，是以“媒妁之言”同我父亲结婚的。不过一个说法是，程烈当时曾追我母亲，那时程烈是我父亲学生，结果老师胜利，程烈且被开除云。二十多年后，程烈在台湾做立法委员、我父亲在台中一中做老师，程烈特别到我家，向老师请安，并以独子程国强相托。有一次教官何琪坚持要开除程国强，我父亲力争，方免被开除，恩怨相报，有如是者。程国强现在“中国文化大学”做教授，前一阵子约我等四十年老同学小聚，我开玩笑说：“幸亏我老子当年贏了，我妈没被程烈讨去，不然的话，这世界没有李敖，而我就是程国强了。”满座大笑。
 
@@ -1352,9 +1286,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月9日
 
-
-
-##浮生一粲一续
+## 浮生一粲一续
 
 ①我父亲的好友吴焕章，在大陆做兴安省主席、在台湾做国大代表。他的二女儿叫吴晓瑁。在台中女中念书时，去看电影。电影中米基兰尼（MickeyRooney）被人成胁，在拳赛时只能挨打，不能还手，吴晓瑁竟在电影院中起立高叫：“你打呀！你打呀！你怎么不打呀！”这种移情作用（empathy），也发生在一位英国老太太身上。老太太看到《哈姆雷特》（Hamlet）最后决斗时，竟在剧院中大声警告：“当心呀，那把剑是上过毒药的！”
 
@@ -1370,9 +1302,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月10日
 
-
-
-##浮生一粲二续
+## 浮生一粲二续
 
 ①我在被国民党迫害，离开文星、无以维生之际，与李世君以“OK李”为名，在英文报上登广告收购外国人旧电器，转手出售，因为演艺圈内购买力强，所以结交此道中人甚多，这些人多好赌，我也因缘随之，以我一表人才，遇赌甚精，所以嬴多输少，对生活亦有大补。赌友中有李翰祥的经理外号“刘必跟”者，此人不信邪，每张梭哈之牌，必然跟进，认为可有奇迹出现，这样子打法，当然把把过瘾，可是十打九输。有次输火了，开的支票不认帐，反倒告我和蒋光超联手诈赌。法官开庭调查，我说：“凡诈赌者，必然联手者交情很深，方有可能。可是我当天晚上才认识蒋光超，难道是我们上辈子串通好的？”被告蒋光超也在旁证实当晚才认识我无误。法官乃问“刘必跟”：“你告李敖、蒋光超诈赌，有何证据？”“刘必跟”说：“我那天记了日记，有我自己的日记为证。”我说：“这叫什么证据！如果他日记里记我是匪谍，难道我就是匪谍？这种日记太可怕了！”法官点头，最后问我：“你会不会做假牌？”我说：“假牌实在不会做，但真牌打得极好。”说着朝“刘必跟”一指，大声道：“这种人牌打得这么糟，凭真牌就可赢他，何须做假牌！”后来我被警总抓去，办案人员告诉我，本来他们想趁机用诈赌罪整我的，因为整我就连带整到蒋光超，并且扣李敖以诈赌之罪，无人会信，乃放弃此议，不了了之。
 
@@ -1386,9 +1316,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月11日
 
-
-
-##浮生一粲三续
+## 浮生一粲三续
 
 ①我在警备总部被刑求时，办案人员在刑房里朝我大吼大叫，说：“你在我们眼中，是玻璃缸里的金鱼，我们把你看得一清二楚！”其实，他们在吹牛，他们从来没把我看得一清二楚，他们一直以为我是搞政治的，以为我在抢他们口里的一根骨头，因而对我像四脚动物那样连发喉音不已，其实他们全弄错了。唐朝的诗人说：“无心与物竞，鹰隼莫相猜。”但是特务们不能不“相猜”，他们不“相猜”，就没饭吃了。
 
@@ -1406,9 +1334,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月12日
 
-
-
-##浮生一粲四续
+## 浮生一粲四续
 
 ①我弟弟惧内。有一次在我隔壁的办公厅与太太通电话。最后我听到他忽发大声，怒叫：“你太欺负人了！这是什么意思！”我心里想：他敢对老婆发这么大的脾气，真是英勇。后来才得知：原来那些大声叫骂，是挂上电话后，一个人喃喃自语的。
 
@@ -1438,9 +1364,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月15日
 
-
-
-##浮生一粲五续
+## 浮生一粲五续
 
 ①住台大第一宿舍第四室时，李鸿禧住在对面第三室，默默无闻之小辈也，而我却早已名满台大，香港《大学生活》报道我，《自由中国》亦有我的文章。不料多年以后，李鸿禧做了台大教授，在课堂上回忆学生时代，说当时有“台大二李”闻名，二李即李敖与李鸿禧。我的女秘书武慰先听了李鸿禧的课，以此为问。这种吹牛皮，令人失笑。
 
@@ -1462,9 +1386,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月16日
 
-
-
-##浮生一粲六续
+## 浮生一粲六续
 
 ①方豪有一次同我和萧启庆等逛阳明山，在台大招待所里，大谈他和侯榕生的事。说他在北京辅仁大学教书，没穿神父服装，第一天就被女学生侯榕生看中。侯榕生回家告诉母亲，有所计议。不料有一天，方豪穿神父服装上课，侯榕生乃狂奔回家，向母亲大哭说：“妈呀，他是神父呀！”我问他怎么知道的？他说后来在台湾，侯榕生吿诉他的，候榕生在台湾和他重逢，余情不断，还写过一篇《破碎的圣母像》，就是写他的。言下不胜得意。
 
@@ -1480,9 +1402,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月16日
 
-
-
-##浮生一粲七续
+## 浮生一粲七续
 
 ①魏廷朝第一次坐牢跟彭明敏同案、第二次坐牢跟我同案。彭明敏被捕时，身份是台大政治系主任，备受优待，魏廷朝借了彭明敏的光，少吃了不少苦头。魏廷朝身体极结实，反应又“迟钝”，给人一种厚重有力量的感觉。他第一次出狱后，彭明敏约他和我见面，我问他被国民党刑求的情形怎祥？他笑着说只被打了耳光，没被刑求。我说听说耳光打得连你牙齿都给打掉了，这还不算刑求吗？他说：“太轻了，不算！”我和彭明敏听了，为之失笑。
 
@@ -1504,9 +1424,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月17日
 
-
-
-##《调查局黑牢345天》序
+## 《调查局黑牢345天》序
 
 1988年10月，李敖出版社为李世杰先生印行了《调査局研究》一厚册，引起各界的重视。青年党且根据它，向国民党法务部长要求撤回潜伏在该党内的国民党特务分子；民社党也根据它，要罢免该党中的国特；而民进党也根据它，发现内有线民……李世杰垂老反扑、兴风作浪的本事，由此可见一斑。
 
@@ -1522,9 +1440,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1990年1月1日
 
-
-
-##段宏俊的妙语
+## 段宏俊的妙语
 
 12月25日，各报刊出老友段宏俊成立竞选总统办事处的启事，《联合报》且发布新闻，说他“成为我国第一位公开宣布竞选第八任总统的国民”。同日《世界论坛报》赵卿在“新春秋”中，特别点出“自民国初年的中华民国第一任正式大总统袁世凯以来，每逢选总统，必然有两个特色：一为全国各地，立刻会出现一片‘劝进’之声，二为只准自己选，不准别人选。如果有人敢冒‘大不韪’出来竞选，在过去是要‘锄而去之’的；现在也许‘锄’不动了，则谓之‘杂音’，要发动‘民意’与‘舆论’来‘消除杂音’。”“现在到了中华民国七十八年了。这时选总统，上述两大特色，其寿命竟得以延长七十八年，到目前依然‘音容宛在’，‘劝进’之声此起彼落，什么农会、省府委员、监察委员、立法院国民党新科立委（由赵少康一马当先）、台大教授、丁庭宇‘民意调查’、东海‘民意调查’……到处诚惶诚恐，高喊万岁，予生也晚，未能躬逢其盛，不晓得当年袁世凯想做皇帝时，那班‘文学侍从之臣’，是不是这个样子来制造民意的。”“段宏俊先生现在出马了，起码在形式上首先打破了‘一言堂’的垄断局面……”
 
@@ -1538,9 +1454,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年12月25日
 
-
-
-##从赵少康发言错误看国民党立委程度
+## 从赵少康发言错误看国民党立委程度
 
 1987年11月10日立法院院会上，国民党小生立委赵少康发言说：
 
@@ -1560,9 +1474,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1988年1月3日夜12时
 
-
-
-##乱世居家泪
+## 乱世居家泪
 
 一、读李敖文章书后（王小痴）
 
@@ -1638,9 +1550,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 〔附记〕今天子上与李子弋联络上，经我在电话中提示上述资料后，子弋说好像是居正的女儿与女婧只是因共产党坐牢，至少女儿并没有枪毙，女婿可能就是“王某”。当时有人劝居正援之以手，但居正不肯关说。（1984.09.07。）
 
-
-
-##《信及录》和《海国图志》
+## 《信及录》和《海国图志》
 
 一、林则徐的《信及录>
 
@@ -1666,9 +1576,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1984年9月9日
 
-
-
-##林云无耻-华视无知
+## 林云无耻-华视无知
 
 我是工作狂，没有任何假日，并且别人放假之日，人事清静，我反倒工作得更多。今天早上开始工作前，一边吃早餐、一边看报、一边听华视新闻，发现在无知武夫武士嵩主持下的中华电视台，竟以独占式的“媒体”，大力为妖僧林云打歌，这本已荒诞不经；不料打歌内容中，竟说殷海光、方东美、徐复观是林云的良师益友，我看了实在很气。按照徐复观的标准，看了自己非常痛恨的节目，是要一跃而起砸电视机的，我知道孔夫子不迁怒之道，应该包含电视机在内，尤其是自己家的，所以关上电视，提笔就写这篇文章。
 
@@ -1686,9 +1594,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年4月5日
 
-
-
-##李敖来台四十年
+## 李敖来台四十年
 
 1989年4月12日，是我来台湾四十周年纪念日。朋友中的一些台湾人朋友，当晚筹备了酒席，请我赴宴；台湾的十五家出版社——久博、久大、丹青、田园、好时年、自华、金枫、风云时代、书华、桂冠、鹿桥、远景、远流、学英、蓝灯——也合办了一场纪念演讲会，宣布在14日晚上，在耕莘文教院演讲厅，由施性忠主持，由我主讲“四十年目睹怪现状”；我自己这方面，也同时出版了两册书庆祝，一本是厚达六百页的《拆穿蒋介石》、一本是《李敖新刊》第一册——《没有国是孤岛》……种种活动，好不气杀人也！
 
@@ -1700,9 +1606,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1989年4月11日
 
-
-
-##李敖札记
+## 李敖札记
 
 快乐与技术
 
@@ -1724,9 +1628,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 吴越潮生前在信义路口对我说：“国民党里有很多坏人，所以局面弄成现在这样子；但国民党里也有好人，所以弄成现在这样子还能拖下去。”但我总觉得，帮助国民党作恶的好人，只是“坏的好人”耳！岂配称为好人哉？（1989年4月13日）
 
-
-
-##怎样吃警察
+## 怎样吃警察
 
 1970年1月里，彭明敏在全天候被国民党软禁下，神秘地偷渡到瑞典，并取得政治庇护。消息传来，国民党立刻把我软禁，不分日夜，由专车一辆、专人若干，对我紧迫盯人起来。这一紧迫盯人，先由警察单位派人，后来警总单位接力，前后“跟监”（跟踪监视）了我十四个月，直到我在1971年3月19日被捕为止。在我被软禁的这十四个月里，所谓专车一辆，一开始是“华宾”字号的计程车，后来是“兴业”字号的计程车，最后是“永炯”字号的计程车，事实上，都是警总保安处的工作车化装的。当时保安处处长是吴彰炯少将，计程车字号是“永炯”，显然有“永远是吴彰炯”之意。我常笑国民党口口声声革命革命，推翻旧制度旧社会，其实啊，这个觉在许多腐败方面，十足是旧制度旧社会的拥抱者，旧社会旧制度中的迷信，尤其是他们优为之的。这次王升改他家的大门以符合风水吉祥，就是最明显的一例。比起王升来，吴彰炯是小焉者也，所以只是来个“永炯”来过迷信的瘾。在专车一辆之外，一般是三人一组，每天三组，每组八小时，对我二十四小时全天候紧迫盯人。那时我住的是四楼公寓的顶层，他们在楼下对面农家平房里租了两间，车就停在门口，和我的自用车（也是裕隆出品，与计程车同一品级的车）遥遥相对。每次我出门的时候，他们就跟踪，李敖步亦步、李敖趋亦趋。过去彭明敏被跟踪的时候，曾向我埋怨说被跟多么讨厌，我劝他说你何必介意呢？只把他们当做“狗”来跟你就算了。彭明敏说李敖你没被跟，你不知道这滋味，等你被跟，你就知道不是那么简单了。后来我被跟了，我倒觉得蛮好玩。和我同时被跟的，有谢聪敏与魏廷朝，他们两位经常跟“这些狗”冲突。谢聪敏说他被跟久了，自己都有点神经兮兮，甚至洗澡时都感到仿佛有人在偷看，别扭死了。他报复的方法是到百货公司等人多的地方，忽然当众说明身份，并指着跟踪他的人，大骂是“国民党的走狗”！跟踪他的人反映到上面去，当时台北市警察局安全室主任卢金波（后来升官做刑事警察局局长）说：“让他去骂，你们忍耐几天，他们没几天好日子了！”魏廷朝的报复方法是“劳动改造”，他经常穿上球鞋，吃饱喝足，突然跑去爬山，跟踪他的人身体不如他，也没吃饱喝足，也没穿球鞋，冷不防被他带到山上，叫苦不迭。魏廷朝一组一组这样“山地训练”，“那些狗”也只好身带便当水壶、脚穿球鞋伺候。由于魏廷朝算出“那些狗”的交班时间，所以每每在交班前开门见山，制造临时情况，使他们不但不能下班，还得爬山呢！魏廷朝又知道“那些狗”为了不愿爬山，常常故意落伍，然后向上面谎报“叛乱犯”不知去向，所以他又爬得快慢适中，不使他们跟不上，他并且恐吓说，你们明明看得到我，就必须跟我，我爬你们就得爬，你们若开小差，我就报你们。所以，经常的“爬山图”是：魏廷朝早已到了山顶，坐在石头上招手，山腰上两个人还在慢慢爬，嘴中念念有词（外省人有词是“肏你妈”，台湾人有词是“干你娘”），非常有趣。后来他们实在吃不消，乃托跟踪我的人向我讲人情，转告他们只是奉命办事，是可怜人，请魏廷朝不要这样整人。正巧一天魏廷朝爬山不慎，从山上滚了下来，皮肉受伤，我告诉他说他们讲人情的事，于是他的“山地训练”也就告一段落。至于我的报复方法，是比较“阴险”的。我原则上是同跟踪我的人嘻嘻哈哈，不轻易报复，大家互相方便，我在方便中套取情报，并从中取利。俗话说：“福无双至，祸不单行。”这是说祸是双至的。我对双至有一个怪解释：当祸本身一至的时候，凡夫俗子本身就配上另一至，另一至就是苦恼自己。凡夫俗子遇到祸事，立刻做直接的苦恼自己的反应，于是祸上加祸，自然就双至了。我的办法是：我遇到祸事，第一就告诉我自己：“我决心不被它打倒，相反的我要笑着面对它。”这样一来，我就先比别人少了至少一祸。绝不配合祸，这还不够，我要把祸本身给“值回票价”，这才满意，什么是“值回票价”？《史记-管晏列传》，司马迁说管仲“善因祸而为福，转败而为功”，这是我最欣赏的一种本领，化祸为福、转失败为成功，对人生说来多么重要！“人生不如意事，常十之八九。”低手对不如意的事，是唉声叹气；高手对不如意的事，却能化成对自己有利。人要修炼到这一段数，才算炉火纯青。炉火纯青的人，不论在八卦炉里、在八卦炉外，都是一样逍遥。基于这种达者强者的人生观，我在被国民党软禁过程中，一直表面上悠哉游哉，骨子里却用尽心机，化成对自己有利。其中最有趣的一件，是我吃警察的一段故事。
 
@@ -1816,9 +1718,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1984年3月8日晨
 
-
-
-##地下哲学家的札记
+## 地下哲学家的札记
 
 一、这个岛上的人
 
@@ -1914,9 +1814,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 不让小人接近你的生活，因为一接近，你没有他就非常不方便，你就很难摆脱他。所以，如果不能免于被小人包围，最好小人要多些。（1982年7月2日）
 
-
-
-##老子意见，就是这个
+## 老子意见，就是这个
 
 渴饮盗泉水，
 
@@ -1930,9 +1828,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1979年
 
-
-
-##如此春蚕，如此吐丝
+## 如此春蚕，如此吐丝
 
 自由主义者殷海光教授，在1967年7月，正式被国民党赶出台湾大学。在殷海光被赶出台大前三十年的一个冬天，日本东京帝国大学的教授矢内原忠雄，为了反对政府的政策，被迫辞职。在提出辞职的第二天，因为等待核准时间，所以还能走私一次演讲，他在树叶飘零的12月2日，在法科第七教室，向知识分子做了风雨之声：
 
@@ -2094,9 +1990,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 1982年12月7日
 
-
-
-##西安事变前张学良做的几件事（孙铭九）
+## 西安事变前张学良做的几件事（孙铭九）
 
 派高福源回苏区联系
 
@@ -2252,9 +2146,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 苗的讲话，被蒋特分子报告了晏道刚，晏要求张学良把苗交出来，张为缓和紧张形势，说要惩办苗，后又以畏罪逃跑之名，将苗送到北平。这件事也就不了了之。蒋以后痛恨黄显声，此事亦是原因之一。
 
-
-
-##临潼扣蒋（孙铭九）
+## 临潼扣蒋（孙铭九）
 
 西安事变时，我任张学良的卫队营营长，奉命扣蒋介石。现就记忆所及，对有关史实写下来，供参考,请指正。
 
@@ -2384,9 +2276,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 ②唐君尧系东北军一〇五师的旅长。我后来知道他是张学良派来协同扣蒋的。
 
-
-
-##二二事件的前因后果（孙铭九）
+## 二二事件的前因后果（孙铭九）
 
 1936年12月25日，张学良将军为了抗日救国宁愿以牺牲自己的精神，亲送蒋介石飞离西安回到南京。据张的侍卫副官刘海山事后对我说，蒋一到洛阳立即改变了态度而装出一副威严的面孔，对张监视，露出扣张的企图。一到南京，蒋介石就立刻背信弃义大耍各种手段，先是伪造“对张杨的训话”，继之令宋子文转告张学良写出书面请罪书，随后又以军法审判的形式，判张学良有期徒刑十年，最后又施以虚伪的特赦，特赦后面又加上交军事委员会“严加管束”，这样就实现了无限期监禁张学良将军的目的。此后，西安方面对蒋介石这种背信弃义的行为极为愤慨，特别是在东北军内部对蒋介石的痛恨更是达到极点。
 
@@ -2540,9 +2430,7 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 
 王以哲死后，刘多荃派军队向西安进攻的同时，又命令葛晏春团长枪毙了高福源旅长。以后又派人搜捕于文俊连长，给王以哲祭灵，为王报仇。
 
-
-
-##《鹰犬将军》前言（宋希濂）
+## 《鹰犬将军》前言（宋希濂）
 
 我是湖南湘乡人，生于公元1907年。先世多为文人，曾祖父蟾桂公曾随左宗棠去到西北，在甘肃省任过县知事、知府等职。袓父公卿和父亲宪文均饱读经书，但未踏入仕途，只在故乡耕读自娱。我父亲为地方兴办学校及各种公益事业，与人排难解纷，极为乡里所推重。我年幼时，父亲教我背诵古文诗词和阅读一些古典文学作品，直到今天尚深印脑海。我的母亲姓彭，闺名玉贞，秉性慈祥，是一位典型的贤妻良母，生子女六人，都是躬亲抚养教育。我们的家境并不富裕，仅是一个小康之家，约有二十亩地，雇有一名长工，还够不上称为富农。我母亲恤老怜贫，常尽其所有帮助他人，这种德行，乡亲们无不感激赞叹，我后来于役军旅，尽管我掌生杀大权，但从未枉杀一人，这都是受我慈母教诲的影响。我母亲由于抚养一大群子女，操理家务，备极辛劳，不到五十岁就病故了。
 
@@ -2557,6 +2445,3 @@ jarvisdd：看李敖有话说，有一集提到海南大学、海南师范大学
 我在长沙长郡中学读书时期，各个帝国主义对我国侵略有增无已，甚至大唱瓜分中国的论调；国内军阀连年内战，民不聊生，基于爱国热情，觉得青年非奋起救亡图存不可。那时根本不知道什么叫共产主义，更不知有中国共产党，对孙中山的三民主义，也是朦朦胧胧，只知道他是一位伟大的革命人物。在十六、七岁时，我成为爱国运动的积极参与者，其后间道赴粤，投考黄埔军校，也就是为了这个目的。毕业后于役军中，参加统一广东的战斗，随后又参加了北伐战争、八年抗日战争，受过几次伤，在日本留学时坐过牢，都是基于爱国主义而奋不顾身的。当然，我也走过一些弯路，犯过严重错误。新中国成立三十多年来，进行了抗美援朝，抵制了俄国人企图控制我国的巨大压力，反击了印度、越南的侵略，任何外国人在我国犯了罪，都要受到我国法律的制裁，大大提高了我国的国际地位，增长了中国人民的志气，这使我感到由衷的高兴。但是祖国尚未完全统一，国家仍然相当贫穷落后，1980年我到了美国，会见了不少老朋友，结识了许多新朋友，虽已是垂暮之年，总乐意和大家谈论祖国的统一和加速祖国四个现代化。当过美国国务卿的基辛格曾说过：“中国将是21世纪世界上最强大的国家。”美籍华裔学者现任旧金山大学校长吴家玮先生根据这句话加以引伸说，这应该是香港、台湾与大陆统一后的中国。他希望旅美华人应该群策群力，促进祖国的统一和现代化。我十分赞赏和同意这种意见。我认为凡属承认自己是炎黄子孙的每一个中国人，都应为这个伟大目标而努力！但也有已经完全丧失了国家民族意识的极少数民族败类，指责我是充当中共的鹰犬，台湾一位著名的政论家李敖先生为此写了一篇《鹰犬将军》（见附录），纽约的北美日报转载此文时加了编者按语，其中说：“宋希濂将军在垂暮之年，身在美国，远离国共两党，但因屡屡出面呼吁祖国统一大业而为人争议。这里被争议的焦点是宋将军应该效忠于自己的国家民族？还是应该效忠于政党？甚至于效忠于领袖个人？显然宋将军选择的是前者。这对仍然受着几千年封建意识影响的人来说，是很难理解的。”我的思想和少年时代一样，那时救亡图存，现在是祖国的统一和祖国的富强。北美日报编者的这几句按语，可说是我这位行将八十高龄的人一生的总结。我十分感谢这位素无一面之缘的李敖先生为我所写的《鹰犬将军》，并决定用这篇大作作为本书的书名。
 
 宋希濂1985年6月于北京
-
-
-
