--- a/04.小说剧本类/上山上山爱.md
+++ b/04.小说剧本类/上山上山爱.md
@@ -1,4 +1,8 @@
-#《上山上山爱》目录
+# 上山上山爱
+
+<!-- toc -->
+
+## 目录
 
 * 楔子
 * 第一部——三十年前
@@ -6,9 +10,7 @@
 * 第三部——三十年后
 * 我写《上山上山爱》
 
-
-
-##楔子
+## 楔子
 
 1920年1月24日，在巴黎。一位穷困的三十六岁画家，发了高烧，昏倒在画室里。被发现后，立刻送到慈善医院，晚上八点五十分，他死了。
 
@@ -22,9 +24,7 @@
 
 而“莫迪里亚尼”（Modiglian）就是他的名字。
 
-
-
-##第一部——三十年前
+## 第一部——三十年前
 
 她是一个酷爱莫迪里亚尼创作的小女人。她的小脸清瘦，就像莫迪里亚尼在1916年画的那张“露妮”（Reneelablonde）的脸，或是1917年那张“结领带的女郎”（Femmea1acravateRotire），或是那张“罗洛蒂”（Lolotte）。不对，“罗洛蒂”那张稍胖了一点，她却是标准的清瘦型的，清瘦而苍白。
 
@@ -5322,9 +5322,7 @@ ColmeletuskissandPart．
 
 笑脸贴住笑脸，我快速紧抱了她，快速放开了。我回头看了一下“刘队长”，知趣的他，正背对着我们。是时候了，我右手紧抓住小葇的左手，两条手臂先是平行的，再由平行变成直线，再由直线变成分离，日望着小葇，我要带上大门了。在门缝中，我学公鸡，咕咕咕的长叫了一声，叶葇惊讶的笑了一下，大门，在笑容中带上了。再见了，情人，最后分别你我的，不是悲情世界的荆棘；分别你我的，是我们自己的——大门。
 
-
-
-##第二部——二十年前
+## 第二部——二十年前
 
 1980年，我出狱了。
 
@@ -5378,9 +5376,7 @@ HekPowsyounot，yeheavenlypowers．
 
 忍泪把信看完了，我望着远方、望着蓝天白云、望着白纸包……最后，我小心打开了它。一条干干净净的内裤，白白的、静静的、没有一点生机的，躺在那里。十年大狱，我没掉过一滴眼泪，现在，眼泪，对我陌生的眼泪，终于夺眶而出。让它从脸上滑落、滑落，滑落到地上、滑落到尘土，滑落到小葇和我的尘土。泪尽时分，让我重回理智的世界，在山上。
 
-
-
-##第三部——三十年后
+## 第三部——三十年后
 
 和小葇相聚在1970年，失散也在1970年。现在是2000年了，三十年过去了。
 
@@ -6866,9 +6862,7 @@ AndIshallslerpinpeaceuntilyoucometome!
 
 2001年4月13日，在中国台湾
 
-
-
-##我写《上山上山爱》
+## 我写《上山上山爱》
 
 1935我生那年，鲁迅在《且介亭杂文》的“附记”里，提到国民党政府管制言论，当时主持检查的人删文章，并不告诉读者哪儿被删，弄得文章上气不接下气，读者看了，大惑不解，“你在说什么呀？”
 
@@ -6905,6 +6899,3 @@ AndIshallslerpinpeaceuntilyoucometome!
 藏传佛教有“尸陀林主”（MastersofSitavana），画面是男女骷髅，风月交叉，虽朽为枯骨，但仍能灭敌饮血，以显神通。若论真的“尸陀林主”，非此书莫属。《上山上山爱》是真正灭敌饮血的文学，“谈笑间，强虏灰飞烟灭。”“强虏”是谁，读者一看便知。本书虽为情爱秘籍、男女圣经，但是功夫深处，却是“思想挂帅”的智者、强者文学，不想再看娘娘腔文学作品的读者，何妨一读此书，大开眼界也。
 
 2001年4月13日在中国台湾
-
-
-
