--- a/04.小说剧本类/北京法源寺.md
+++ b/04.小说剧本类/北京法源寺.md
@@ -1,4 +1,8 @@
-#《北京法源寺》目录
+# 北京法源寺
+
+<!-- toc -->
+
+## 目录
 
 * 楔子——神秘的棺材
 * 第一章——悯忠寺
@@ -19,9 +23,7 @@
 * 尾声——掘坟
 * 我写《北京法源寺》
 
-
-
-##楔子——神秘的棺材
+## 楔子——神秘的棺材
 
 天河像一条带子，正南正北的悬在天上。北京的人说：“牛郎在河东，织女在河西，今年七月见一面，再等来年七月七。”
 
@@ -75,9 +77,7 @@
 
 黑衣人回身一指，正门上头有三个大字——“悯忠寺。”
 
-
-
-##第一章——悯忠寺
+## 第一章——悯忠寺
 
 7世纪的644年，中国正是唐朝的第二个皇帝唐大宗的天下。他忍了好多好多年，决心亲征东北的高丽了。高丽那时候，不仅在朝鲜半岛称霸，北边的势力，还延伸到中国东北的辽水流域，这是好大喜功的唐太宗绝不能忍耐的。不能忍耐归不能忍耐，他不能不小心，因为隋朝就为了三十年前打高丽，害得国内空虚，引起了革命，唐太宗才趁机灭了隋朝，建了唐朝。如今三十年后，他自己再重新发动这一进攻，是不能不特别小心的。
 
@@ -135,9 +135,7 @@
 
 在“寂寞余花”的时候，开始了本书的故事。
 
-
-
-##第二章——寂寞余花
+## 第二章——寂寞余花
 
 时间是1888年，是清朝第九个皇帝光绪十四年，中国、的戊子年旧历正月初二日的上午，一个近三十来岁的青年人，一对有神的大眼睛，紧闭着嘴，有点黑，一脸广东人的长相，留着辫子、穿着灰色长袍、外套黑马褂、脚穿御寒的毛窝，漫步走向悯忠寺来。那时候悯忠寺已经改名法源寺，改了一百五十六年了。法源寺在北京宣武门外西砖胡同，远远望去，并排的三座大门，每座都对开两扇，门顶上是厚重的宫殿式建筑，门与门之间是墙，墙头也同样铺上琉璃瓦。这一排山门建筑，第一印象使人觉得厚重，好像凡是看到的，都戴了又厚又重的大帽子，庄严地等你过来。中间的门最大，前面左右各一只石狮子，尤其显得庄严。正门是开着的，可是冷清清，看不到什么人。虽然是正月初二，过年过得最热闹的时候，法源寺这种庙，却不是热闹的地方。北京的群众这时候去的是朝阳门外的东岳庙，这是奉礼道教东岳大帝的庙，庙里有真人大小的地狱七十二司，恶形恶状的，看起来很恐怖，据说还出自元朝塑像名家刘元之手。地狱有的还有活动机关，曾有吓死游客的事，所以停止了，足见这个庙的格调不高。这座老庙每到过年，香火特旺，男男女女，一清早就赶去烧香。庙的后院，有一头铜骡子，有人那么高，铸得很好，传说这骡子很灵，有病的人用手摸它身上哪个部位，自己身上哪个部位的病就会好；没病的人摸它身上哪个部位，自己身上哪个部位以后就不生病，要摸还得过年时候摸，过年时候才最灵。于是一到过年，这头铜骡子就被挤得水泄不通，被摸得光亮无比，不亦乐乎。它的生殖器，没人公然摸，但也极光亮，据庙里老道说，半夜三更许多人专门来摸它，这大多是生花柳病的人。
 
@@ -487,9 +485,7 @@
 
 和尚听了，木然地望着康有为，最后点点头，侧过身，伸出了右臂：“请康先生来用饭吧！”
 
-
-
-##第三章——“休怀粉身念”
+## 第三章——“休怀粉身念”
 
 进了饭厅，饭刚摆好。饭是高粱米混小米，北京普通人不常吃大米饭，因为太贵。菜只三盘，二大一小，大盘一盘是素烧白菜豆腐、一盘炒蛋，小盘是酱瓜。和尚请康有为人座，坐的是直角的硬木椅，入坐在这种椅子上，“除了正襟危坐，不容易有第二种坐法。饭桌是方的，是普通的、不怕烫的红漆桌，简单而干净。正面墙上挂着一幅横幅，上面写着：
 
@@ -769,9 +765,7 @@
 
 和尚和小和尚直送康有为到庙门。到了门口，互相道别。康有为走了几步，忽然和尚叫住了他：“街那边的谢文节祠去过了吗？”康有为说没有。和尚说：“不妨去一下，康先生要想多体会谢枋得殉国的真相，那个地方，也该走一走。”
 
-
-
-##第四章——西太后
+## 第四章——西太后
 
 北京城西北角的城门叫西直门，出了西直门，一条河一直向西。顺着河上去，再往前走七里水路，右岸就是大名鼎鼎的万寿寺。
 
@@ -883,9 +877,7 @@
 
 西太后从北京皇宫出发去颐和园的途中，总要下轿休息一下，休息地点，就是万寿寺。就这样的，万寿寺变成了炙手可热的一座寺，西太后的亲信李莲英等；做起佛事来，就非万寿寺莫属了。
 
-
-
-##第五章——康进士
+## 第五章——康进士
 
 当西太后从万寿寺，坐着轿子，又“回避”又“肃静”的西去颐和园的时候，康有为从法源寺走出来，孤零零的，南下广东了。
 
@@ -937,9 +929,7 @@
 
 翁同龢是江苏常熟人，近四十年前，他不但考中了进士，还是进士的第一名——状元，那时康有为还没有出生。四十年来，他个人的地位日渐上升，可是中国的地位却日趋下降，他内心的自责与惭愧，随着年纪的老去，与日俱增。五年前他六十大寿，西太后赐他匾一方、联一副、福寿字各一、三镶玉如意一柄、铜寿佛一尊、绣蟒袍料一件、小卷八个，并即日召见。有“汝忠实”之谕，对他的笼络，备极殊荣。可是，他内心里却自责、惭愧，认为他自己的“忠实”是可疑的。这么多年来，他“忠实”的对象，似乎只是对西太后的私恩而已，而不是对整个国家的公益。其中海军经费给西太后挪用修理颐和园那件事，更使他痛心疾首。那时海军的经费是几千万，可是实际拨给海军的，却不过百分之一。那时管国家财政的，不正是他自己吗？那时不能据理力争也不能以进退力争的，不正是他自己吗？那时确定十五年之内海军不得添置一枪一炮决策的，也不正是他自己吗？……如今仗打败了，他自己的误国之罪，怎么说也有份吧？现在，他老了，他感到在有生之年，必须要做一点赎罪的事了，为了这样做，即使得罪了西太后，他也顾不得了。
 
-
-
-##第六章——皇帝
+## 第六章——皇帝
 
 翁同龢进了宫，把康有为的意见，偷偷告诉了皇帝。请皇帝注意这个三十八岁的青年改革家。这时正是甲午之战的第二年，中国打了败仗，割了台湾、赔了二万万两银子，皇帝在苦闷中。
 
@@ -1049,9 +1039,7 @@
 
 皇帝在召见康有为后的第七天，就先下诏废除了八股取士制度。接着，在康有为的筹划下，小臣们一个个被重用了。召见以后不到三个月，皇帝下了命令，给四个小臣均着赏加四品卿衔，在军机章京上行走，参预新政事宜。军机章京是军机处中四品官以下的官，相当于皇帝的机要秘书，军机处的首领是军机大臣，都是三品以上的官，都被西太后扣得紧紧的，皇帝无法说了算，只能自己任命四个章京来分军机大臣的权，把他们特加卿的头衔，点名参预新政，这种安排，是很费苦心的。四个章京中，小臣杨锐、小臣刘光第是张之洞的学生，小臣林旭是康有为的学生。他们三个人，都参加过康有为召开的保国会，很早便与康有为认识了。可是最后一位小臣，不但没参加保国会、也没参加强学会。就跟康有为的关系来说，是后起之秀。这个人籍贯湖南浏阳，生在北京，三十三岁，身分是江苏候补知府；他的父亲是湖北巡抚，这位巡抚是翁同龢朋友，翁同龢见过老友此子，在日记中写道：“……通洋务，高视阔步，世家子弟桀骜者也。”可见他的气派。军机章京在皇宫里分成两班，这个人分到与刘光第一班。第一天上班，他“桀骜”地走进了内廷外面，御史问他、太监们问他，他一言不发，拿起毛笔，在纸上写了三个大字——“谭嗣同。”
 
-
-
-##第七章——回向
+## 第七章——回向
 
 北京的10月已经转冷，可是冷的时候，忽然有一股暖的感觉，那就是俗说中的“温雪”。“温雪”就是开始要下雪了。
 
@@ -1287,9 +1275,7 @@
 
 “艮寅，临别无以为赠，我送你一个名字吧，艮寅的名字不好，又八卦又天干地支，不能跟你相配，改个单名，叫‘蔡锷’吧。锷是刀剑的刃，又是很高的样子，又高又锋利，正是你的前途。至于字，就叫‘松坡’吧。岁寒然后知松柏之后凋，有松树那种节操，再加上苏东坡那样洒脱，正是蔡锷的另一面啊！”
 
-
-
-##第八章——大刀王五
+## 第八章——大刀王五
 
 梁启超回到上海，已是1898年的春天。这一年是光绪二十四年戊戌年，过去多少年的经营，都在这一年快速有了结果。先是四月二十八日光绪皇帝召见了康有为；十六天后，五月十五日，皇帝又召见了梁启超，赏给梁启超六品官头衔，要他办理印书局事务。这是一次很奇怪的召见，按照朝廷定例，一定要四品官以上，才有资格被皇上召见，皇上是不召见小臣的。那时候梁启超只有二十六岁，不但不是小臣，根本是一介布衣，由皇上召见布衣，这在清朝开国以来，都是罕见的事。
 
@@ -1525,9 +1511,7 @@
 
 王五、胡七都争着扶起谭嗣同来。谭嗣同转身退去，大家望着他的背影，消失在黑暗里。
 
-
-
-##第九章——戊戌政变
+## 第九章——戊戌政变
 
 黑暗在北京城处处皆有，即使在皇宫中也一样。紫禁城的宫墙都相当高，夹在宫墙中的，多是四合房、三合房，晚上到来，更是黑暗处处。
 
@@ -1801,9 +1785,7 @@
 
 平山周从谭嗣同的机警眼神里，也有了“高手过招”的默识。最后，在浏阳会馆门口，他鞠躬而退了。他用深情的眼神望着谭嗣同，转身走上回程。
 
-
-
-##第十章——抢救
+## 第十章——抢救
 
 五个小时以后，平山周回到公使馆告诉梁启超，他说他直送谭嗣同到会馆，会馆附近已经有形迹可疑的人。平山周认为，他再去想想办法，看看能不能劝劝谭嗣同。他走出房门，去找林权助。
 
@@ -2047,9 +2029,7 @@
 
 “西乡是西乡隆盛。”平山周说，“月照是西京清水寺的和尚，为人家侠仗义，他出国回来，在西方压力和幕府压力下，进行勤王尊王的活动。后来事情闹大，由近卫公安排，避难于萨摩，由西乡隆盛收容。最后牵连到西乡。月照不愿连累近卫公和西乡，乃伸头给西乡，表示宁死于同志之手。但西乡却若无其事，与月照上船喝酒唱歌，最后两人相抱，一起跳海了。大家抢救，救起了西乡，可是月照却淹死了。西乡后来变法维新成功，完成了月照勤王尊王的遗愿。刚才谭大人叫我们把月照和西乡的事转告梁先生，就是期勉梁先生以同志的死为激励，去努力完成未竟之业。谭大人真是大人气象，太教人佩服了。中国有这种伟大的人物，我们日本要亡中国，可早得很呢！”
 
-
-
-##第十一章——舍生
+## 第十一章——舍生
 
 平山周他们走后，谭嗣同在浏阳会馆动作加快起来。他关着房门，检查了屋里的片纸只字，有的烧毁了，有的又有意保留下来。他神秘工作了一个上午，然后匆匆外出，机警地看了四周，转入小巷，朝大刀王五的镖局走去。
 
@@ -2259,9 +2239,7 @@
 
 “我去哪儿？”谭嗣同笑了一下，拍着老家人的肩膀，“我定会让你知道。你先去吧！”
 
-
-
-##第十二章——从监牢到法场
+## 第十二章——从监牢到法场
 
 1898年9月25日，中国农历戊戌年八月十日．北京城的鬼月刚过去不久，可是一片阴霾与鬼氛，却笼罩在全城。天还乍亮的时候，日本公使馆的大门慢慢开了，八个穿着和服的日本人，戴着压低帽沿的大帽，鱼贯走了出来，上了马车。到了火车站时候，他们又鱼贯走进。可是到了进月台之前，十几个清廷官员赶了过来，半强迫半礼貌的拦阻了他们，说按照手续，请他们拿出护照看看。护照一一是平山周、山田良政、小村俊三郎、野口多内、桃太郎、宫崎滔天、可儿长、月照。清廷官吏由翻译官用熟练的日语，向他们问话寒暄，可是问到月照的时候，平山周抢着用中国话说：
 
@@ -2417,9 +2395,7 @@
 
 一行人等再朝西走，越过了一个胡同口，走到了下一个胡同口，开始左转进胡同，走到尽头再右转，一座古庙展现开来。他们在庙门口歇下，胡理臣先进庙里洽办，罗升在斜阳中望着庙门，正门上头有三个大字——“法源寺”。
 
-
-
-##第十三章——他们都死了
+## 第十三章——他们都死了
 
 棺材停在法源寺的后房里，下面用两个长板凳横撑着，正面没有任何文字，是谁的棺材，只有知道的人才知道。老家人们帮着抬棺材、架板凳，忙得满头大汗。胡理臣从腰间掏出一条毛巾，没有擦汗，只用来把棺材擦得干净、仔细，一如几个小时前清洗小主人的血脸。最后，摆上香案，一齐下跪，磕着头，他们终于哭出声来，一一诉说着少爷的苦命与不幸。
 
@@ -2597,9 +2573,7 @@
 
 “他们都死了，”八指头陀在残烛下漫想着，“谁来检定他们的往事呢？现在，清廷王朝没落了、中华民国建立了，时间愈久、时代愈变，往事就愈淹没了，但是，两昆仑的谜团，到底指谁呢？”
 
-
-
-##第十四章——“明月几时有”
+## 第十四章——“明月几时有”
 
 “到底指谁呢？”——同一个问题，在八指头陀死在法源寺后两年，1915年，中华民国四年，又被提起了。
 
@@ -2729,9 +2703,7 @@
 
 史迪威顿然一惊，然后摇了摇头，停住了，过了一会，他把脸朝向窗外。“康先生秋天来，冬天走了。”他心里想着，“他该走了，北京的冬天，对他太冷了。”
 
-
-
-##第十五章——古刹重逢
+## 第十五章——古刹重逢
 
 九年过去了。
 
@@ -2931,9 +2903,7 @@
 
 转过身来，他没有回头，但却挥手告别。普净眼眶湿了，静静地看着他远去的背影。“康先生老了，他走得那么慢——”普净突然若有所悟，“可是，在最后这段路里，他还是走在我前面。”
 
-
-
-##尾声——掘坟
+## 尾声——掘坟
 
 1927年2月28日，康有为离开法源寺后七个月，在梁启超带头为他庆祝七十大寿后二十三天，死于青岛。
 
@@ -2951,9 +2921,7 @@
 
 1990年12月31日，在中国台北。
 
-
-
-##我写《北京法源寺》
+## 我写《北京法源寺》
 
 《北京法源寺》作为书名，是十六年前我第一次做政治犯时在国民党黑狱中决定的。自1971年起，我被国民党政府关过两次，第一次十足关了五年八个月；第二次十足关了六个月，一共十足关了六年两个月，再加上被在家软禁十四个月，一共是七年四个月。七年四个月中，六年两个月是在牢里度过的。我历经七间牢房，其中有保安处不见天日的密封房、有军法处臭气四溢的十一房、有仁教所完全隔离的太平房、有台北看守所龙蛇杂处的三二房。……其中住得最久，是军法处的八号房，我一人住了二年半之久。八号房不到两坪大，扣掉四分之一的马桶、水槽和四分之一的我用破门板架起的“书桌”，所余空间，已经不多。一个人整天吃喝拉撒睡，全部活动，统统在此。不过不以人为本位，小房间内也不乏“生物”，白蚁也、蟑螂也、壁虎也、蜘蛛也、蜈蚣也。……都户限为穿、来去自如。至于狗彘不若的人，就自叹弗及。八号房的户限与来去，主要靠墙与地交接点上的一个小洞，长方形，约有30x15厘米大，每天三顿饭，就从小洞推进来；喝的水，装在五公升的塑料桶里，也从小洞拖进来；购买日用品、借针线、借剪指甲刀、寄信、倒垃圾……统统经过小洞；甚至外面寄棉被来，检查后，也卷成一长卷，从小洞一段段塞进。小房虽有门，却是极难一开的。门虽设而常关，高高的窗户倒可开启，可是通过窗上的铁栏看到的窗外，一片灰墙与肃杀，纵在晴天的时候。也令人有阴霾之感。在那种年复一年的阴霾里，我构想出几部小说，其中一部，就是《北京法源寺》。
 
@@ -2978,6 +2946,3 @@
 在一般以小人物为小说的矮丛中，我高兴我完成了以大人物为主角的这部《北京法源寺》。写大人物是多么振奋自己、振奋人心的事！书中大人物之一谭嗣同，他以身殉道、“踔属敢死”（章大炎语），更是“清季以来”、“一人足以当之”的“真人物”（熊十力语）。他一生心血，全在《仁学》一书。写成之后，他感于台湾新丧日本之手，乃不用真名，而以“台湾人所著书”颜其封面，借哀浊世；如今，我独处台湾，写《北京法源寺》，“台湾人所著书”之识，百年孤寂，又复重演。契阔四十载。今印此书以归故国，沧海浮生，难忘我是大陆人而已。
 
 1991年6月12日
-
-
-
