--- a/04.小说剧本类/第73烈士.md
+++ b/04.小说剧本类/第73烈士.md
@@ -1,4 +1,8 @@
-#《第73烈士》目录
+# 第73烈士
+
+<!-- toc -->
+
+## 目录
 
 * 楔子——1911（黄花岗）
 * 第一部——1949（黄花岗38年后）
@@ -9,9 +13,7 @@
 * 第六部——2011（黄花岗百年后）
 * 附录——《第73烈士》志缘
 
-
-
-##楔子——1911（黄花岗）
+## 楔子——1911（黄花岗）
 
 “师爷，第几个了？”
 
@@ -75,9 +77,7 @@
 
 “我也不知道。也许有一天，它会叫——‘黄——花——岗’。”
 
-
-
-##第一部——1949（黄花岗38年后）
+## 第一部——1949（黄花岗38年后）
 
 中国文化的特色可多了，其中之一是，坟是平的。人死了，归于大地、归于尘土，在土地上，无需任何标志，甚至一棵树都不必，望过去，茫茫一片，一点都不起眼。起眼干什么呢？望它的人，几十年一过，也归于大地、归于尘土。生者望死者，犹如死者一波波相望。纵使是一代帝王，如秦始皇，他的坟啊，也不过茫茫一片，虽然地下有千军万马，但坟是平的，毕竟是天字第一号的帝王，在他眼里，从不预知有汉，没有汉家陵阙。
 
@@ -701,9 +701,7 @@
 
 大官人低头沉思了一下，想着什么。最后，想到了答案：“他是谁？他没有名字，只有编号，他是黄花岗死者的最后一个，他不是活先烈，也不是死活人，他是‘第七十三烈士’。”
 
-
-
-##第二部——1961（黄花岗50年后）
+## 第二部——1961（黄花岗50年后）
 
 黄花岗五十年后，1961，三月二十九，在台北。
 
@@ -1635,9 +1633,7 @@
 
 大家笑了起来。
 
-
-
-##第三部——1963（黄花岗52年后）
+## 第三部——1963（黄花岗52年后）
 
 黄花岗五十二年后、蒋政权流亡台湾十四年后，1963，岁暮时分，林光烈在台湾凤山陆军步兵学校。
 
@@ -2469,9 +2465,7 @@
 
 只有着满身弹痕。
 
-
-
-##第四部——1982（黄花岗71年后）
+## 第四部——1982（黄花岗71年后）
 
 那真是漫长漫长漫长的一场丧礼，从1949拖到1959、1969、1970、1971、1972、1973……还没完呢。
 
@@ -2683,9 +2677,7 @@
 
 “李爷爷最懂了。”
 
-
-
-##第五部——2002（黄花岗91年后）
+## 第五部——2002（黄花岗91年后）
 
 2002年，黄花岗九十一年后。
 
@@ -3121,9 +3113,7 @@
 
 林光烈上了计程车，向王宇挥了挥手，王宇背后，李师科的塑像正衬在那里。生死线上的王排长啊、李士官长啊，挥手对我们说来，从来不是死别的讯号，从来不是、也永远不是。战场在等我们，我先走了。
 
-
-
-##第六部——2011（黄花岗百年后）
+## 第六部——2011（黄花岗百年后）
 
 2011年，黄花岗一百年后。
 
@@ -3781,9 +3771,7 @@
 
 “如果你活见鬼，他就是吧。”
 
-
-
-##附录——《第73烈士》志缘
+## 附录——《第73烈士》志缘
 
 对文学作品的任何诠释都是多余的，以下不作诠释，只志因缘。
 
@@ -3806,6 +3794,3 @@
 这本书，扭转了百年错误、扭转了百年孤寂、扭转了他们和我们、扭转了我和你。
 
 2011年3、4之月，李敖在中国台北。
-
-
-
