--- a/04.小说剧本类/红色11.md
+++ b/04.小说剧本类/红色11.md
@@ -1,4 +1,8 @@
-#《红色11》目录
+# 红色11
+
+<!-- toc -->
+
+## 目录
 
 * 剧中人
 * 第一幕夏至
@@ -7,9 +11,7 @@
 * 第四幕春分
 * 后记
 
-
-
-##剧中人
+## 剧中人
 
 * 龙头——三十八岁，大作家。
 * 史处长——约六十岁，真名史子文。调查局处长。
@@ -23,9 +25,7 @@
 * 士官长——四十出头。
 * 班长——四十出头。
 
-
-
-##第一幕夏至
+## 第一幕夏至
 
 一间平面正方形的囚房，也是立体正方形，因为它很高，高到你不管多高，也伸手碰不到它的房顶，碰不到房顶的惨淡日光灯，也碰不到灯旁那台扩音器兼窃听器。至多碰到外窗的窗台，但被一排铁栏和栏外一排透孔砖双重挡住，碰也白碰，何况又多了一层木框的玻璃窗。不过上有残破的纱窗以防蚊子，算是唯一的残破的人道与关怀。可是从这点人道与关怀望出去的窗外，是一片灰墙与肃杀，纵在晴天的时候，也令人有阴霾之感。
 
@@ -1022,9 +1022,7 @@
 
 （大家笑成一团，幕落。）
 
-
-
-##第二幕秋分
+## 第二幕秋分
 
 场景和第一幕一样，不过时间已从夏天转到秋天了，是中国阴历秋分的凌晨五点钟，阴历的九月下旬。
 
@@ -1788,9 +1786,7 @@
 
 （外面又传来追打声，又一只大老鼠冲进来了，大家又惊又笑，幕落。）
 
-
-
-##第三幕冬至
+## 第三幕冬至
 
 场景和第一幕、第二幕一样，不过时间已从秋天进入冬天了，是中国阴历冬至的凌晨五点钟，阴历的十二月下旬。
 
@@ -2812,9 +2808,7 @@
 
 （音乐声中，幕落。）
 
-
-
-##第四幕春分
+## 第四幕春分
 
 场景和第一幕、第二幕、第三幕一样，不过时间已从冬天转回春天了，是中国阴历春分的凌晨四点与五点钟之间，阴历的三月下旬。
 
@@ -2860,9 +2854,7 @@
 
 （牢门咔嗒又关起来，舞台灯忽然全熄了，在黑暗中，但闻一二枪声。幕落。）
 
-
-
-##后记
+## 后记
 
 伪善的美国帝国主义者，他们以人权为天下倡，却在世界各地扶植法西斯政权做它走狗，放任这些儿皇帝摧残人权，制造“白色恐怖”案件，而美国却视而不见，从来没有把什么“人权牌”，打到这些走狗身上，原来所谓的“人权牌”，是专门用来对付不肯做走狗的独立国家的。
 
@@ -2881,6 +2873,3 @@
 李敖2003年3月28、美帝侵略伊拉克之日
 
 [附启]写这剧本，除了靠我三四十年来的苦心焦思和耳闻身历外，在几个个案上，我参考了或改写了几段他人的文字，变成对话体，我特别点出他们是李世杰、劫馀、李政一、林树枝、林颂和、谢聪敏、魏廷朝、胡虚一、黄纪男、许曹德、曹昭苏、秦汉光、谷正文、黄怡、顾正秋，特此声明，以示不敢掠血掠泪。顺便报告一下红色十一房的地理背景，它在秀朗桥下，照死去的难友李世杰的描写：“秀朗桥是一条横跨台北县永和市和台北市景美区的大桥，桥下新店溪溪水汩汩地流着。在景美这一端，桥尽处，是两个杀气森森的黑衙门和黑监狱——国防部军法局和台湾警备总司令部军法处，以及它们的两个看守所。”我写的红色十一房，就属于警总军法处看守所。
-
-
-
