--- a/05.诗集语录类/李语录.md
+++ b/05.诗集语录类/李语录.md
@@ -1,4 +1,8 @@
-#《李语录》总目录
+# 李语录
+
+<!-- toc -->
+
+## 总目录
 
 * 《李语录》一
 * 1.李敖的不朽度
@@ -449,9 +453,7 @@
 * 372.做鸡巴的条件
 * 373.政党与正义
 
-
-
-##《李语录》一
+## 《李语录》一
 
 1.李敖的不朽度
 
@@ -501,9 +503,7 @@
 
 科学怪人固然可怕，玄学怪人更是可怕。牟宗三之流，典型的玄学怪人也。他的文章和演说，都不知所云，可是国民党却还捧他——只有浑蛋才捧浑蛋。
 
-
-
-##《李语录》二
+## 《李语录》二
 
 11.不良少年与不良老年
 
@@ -547,9 +547,7 @@
 
 余光中他们置四海困穷而不言，如此冷血与逃避，何能成为第一流的文艺工作者？更有甚者，他们还谄媚当道，这是什么心肝？
 
-
-
-##《李语录》三
+## 《李语录》三
 
 21.不做国民党就值得自豪
 
@@ -593,9 +591,7 @@
 
 革命常常以良币代替劣币开始，以劣币驱逐良币结束。是新劣币代替了旧劣币，是良币的永被驱逐。
 
-
-
-##《李语录》四
+## 《李语录》四
 
 31.不得好活与不得好死
 
@@ -637,9 +633,7 @@
 
 老兵计程车司机对我说：“台北开车真可怕，比打仗还可怕。打仗只是正前方有敌人；开计程车却是前后左右四方都是敌人。”我觉得我正如此。
 
-
-
-##《李语录》五
+## 《李语录》五
 
 41.三大名眉
 
@@ -681,9 +675,7 @@
 
 谷小姐向柳小姐说了真话。柳小姐怪她。谷小姐说：“你看，你不喜欢听真话。”柳小姐说：“我喜欢听真话，但不喜欢听这种真话。”——可爱的女人总喜欢假的真话。
 
-
-
-##《李语录》六
+## 《李语录》六
 
 51.铁杵与木杵
 
@@ -725,9 +717,7 @@
 
 一个人过了五十岁，就不能要求昨天比今天好；但一个人不过五十岁，又如何能知今天实在比昨天好？
 
-
-
-##《李语录》七
+## 《李语录》七
 
 61.臭屁股与水肥车
 
@@ -769,9 +759,7 @@
 
 任何有人格的人，都不会认同国民党屈辱人格的统治；任何接受国民党屈辱人格的统治的人（不论自知或不自知）．都是没有人格的人。
 
-
-
-##《李语录》八
+## 《李语录》八
 
 71.马屁与狗屁
 
@@ -813,9 +801,7 @@
 
 有人说身不由己所以言不由衷，我看正好相反。
 
-
-
-##《李语录》九
+## 《李语录》九
 
 81.感谢德政？
 
@@ -857,9 +843,7 @@
 
 人间用刀的部分，刀解决；甩笔的部分，笔解决；用刀笔的部分，刀笔解决。
 
-
-
-##《李语录》十
+## 《李语录》十
 
 91.长城与墙脚
 
@@ -901,9 +885,7 @@
 
 国民党统治下匹夫匹妇的无知，常常缩小了我的写作范围。
 
-
-
-##《李语录》十一
+## 《李语录》十一
 
 101.讨厌的脸
 
@@ -945,9 +927,7 @@
 
 新女性自己愈不值得爱的时候，她们愈抱怨别人不值得爱。
 
-
-
-##《李语录》十二
+## 《李语录》十二
 
 111.拉链问题
 
@@ -997,9 +977,7 @@
 
 新女性妄想比真实更真，结果呢，她比虚伪更假。
 
-
-
-##《李语录》十三
+## 《李语录》十三
 
 121.常识与非常
 
@@ -1043,9 +1021,7 @@
 
 “狼来了”的次数喊得太多的结果是：谁也不相信他，他也不相信他。
 
-
-
-##《李语录》十四
+## 《李语录》十四
 
 131.平静与表面平静
 
@@ -1087,9 +1063,7 @@
 
 洗三温暖是屁股享福、脑袋吃苦；看电影是脑袋享福、屁股吃苦；听台湾学者讲演是脑袋屁股都吃苦。
 
-
-
-##《李语录》十五
+## 《李语录》十五
 
 141.赢过别人与输了自己
 
@@ -1131,9 +1105,7 @@
 
 不要因为别人记忆不好就说你的故事新鲜。
 
-
-
-##《李语录》十六
+## 《李语录》十六
 
 151.法律与法官
 
@@ -1175,9 +1147,7 @@
 
 同志扬镳、情人再见、朋友分手、骨肉失散，人生有如此际遇，也是造化。
 
-
-
-##《李语录》十七
+## 《李语录》十七
 
 161.三难养
 
@@ -1219,9 +1189,7 @@
 
 年老的可恶是：不该硬化的却硬化（如肝）；该硬化的却不硬化（如屌）。
 
-
-
-##《李语录》十八
+## 《李语录》十八
 
 171.独裁者与零件
 
@@ -1263,9 +1231,7 @@
 
 沟通时上餐桌的人，就是作战时上厕所的人。
 
-
-
-##《李语录》十九
+## 《李语录》十九
 
 181.隐士与斗士
 
@@ -1307,9 +1273,7 @@
 
 有的人（李敖之流），做他朋友要头疼，不做他朋友要血压高。
 
-
-
-##《李语录》二十
+## 《李语录》二十
 
 191.两用药
 
@@ -1351,9 +1315,7 @@
 
 有时同归于尽，实在胜于白头偕老。
 
-
-
-##《李语录》二一
+## 《李语录》二一
 
 201.新女性定义
 
@@ -1397,9 +1359,7 @@
 
 所有的理发师都恨秃子，所有秃子都恨理发师。
 
-
-
-##《李语录》二二
+## 《李语录》二二
 
 211.读训词如吃屎
 
@@ -1441,9 +1401,7 @@
 
 世界有两种人：一种是信神的人，一种是成神的人。
 
-
-
-##《李语录》二三
+## 《李语录》二三
 
 221.民进党
 
@@ -1485,9 +1443,7 @@
 
 我从不让小人受罪一次，我让他痛苦一生。
 
-
-
-##《李语录》二四
+## 《李语录》二四
 
 231.报仇也别太晚
 
@@ -1529,9 +1485,7 @@
 
 可以相信文化，也可以相信美容，但千万别相信“文化美容”，那是明星的骗术。
 
-
-
-##《李语录》二五
+## 《李语录》二五
 
 241.人生成败三阶段
 
@@ -1585,9 +1539,7 @@
 
 对伪善者的一个劝告：“爱眼前人就好啦，不必爱全人类啦！”
 
-
-
-##《李语录》二六
+## 《李语录》二六
 
 251.跳蚤与臭虫
 
@@ -1633,9 +1585,7 @@
 
 九成真理加上一成味精，就是百分之百的真理了。
 
-
-
-##《李语录》二七
+## 《李语录》二七
 
 261.神话三种
 
@@ -1679,9 +1629,7 @@
 
 好人只消做一点坏事，就被骂；坏人只消做一点好事，就被捧。
 
-
-
-##《李语录》二八
+## 《李语录》二八
 
 271.报纸增张后
 
@@ -1723,9 +1671,7 @@
 
 春不可不叫也！你叫春于先，她才叫床于后。
 
-
-
-##《李语录》二九
+## 《李语录》二九
 
 281.哲学与爱情
 
@@ -1767,9 +1713,7 @@
 
 国民党是必然的邪恶（anecessaryevil）；民进党是邪恶的必然（anevilnecessity）。
 
-
-
-##《李语录》三十
+## 《李语录》三十
 
 291.国民党与民进党
 
@@ -1811,9 +1755,7 @@
 
 有时候，所以爱钱是因钱不够多，所以爱权是因为权力太少，所以被骂是因为自己不够大。
 
-
-
-##《李语录》三一
+## 《李语录》三一
 
 301.老混蛋
 
@@ -1857,9 +1799,7 @@
 
 有两种人从没想到李登辉会当上总统：一种人是所有的别人；一种人是李登辉自己。
 
-
-
-##《李语录》三二
+## 《李语录》三二
 
 311.老年人与历史
 
@@ -1903,9 +1843,7 @@
 
 好人只是广结善缘，真正的好人却不惜广结恶缘。
 
-
-
-##《李语录》三三
+## 《李语录》三三
 
 321.宗教家与性
 
@@ -1949,9 +1887,7 @@
 
 老年的快乐在不再做出成年的错误。
 
-
-
-##《李语录》三四
+## 《李语录》三四
 
 331.历史家与核子弹
 
@@ -1997,9 +1933,7 @@
 
 民主就是由脸蛋红的投票，由脸蛋黑的当选。
 
-
-
-##《李语录》三五
+## 《李语录》三五
 
 341.老学阀与新学阀
 
@@ -2041,9 +1975,7 @@
 
 我喜欢日晷。只要没有阳光，它就把时间不算。
 
-
-
-##《李语录》三六
+## 《李语录》三六
 
 351.检验女人的唯一标准
 
@@ -2085,9 +2017,7 @@
 
 三民主义实在是一种主义上的万国道德会。万国道德会会把人间神袛一网兜收，从释迦摩尼到黄鼠狼，无所不包、全要全信，三民主义之乱七八糟，正是如此。
 
-
-
-##《李语录》三七
+## 《李语录》三七
 
 361.心与屌
 
@@ -2129,9 +2059,7 @@
 
 林希翎说她连共产党都不怕，难道还怕国民党？我则正好相反：——连国民党都不怕，难道还怕共产党？
 
-
-
-##《李语录》三八
+## 《李语录》三八
 
 371.空投三民主义
 
@@ -2144,6 +2072,3 @@
 373.政党与正义
 
 政党中没有正义：正义中也没有政党。
-
-
-
